ajustes blog e header em todas pages

--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -36,118 +36,129 @@
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
         </nav>
-      </header> -->
+      </header>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Cirurgia Ortognática</h2>
-                <p>
-                  É um tratamento indicado para pessoas que têm deformidades
-                  envolvendo os ossos da face e os dentes, visando restabelecer
-                  o equilíbrio anatômico da face. Quando não for possível
-                  resolver o caso somente com o aparelho ortodôntico, uma vez
-                  que o problema está no tamanho dos ossos do esqueleto e não
-                  somente na posição dos dentes, faz-se necessário uma correção
-                  óssea.
-                </p>
-                <p>
-                  As deformidades dos ossos da face podem se originar de
-                  distúrbios de crescimento, síndromes e anomalias específicas,
-                  traumas na face, ou serem de origem genética, dentre outros
-                  fatores. Essas alterações podem estar localizadas num osso,
-                  como no prognatismo mandibular (mandíbula grande) ou no
-                  retrognatismo mandibular (mandíbula pequena), ou muitas vezes
-                  uma combinação dos dois. O paciente deverá realizar uma
-                  documentação ortodôntica completa para que os profissionais
-                  (Cirurgião Buco Maxilo Facial e Ortodontista) analisem as
-                  correções necessárias através de um tratamento
-                  ortodôntico-cirúrgico-ortodôntico. Isto é, inicia-se com a
-                  ortodontia preparando os dentes por período que varia de seis
-                  meses a um ano e meio (primeira etapa), a partir daí
-                  planeja-se a cirurgia ortognática, fazendo uma moldagem de
-                  estudo e confeccionando modelos de gesso e montagem em
-                  articulador; opera-se o paciente e, logo que se recupere, a
-                  ortodontia realizará os últimos ajustes na oclusão.
-                </p>
-                <p>
-                  Antes da cirurgia, o paciente deverá realizar alguns exames
-                  complementares. A cirurgia é realizada em ambiente hospitalar
-                  e sob anestesia geral, envolvendo normalmente dois cirurgiões,
-                  um instrumentador e uma equipe multidisciplinar. A cirurgia é
-                  realizada totalmente por dentro da boca, não deixando cicatriz
-                  na face e, dependendo do porte da cirurgia e recuperação da
-                  anestesia, a alta hospitalar é dada ao paciente na manhã do
-                  dia seguinte. A correção das deformidades faciais através da
-                  cirurgia ortognática traz grandes benefícios aos pacientes
-                  operados, com sensível melhora na relação entre os dentes,
-                  músculos, ossos, respiração, fonação, posição da língua,
-                  articulação temporo-mandibular (ATM), mastigação, digestão e
-                  em muitos casos, no relacionamento social. A Cirurgia
-                  Ortognática moderna busca um equilíbrio das funções
-                  mastigatória, respiratória e da beleza estética.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase" style="display: flex;
-              justify-content: center;
-              align-items: center;">
-                <img
-                  src="./resources/img/Restauração-Dentária-Vila-Olímpia (1).jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Cirurgia Ortognática</h2>
+              <p>
+                É um tratamento indicado para pessoas que têm deformidades
+                envolvendo os ossos da face e os dentes, visando restabelecer o
+                equilíbrio anatômico da face. Quando não for possível resolver o
+                caso somente com o aparelho ortodôntico, uma vez que o problema
+                está no tamanho dos ossos do esqueleto e não somente na posição
+                dos dentes, faz-se necessário uma correção óssea.
+              </p>
+              <p>
+                As deformidades dos ossos da face podem se originar de
+                distúrbios de crescimento, síndromes e anomalias específicas,
+                traumas na face, ou serem de origem genética, dentre outros
+                fatores. Essas alterações podem estar localizadas num osso, como
+                no prognatismo mandibular (mandíbula grande) ou no retrognatismo
+                mandibular (mandíbula pequena), ou muitas vezes uma combinação
+                dos dois. O paciente deverá realizar uma documentação
+                ortodôntica completa para que os profissionais (Cirurgião Buco
+                Maxilo Facial e Ortodontista) analisem as correções necessárias
+                através de um tratamento ortodôntico-cirúrgico-ortodôntico. Isto
+                é, inicia-se com a ortodontia preparando os dentes por período
+                que varia de seis meses a um ano e meio (primeira etapa), a
+                partir daí planeja-se a cirurgia ortognática, fazendo uma
+                moldagem de estudo e confeccionando modelos de gesso e montagem
+                em articulador; opera-se o paciente e, logo que se recupere, a
+                ortodontia realizará os últimos ajustes na oclusão.
+              </p>
+              <p>
+                Antes da cirurgia, o paciente deverá realizar alguns exames
+                complementares. A cirurgia é realizada em ambiente hospitalar e
+                sob anestesia geral, envolvendo normalmente dois cirurgiões, um
+                instrumentador e uma equipe multidisciplinar. A cirurgia é
+                realizada totalmente por dentro da boca, não deixando cicatriz
+                na face e, dependendo do porte da cirurgia e recuperação da
+                anestesia, a alta hospitalar é dada ao paciente na manhã do dia
+                seguinte. A correção das deformidades faciais através da
+                cirurgia ortognática traz grandes benefícios aos pacientes
+                operados, com sensível melhora na relação entre os dentes,
+                músculos, ossos, respiração, fonação, posição da língua,
+                articulação temporo-mandibular (ATM), mastigação, digestão e em
+                muitos casos, no relacionamento social. A Cirurgia Ortognática
+                moderna busca um equilíbrio das funções mastigatória,
+                respiratória e da beleza estética.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div
+              class="img-right-tratamentoBase"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <img
+                src="./resources/img/Restauração-Dentária-Vila-Olímpia (1).jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
