--- a/src/odontologia-pre-natal.html
+++ b/src/odontologia-pre-natal.html
@@ -31,121 +31,144 @@
       rel="stylesheet"
     />
 
-   <!--Carrousel-->
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
         </nav>
-      </header> -->
+      </header>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Odontologia Pré-Natal</h2>
-                <p>
-                  É fato que a saúde começa pela boca, e por saber que a
-                  gravidez provoca uma série de alterações no organismo da
-                  mulher, inclusive na cavidade bucal, é que se justifica a
-                  importância do acompanhamento do dentista durante a gestação.
-                  O pré-natal odontológico traz como principal objetivo cuidar e
-                  educar a gestante para ter um bebê saudável, incluindo ações
-                  como a desmistificar crenças e preocupações sobre a gravidez e
-                  o tratamento dentário, conscientizar sobre os principais
-                  problemas bucais, orientar sobre a importância do controle de
-                  placa, uso do flúor, amamentação, cuidados com o futuro bebê,
-                  bem como a importância da alimentação equilibrada, uma vez que
-                  os dentes necessitam de minerais e começam a se formar a
-                  partir da 6ª semana de gravidez.
-                </p>
-                <p>
-                  Durante a gravidez o cuidado deve ser redobrado, já que a
-                  futura mãe têm grande propensão a desenvolver doenças bucais.
-                  A incidência de gengivite é mais comum do se imagina. Por
-                  conta das modificações fisiológicas no corpo da grávida, pelo
-                  menos 60 a 70% podem apresentar gengivite ao longo dos nove
-                  meses, já que as alterações hormonais facilitam o
-                  desenvolvimento de inflamação. Além disso as mulheres também
-                  vomitam mais nessa fase e a saliva pode acabar ficando mais
-                  ácida, com o pH mais baixo pode criar um ambiente propício
-                  para o desenvolvimento mais rápido de cáries.
-                </p>
-                <p>
-                  É preciso ficar claro que não há nenhuma contraindicação para
-                  anestesia ou radiografia ao longo da gestação. Há, inclusive,
-                  anestésicos próprios para grávidas. No caso das radiografias,
-                  o colete de chumbo deve ser posicionado também na barriga,
-                  para proteger o bebê. Não tratar é mais arriscado do que o
-                  tratamento. Principalmente por que as mulheres com dor, que
-                  evitam o dentista, costumam se automedicar, o que pode levar à
-                  ingestão de um medicamento prejudicial ao feto. E tem mais, as
-                  mães com cáries correm um sério risco de passar as bactérias
-                  causadoras do problema ao bebê, já que a cárie é uma doença
-                  transmissível que pode sair da boca da mãe para a da criança,
-                  principalmente quando ela sopra ou prova a comida antes de dar
-                  para o filho.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase" style="display: flex; justify-content: center; align-items: center;">
-                <img
-                  src="./resources/img/Odontologia-Pré-Natal-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Odontologia Pré-Natal</h2>
+              <p>
+                É fato que a saúde começa pela boca, e por saber que a gravidez
+                provoca uma série de alterações no organismo da mulher,
+                inclusive na cavidade bucal, é que se justifica a importância do
+                acompanhamento do dentista durante a gestação. O pré-natal
+                odontológico traz como principal objetivo cuidar e educar a
+                gestante para ter um bebê saudável, incluindo ações como a
+                desmistificar crenças e preocupações sobre a gravidez e o
+                tratamento dentário, conscientizar sobre os principais problemas
+                bucais, orientar sobre a importância do controle de placa, uso
+                do flúor, amamentação, cuidados com o futuro bebê, bem como a
+                importância da alimentação equilibrada, uma vez que os dentes
+                necessitam de minerais e começam a se formar a partir da 6ª
+                semana de gravidez.
+              </p>
+              <p>
+                Durante a gravidez o cuidado deve ser redobrado, já que a futura
+                mãe têm grande propensão a desenvolver doenças bucais. A
+                incidência de gengivite é mais comum do se imagina. Por conta
+                das modificações fisiológicas no corpo da grávida, pelo menos 60
+                a 70% podem apresentar gengivite ao longo dos nove meses, já que
+                as alterações hormonais facilitam o desenvolvimento de
+                inflamação. Além disso as mulheres também vomitam mais nessa
+                fase e a saliva pode acabar ficando mais ácida, com o pH mais
+                baixo pode criar um ambiente propício para o desenvolvimento
+                mais rápido de cáries.
+              </p>
+              <p>
+                É preciso ficar claro que não há nenhuma contraindicação para
+                anestesia ou radiografia ao longo da gestação. Há, inclusive,
+                anestésicos próprios para grávidas. No caso das radiografias, o
+                colete de chumbo deve ser posicionado também na barriga, para
+                proteger o bebê. Não tratar é mais arriscado do que o
+                tratamento. Principalmente por que as mulheres com dor, que
+                evitam o dentista, costumam se automedicar, o que pode levar à
+                ingestão de um medicamento prejudicial ao feto. E tem mais, as
+                mães com cáries correm um sério risco de passar as bactérias
+                causadoras do problema ao bebê, já que a cárie é uma doença
+                transmissível que pode sair da boca da mãe para a da criança,
+                principalmente quando ela sopra ou prova a comida antes de dar
+                para o filho.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div
+              class="img-right-tratamentoBase"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <img
+                src="./resources/img/Odontologia-Pré-Natal-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
@@ -269,7 +292,7 @@
         </div>
       </footer>
     </main>
-    
+
     <script src="./resources/js/main.js"></script>
 
     <!--API Google-->
@@ -287,6 +310,5 @@
 
     <!--Lógica API Google Depoimentos-->
     <script src="./resources/js/apiGoogle.js"></script>
-
   </body>
 </html>
