--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -36,161 +36,168 @@
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
-        </nav>
-      </header> -->
-
-      <section class="s-tratamento-base">
-        <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Ortodontia</h2>
-                <p>
-                  Hoje em dia há um número crescente de adultos usando aparelhos
-                  ortodônticos, até mesmo celebridades passaram a usá-los,
-                  influenciando a forma de pensar das pessoas. Contudo é preciso
-                  saber que atualmente existem aparelhos que não chamam tanto a
-                  atenção como o metálico o que incentiva um número cada vez
-                  maior de pacientes na adesão ao tratamento.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Ortodontia-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
           </div>
-        <!-- </div> -->
-      </section>
 
-      <section class="s-tratamento-base">
-        <!-- <div class="container"> -->
-          <div class="info-tratamento-base invisalign-left">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Invisalign</h2>
-                <p>
-                  Sucesso no mundo inteiro, os alinhadores Invisalign são
-                  aparelhos ortodônticos transparentes em formato de placas, ou
-                  seja, não possuem braquetes e fios metálicos como nos
-                  aparelhos ortodônticos convencionais. Com um visual discreto,
-                  ao ponto de quase ninguém perceber que você está em
-                  tratamento, por serem praticamente invisíveis. Por ser um
-                  aparelho removível, tem a vantagem de poder remover antes das
-                  refeições e na hora da higienização. Não atrapalham na fala.
-                  Não causam irritação. O tempo de consulta para ativação do
-                  aparelho é reduzido em relação ao aparelho convencional.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Invisalign-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
-            </div>
-          </div>
-        <!-- </div> -->
-      </section>
-
-      <section class="s-tratamento-base">
-        <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Aparelhos Auto-Ligados</h2>
-                <p>
-                  É uma evolução do aparelho convencional, com algumas
-                  vantagens:
-                </p>
-                <ul>
-                  <li>Mais higiênico, acumula menos placa bacteriana;</li>
-                  <li>minimiza a necessidade de extrações dentárias;</li>
-                  <li>
-                    material de alta tecnologia, a força é ativada pela
-                    temperatura da boca;
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
-                  <li>
-                    as manutenções são feitas a cada 2 meses, sem prolongar o
-                    tempo do tratamento;
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
                   </li>
-                  <li>
-                    correção mais rápida quando comparado aos aparelhos fixos
-                    convencionais;
-                  </li>
-                  <li>diminuição da dor durante o tratamento;</li>
-                  <li>diminuição do número de visitas ao dentista;</li>
-                  <li>
-                    redução significativa da força exigida para movimentação
-                    dentária.
-                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Aparelhos-Auto-Ligados-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Ortodontia</h2>
+              <p>
+                Hoje em dia há um número crescente de adultos usando aparelhos
+                ortodônticos, até mesmo celebridades passaram a usá-los,
+                influenciando a forma de pensar das pessoas. Contudo é preciso
+                saber que atualmente existem aparelhos que não chamam tanto a
+                atenção como o metálico o que incentiva um número cada vez maior
+                de pacientes na adesão ao tratamento.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Ortodontia-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base invisalign-left">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Invisalign</h2>
+              <p>
+                Sucesso no mundo inteiro, os alinhadores Invisalign são
+                aparelhos ortodônticos transparentes em formato de placas, ou
+                seja, não possuem braquetes e fios metálicos como nos aparelhos
+                ortodônticos convencionais. Com um visual discreto, ao ponto de
+                quase ninguém perceber que você está em tratamento, por serem
+                praticamente invisíveis. Por ser um aparelho removível, tem a
+                vantagem de poder remover antes das refeições e na hora da
+                higienização. Não atrapalham na fala. Não causam irritação. O
+                tempo de consulta para ativação do aparelho é reduzido em
+                relação ao aparelho convencional.
+              </p>
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Invisalign-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Aparelhos Auto-Ligados</h2>
+              <p>
+                É uma evolução do aparelho convencional, com algumas vantagens:
+              </p>
+              <ul>
+                <li>Mais higiênico, acumula menos placa bacteriana;</li>
+                <li>minimiza a necessidade de extrações dentárias;</li>
+                <li>
+                  material de alta tecnologia, a força é ativada pela
+                  temperatura da boca;
+                </li>
+                <li>
+                  as manutenções são feitas a cada 2 meses, sem prolongar o
+                  tempo do tratamento;
+                </li>
+                <li>
+                  correção mais rápida quando comparado aos aparelhos fixos
+                  convencionais;
+                </li>
+                <li>diminuição da dor durante o tratamento;</li>
+                <li>diminuição do número de visitas ao dentista;</li>
+                <li>
+                  redução significativa da força exigida para movimentação
+                  dentária.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Aparelhos-Auto-Ligados-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
