--- a/src/page1.html
+++ b/src/page1.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,57 +106,90 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>COVID-19: A Importância da saúde bucal no fortalecimento da imunidade</h3>
+                <h3>
+                  COVID-19: A Importância da saúde bucal no fortalecimento da
+                  imunidade
+                </h3>
                 <p>06/07/2020</p>
-                <img src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png" alt="">
-                <p class="text-news-left">Nos últimos meses, com a chegada do coronavírus, ficou ainda mais evidente a importância de manter hábitos de higiene para se proteger de doenças. Entretanto, a higiene bucal também deve ser reforçada, pois a boca é uma das principais vias de contaminação.</p>
+                <img
+                  src="./resources/img/A-importância-da-saúde-bucal-no-fortalecimento-da-imunidade-.png"
+                  alt=""
+                />
+                <p class="text-news-left">
+                  Nos últimos meses, com a chegada do coronavírus, ficou ainda
+                  mais evidente a importância de manter hábitos de higiene para
+                  se proteger de doenças. Entretanto, a higiene bucal também
+                  deve ser reforçada, pois a boca é uma das principais vias de
+                  contaminação.
+                </p>
 
-                <p>Manter a saúde bucal adequada, contribui no aumento da resistência ao vírus, evitando o crescimento dos microorganismos da boca, que podem se espalhar pelo corpo levando a baixa imunidade.</p>
+                <p>
+                  Manter a saúde bucal adequada, contribui no aumento da
+                  resistência ao vírus, evitando o crescimento dos
+                  microorganismos da boca, que podem se espalhar pelo corpo
+                  levando a baixa imunidade.
+                </p>
 
-                <p>A boa higiene das mãos também é fundamental no processo dos cuidados orais, uma vez que são utilizadas diretamente na limpeza bucal, como no uso de fio dental, higienizador de língua e da escova de dente.</p>
+                <p>
+                  A boa higiene das mãos também é fundamental no processo dos
+                  cuidados orais, uma vez que são utilizadas diretamente na
+                  limpeza bucal, como no uso de fio dental, higienizador de
+                  língua e da escova de dente.
+                </p>
 
-                <p>É de grande importância que essa higienização abranja todos os dentes e áreas como a língua, bochechas e principalmente os dentes molares, que ficam mais próximo da faringe, que quando contaminada por algum vírus ou bactéria, se tornam um grande canal de problemas de saúde.</p>
+                <p>
+                  É de grande importância que essa higienização abranja todos os
+                  dentes e áreas como a língua, bochechas e principalmente os
+                  dentes molares, que ficam mais próximo da faringe, que quando
+                  contaminada por algum vírus ou bactéria, se tornam um grande
+                  canal de problemas de saúde.
+                </p>
 
-                <strong>Dicas para manter a saúde bucal e fortalecer a imunidade</strong>
+                <strong
+                  >Dicas para manter a saúde bucal e fortalecer a
+                  imunidade</strong
+                >
 
                 <div class="list-itens-news-page">
-                  <p>Para te ajudar a manter uma boa saúde bucal, fortalecendo ainda mais sua imunidade, separamos algumas dicas que podem ajudar nesse processo:</p>
+                  <p>
+                    Para te ajudar a manter uma boa saúde bucal, fortalecendo
+                    ainda mais sua imunidade, separamos algumas dicas que podem
+                    ajudar nesse processo:
+                  </p>
                   <ul>
+                    <li>Escovar os dentes após cada refeição;</li>
                     <li>
-                      Escovar os dentes após cada refeição;
+                      Trocar a escova dental a cada três meses, devendo
+                      substituir sempre que estiver se recuperando de infecções;
                     </li>
+                    <li>Usar fio dental e enxaguante bucal todos os dias;</li>
                     <li>
-                      Trocar a escova dental a cada três meses, devendo substituir sempre que estiver se recuperando de infecções;
+                      Cuidar da alimentação e evitar o consumo excessivo de
+                      açucares;
                     </li>
-                    <li>
-                      Usar fio dental e enxaguante bucal todos os dias;
-                    </li>
-                    <li>
-                      Cuidar da alimentação e evitar o consumo excessivo de açucares;
-                    </li>
-                    <li>
-                      Higienizar a língua e bochechas adequadamente;
-                    </li>
-                    <li>
-                      Visitar o dentista pelo menos a cada seis meses.
-                    </li>
+                    <li>Higienizar a língua e bochechas adequadamente;</li>
+                    <li>Visitar o dentista pelo menos a cada seis meses.</li>
                   </ul>
                 </div>
                 <p>
-                  Hábitos de higiene bucal como esses devem ser mantidos e valorizados por toda vida, e não apenas durante a pandemia do COVID-19, pois além de ajudar a manter nosso sistema imunológico mais forte, a saúde bucal contribui diretamente na nossa qualidade de vida.
+                  Hábitos de higiene bucal como esses devem ser mantidos e
+                  valorizados por toda vida, e não apenas durante a pandemia do
+                  COVID-19, pois além de ajudar a manter nosso sistema
+                  imunológico mais forte, a saúde bucal contribui diretamente na
+                  nossa qualidade de vida.
                 </p>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -154,29 +197,43 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Previous post:Dente do siso: mitos e verdades</a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Previous post:Dente do siso: mitos e verdades</a
+            >
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
