--- a/src/page10.html
+++ b/src/page10.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,18 +108,44 @@
               <div class="news-left first-news-page">
                 <h3>Guia básico de saúde bucal : dicas para toda família</h3>
                 <p>01/10/2019</p>
-                <img src="./resources/img/Guia-Básico-da-Saúde-Bucal (1).jpg" alt="">
-                <p class="text-news-left"> <strong>Pequenos cuidados do dia a dia fazem a diferença no sorriso</strong> </p>
+                <img
+                  src="./resources/img/Guia-Básico-da-Saúde-Bucal (1).jpg"
+                  alt=""
+                />
+                <p class="text-news-left">
+                  <strong
+                    >Pequenos cuidados do dia a dia fazem a diferença no
+                    sorriso</strong
+                  >
+                </p>
 
-                <p>Quantas vezes ao dia você escova os dentes? E o fio dental, você usa com qual frequência? Qual foi a última vez que você trocou sua escova dental? Você tem escovado os dentes de forma correta? Como vai a saúde bucal da família?</p>
+                <p>
+                  Quantas vezes ao dia você escova os dentes? E o fio dental,
+                  você usa com qual frequência? Qual foi a última vez que você
+                  trocou sua escova dental? Você tem escovado os dentes de forma
+                  correta? Como vai a saúde bucal da família?
+                </p>
 
-                <p>Os números do IBGE sobre saúde bucal são alarmantes: mais de 11% da população brasileira nunca visitou um dentista, entre eles 2,5 milhões de adolescentes. Além disso, mais de 8 milhões de brasileiros com mais de 30 anos já usam prótese e 3 a cada 4 idosos não possuem nenhum dente.</p>
+                <p>
+                  Os números do IBGE sobre saúde bucal são alarmantes: mais de
+                  11% da população brasileira nunca visitou um dentista, entre
+                  eles 2,5 milhões de adolescentes. Além disso, mais de 8
+                  milhões de brasileiros com mais de 30 anos já usam prótese e 3
+                  a cada 4 idosos não possuem nenhum dente.
+                </p>
 
-                <p>Com o objetivo de ajudar toda família a tratar da saúde bucal com prioridade,  a A Clínica Oral separou dicas básicas de cuidados. Os mandamentos básicos são:</p>
+                <p>
+                  Com o objetivo de ajudar toda família a tratar da saúde bucal
+                  com prioridade, a A Clínica Oral separou dicas básicas de
+                  cuidados. Os mandamentos básicos são:
+                </p>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      <p>1. Pratique a escovação no mínimo três vezes ao dia, principalmente após as refeições.</p>
+                      <p>
+                        1. Pratique a escovação no mínimo três vezes ao dia,
+                        principalmente após as refeições.
+                      </p>
                     </li>
                     <li>
                       <p>2. Use o fio dental diariamente.</p>
@@ -126,28 +162,71 @@
                   <ul>
                     <li>
                       <strong>1. Escovação correta</strong>
-                      <p>Tão importante quanto a frequência, a escovação correta é simples. Com a escova limpa e a pasta na quantidade de um grão de arroz, encoste as cerdas da escova na região entre a gengiva e os dentes. Com movimentos circulares ou verticais, da gengiva para fora, repita o movimento em média dez vezes para cada 2 dentes. Esse procedimento deve ser feito na parte externa e interna dos dentes. Já para limpar a parte de cima, deve-se fazer um movimento de vai-e-vem. Por fim, não esqueça de escovar a língua.</p>
+                      <p>
+                        Tão importante quanto a frequência, a escovação correta
+                        é simples. Com a escova limpa e a pasta na quantidade de
+                        um grão de arroz, encoste as cerdas da escova na região
+                        entre a gengiva e os dentes. Com movimentos circulares
+                        ou verticais, da gengiva para fora, repita o movimento
+                        em média dez vezes para cada 2 dentes. Esse procedimento
+                        deve ser feito na parte externa e interna dos dentes. Já
+                        para limpar a parte de cima, deve-se fazer um movimento
+                        de vai-e-vem. Por fim, não esqueça de escovar a língua.
+                      </p>
                     </li>
                     <li>
                       <strong>2. Fio dental</strong>
-                      <p>Parece difícil, mas não é. Para usar o fio dental corte um pedaço de 30 a 40 cm e enrole na ponta dos dedos médios. Posicione o fio dental firmemente contra cada dente e mova suavemente para cima e para baixo contra as paredes laterais dos dentes. Esse processo deve ser feito pelo menos uma vez ao dia.</p>
+                      <p>
+                        Parece difícil, mas não é. Para usar o fio dental corte
+                        um pedaço de 30 a 40 cm e enrole na ponta dos dedos
+                        médios. Posicione o fio dental firmemente contra cada
+                        dente e mova suavemente para cima e para baixo contra as
+                        paredes laterais dos dentes. Esse processo deve ser
+                        feito pelo menos uma vez ao dia.
+                      </p>
                     </li>
                     <li>
                       <strong>3. Nutrição</strong>
-                      <p>A atenção redobrada com a alimentação também impacta na saúde bucal, pois alimentos ricos em açúcares, como refrigerantes, balas, bolos, biscoitos e chocolates podem contribuir com a cárie dentária. Opte pela ingestão de uma dieta balanceada com frutas, proteína, derivados de leite e grãos integrais.</p>
+                      <p>
+                        A atenção redobrada com a alimentação também impacta na
+                        saúde bucal, pois alimentos ricos em açúcares, como
+                        refrigerantes, balas, bolos, biscoitos e chocolates
+                        podem contribuir com a cárie dentária. Opte pela
+                        ingestão de uma dieta balanceada com frutas, proteína,
+                        derivados de leite e grãos integrais.
+                      </p>
                     </li>
                     <li>
                       <strong>4. Atenção aos sinais</strong>
-                      <p>Dores, halitose, sensibilidade e sangramentos não devem ser encarados com normalidade e sim como indícios de problemas bucais. Diante de qualquer anormalidade, agende uma consulta com o dentista, pois qualquer doença bucal é mais fácil de ser tratada quando diagnosticada no início.</p>
+                      <p>
+                        Dores, halitose, sensibilidade e sangramentos não devem
+                        ser encarados com normalidade e sim como indícios de
+                        problemas bucais. Diante de qualquer anormalidade,
+                        agende uma consulta com o dentista, pois qualquer doença
+                        bucal é mais fácil de ser tratada quando diagnosticada
+                        no início.
+                      </p>
                     </li>
                     <li>
                       <strong>5. Limpeza periódica</strong>
-                      <p>Mesmo que você seja um ótimo paciente na prática da higiene bucal e alimente-se de forma correta, a profilaxia realizada no consultório é indispensável, já que ela é mais completa do que a realizada diariamente com a escova, creme e fio dental. A limpeza realizada no consultório pelo dentista higieniza dente a dente e a parte mais profunda da gengiva. A frequência recomendada é semestral.</p>
+                      <p>
+                        Mesmo que você seja um ótimo paciente na prática da
+                        higiene bucal e alimente-se de forma correta, a
+                        profilaxia realizada no consultório é indispensável, já
+                        que ela é mais completa do que a realizada diariamente
+                        com a escova, creme e fio dental. A limpeza realizada no
+                        consultório pelo dentista higieniza dente a dente e a
+                        parte mais profunda da gengiva. A frequência recomendada
+                        é semestral.
+                      </p>
                     </li>
                   </ul>
                 </div>
 
-                <p>Pequenas práticas diárias podem te garantir um sorriso bonito e cheio de saúde.</p>
+                <p>
+                  Pequenas práticas diárias podem te garantir um sorriso bonito
+                  e cheio de saúde.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -156,17 +235,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -174,26 +253,46 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Próteses protocolo e implantes: da saúde ao resgate da autoestima</a>
-            <a href=""> Next: 5 motivos para trocar os braquetes pelos alinhadores<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Próteses protocolo e implantes: da saúde ao resgate da
+              autoestima</a
+            >
+            <a href="">
+              Next: 5 motivos para trocar os braquetes pelos alinhadores<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
