--- a/src/page14.html
+++ b/src/page14.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,50 +109,74 @@
                 <h3>10 cuidados com a saúde bucal na terceira idade</h3>
                 <p>03/12/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Com o passar dos anos, alguns cuidados com a saúde devem ser intensificados, em especial com a saúde bucal. Na terceira idade, redobrar a atenção com a higiene bucal, alimentação e intensificar as visitas ao dentista garante qualidade de vida e bem-estar.</p>
+                <p class="text-news-left">
+                  Com o passar dos anos, alguns cuidados com a saúde devem ser
+                  intensificados, em especial com a saúde bucal. Na terceira
+                  idade, redobrar a atenção com a higiene bucal, alimentação e
+                  intensificar as visitas ao dentista garante qualidade de vida
+                  e bem-estar.
+                </p>
 
-                <p>De acordo com a Organização Mundial da Saúde (OMS), o número de pessoas com idade superior a 60 anos chegará a 2 bilhões até 2050, o que representa um quinto da população mundial.</p>
+                <p>
+                  De acordo com a Organização Mundial da Saúde (OMS), o número
+                  de pessoas com idade superior a 60 anos chegará a 2 bilhões
+                  até 2050, o que representa um quinto da população mundial.
+                </p>
 
-                <p>Na terceira idade, o organismo passa por uma série de alterações que refletem desde a baixa imunidade até a redução de produção de saliva. Por este motivo, os idosos estão mais suscetíveis a desenvolver problemas bucais, como a periodontite, gengivite, cárie, mau hálito, sensibilidade e boca seca.</p>
+                <p>
+                  Na terceira idade, o organismo passa por uma série de
+                  alterações que refletem desde a baixa imunidade até a redução
+                  de produção de saliva. Por este motivo, os idosos estão mais
+                  suscetíveis a desenvolver problemas bucais, como a
+                  periodontite, gengivite, cárie, mau hálito, sensibilidade e
+                  boca seca.
+                </p>
 
-                <p>Além do fator fisiológico, o  consumo de medicamentos necessários após os 60 anos contribui para o aparecimento das doenças bucais. Diante do significativo envelhecimento da população, a Clínica Oral discorre sobre alguns alertas importantes no que diz respeito à saúde bucal da terceira idade. Veja:</p>
+                <p>
+                  Além do fator fisiológico, o consumo de medicamentos
+                  necessários após os 60 anos contribui para o aparecimento das
+                  doenças bucais. Diante do significativo envelhecimento da
+                  população, a Clínica Oral discorre sobre alguns alertas
+                  importantes no que diz respeito à saúde bucal da terceira
+                  idade. Veja:
+                </p>
 
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Consultas semestrais ao dentista são indispensáveis para prevenir doenças periodontais, cáries, perda dos dentes e infecções;
+                      Consultas semestrais ao dentista são indispensáveis para
+                      prevenir doenças periodontais, cáries, perda dos dentes e
+                      infecções;
                     </li>
                     <li>
-                      Aumente a ingestão de água para estimular a produção de saliva;
+                      Aumente a ingestão de água para estimular a produção de
+                      saliva;
                     </li>
                     <li>
-                      Redobre atenção com a alimentação. Evite o consumo de açúcar e dê preferência à ingestão de fibras, frutas e legumes;
+                      Redobre atenção com a alimentação. Evite o consumo de
+                      açúcar e dê preferência à ingestão de fibras, frutas e
+                      legumes;
                     </li>
+                    <li>Faça escovação três vezes ao dia;</li>
                     <li>
-                      Faça escovação três vezes ao dia;
+                      Escove os dentes com a “mão leve” para não desgastá-los e
+                      machucar a gengiva;
                     </li>
+                    <li>Opte por escovas macias;</li>
+                    <li>Escolha cremes dentais com flúor;</li>
+                    <li>Passe o fio dental diariamente;</li>
                     <li>
-                      Escove os dentes com a “mão leve” para não desgastá-los e machucar a gengiva;
+                      Faça a higienização das próteses fora da boca com a pasta
+                      indicada pelo dentista;
                     </li>
-                    <li>
-                      Opte por escovas macias;
-                    </li>
-                    <li>
-                      Escolha cremes dentais com flúor;
-                    </li>
-                    <li>
-                      Passe o fio dental diariamente;
-                    </li>
-                    <li>
-                      Faça a higienização das próteses fora da boca com a pasta indicada pelo dentista;
-                    </li>
-                    <li>
-                      Não faça uso de tabaco.
-                    </li>
+                    <li>Não faça uso de tabaco.</li>
                   </ul>
                 </div>
 
-                <p>O clichê “a saúde começa pela boca” é real e deve ser levado a sério. Pense nisso!</p>
+                <p>
+                  O clichê “a saúde começa pela boca” é real e deve ser levado a
+                  sério. Pense nisso!
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -150,17 +184,17 @@
                   <a href="">Terceira Idade</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -168,26 +202,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 6 motivos para fazer o check-up odontológico</a>
-            <a href=""> Next: Bruxismo: combata o problema!<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 6
+              motivos para fazer o check-up odontológico</a
+            >
+            <a href="">
+              Next: Bruxismo: combata o problema!<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
