--- a/src/page15.html
+++ b/src/page15.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,15 +109,34 @@
                 <h3>6 motivos para fazer o check-up odontológico</h3>
                 <p>04/09/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Não é à toa que dizem que o sorriso é a curva mais bonita do corpo de qualquer pessoa, afinal, um singelo sorriso tem o poder de combater a ansiedade, depressão e estresse, diminuir a pressão arterial, desintoxicar o organismo e deixar a pele mais vistosa e bonita.</p>
+                <p class="text-news-left">
+                  Não é à toa que dizem que o sorriso é a curva mais bonita do
+                  corpo de qualquer pessoa, afinal, um singelo sorriso tem o
+                  poder de combater a ansiedade, depressão e estresse, diminuir
+                  a pressão arterial, desintoxicar o organismo e deixar a pele
+                  mais vistosa e bonita.
+                </p>
 
-                <p>Outros tantos dizem que este é nosso cartão de visitas incomparável, mas o mais importante a ser dito é que a saúde começa pela boca. Por este motivo, convidamos a Dra. Fernanda Natrielli para listar 5 motivos para fazer o ckeck-up odontológico. Confira:</p>
+                <p>
+                  Outros tantos dizem que este é nosso cartão de visitas
+                  incomparável, mas o mais importante a ser dito é que a saúde
+                  começa pela boca. Por este motivo, convidamos a Dra. Fernanda
+                  Natrielli para listar 5 motivos para fazer o ckeck-up
+                  odontológico. Confira:
+                </p>
 
                 <strong>Diagnósticos precoces</strong>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Por mais que sua escovação e alimentação sejam de dar inveja em qualquer um, a ida ao dentista é indispensável para diagnosticar problema de cárie, infiltrações, fraturas, inflamação gengival e problemas de origem periodontal precocemente para prevenir a instalação da doença. Se sua saúde bucal estiver em dia, o dentista fará a limpeza mais profunda com aplicação de flúor para prevenir que problemas apareçam futuramente.
+                      Por mais que sua escovação e alimentação sejam de dar
+                      inveja em qualquer um, a ida ao dentista é indispensável
+                      para diagnosticar problema de cárie, infiltrações,
+                      fraturas, inflamação gengival e problemas de origem
+                      periodontal precocemente para prevenir a instalação da
+                      doença. Se sua saúde bucal estiver em dia, o dentista fará
+                      a limpeza mais profunda com aplicação de flúor para
+                      prevenir que problemas apareçam futuramente.
                     </li>
                   </ul>
                 </div>
@@ -116,7 +145,11 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      De uma forma geral, o ideal é que tanto adultos quanto crianças retornem para uma consulta preventiva a cada seis meses. Em casos de pacientes com alto risco de cáries ou com problemas gengivais severos o tempo recomendado para os retornos é a cada 3 ou 4 meses.
+                      De uma forma geral, o ideal é que tanto adultos quanto
+                      crianças retornem para uma consulta preventiva a cada seis
+                      meses. Em casos de pacientes com alto risco de cáries ou
+                      com problemas gengivais severos o tempo recomendado para
+                      os retornos é a cada 3 ou 4 meses.
                     </li>
                   </ul>
                 </div>
@@ -125,7 +158,9 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Sentir dor não é legal e ninguém gosta, portanto, o ideal é fazer a prevenção no tempo certo e erradicar as chances de ter cáries e doenças periodontais em estágio avançado.
+                      Sentir dor não é legal e ninguém gosta, portanto, o ideal
+                      é fazer a prevenção no tempo certo e erradicar as chances
+                      de ter cáries e doenças periodontais em estágio avançado.
                     </li>
                   </ul>
                 </div>
@@ -134,7 +169,9 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Pacientes que fazem o check-up odontológico dentro do tempo correto, normalmente apresentam apenas tártaros e manchas nos dentes, que é possível resolver com a limpeza.
+                      Pacientes que fazem o check-up odontológico dentro do
+                      tempo correto, normalmente apresentam apenas tártaros e
+                      manchas nos dentes, que é possível resolver com a limpeza.
                     </li>
                   </ul>
                 </div>
@@ -143,16 +180,28 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Assim como ir ao dentista regularmente é muito importante ter atenção com os dentes no dia a dia também é importante, por isso capriche na higienização orientada pelo dentista no consultório e não esqueça de utilizar creme dental com flúor e fio dental.
+                      Assim como ir ao dentista regularmente é muito importante
+                      ter atenção com os dentes no dia a dia também é
+                      importante, por isso capriche na higienização orientada
+                      pelo dentista no consultório e não esqueça de utilizar
+                      creme dental com flúor e fio dental.
                     </li>
                   </ul>
                 </div>
 
-                <strong>A limpeza do consultório é mais completa que a escovação do dia a dia</strong>
+                <strong
+                  >A limpeza do consultório é mais completa que a escovação do
+                  dia a dia</strong
+                >
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      A limpeza realizada pelo dentista na clínica é feita com ultrassom, que tem a capacidade de quebrar as placas de tártaro, deixando os dentes lisos e limpos. Além disso, no processo de profilaxia no consultório é utilizada a pasta profilática, que remove as manchas superficiais dos dentes.
+                      A limpeza realizada pelo dentista na clínica é feita com
+                      ultrassom, que tem a capacidade de quebrar as placas de
+                      tártaro, deixando os dentes lisos e limpos. Além disso, no
+                      processo de profilaxia no consultório é utilizada a pasta
+                      profilática, que remove as manchas superficiais dos
+                      dentes.
                     </li>
                   </ul>
                 </div>
@@ -169,17 +218,17 @@
                   <a href="">Prevenção</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -187,26 +236,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 6 mitos e verdades sobre cáries</a>
-            <a href=""> Next: 10 cuidados com a saúde bucal na terceira idade<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 6
+              mitos e verdades sobre cáries</a
+            >
+            <a href="">
+              Next: 10 cuidados com a saúde bucal na terceira idade<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
