--- a/src/page16.html
+++ b/src/page16.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,19 +109,45 @@
                 <h3>6 mitos e verdades sobre cáries</h3>
                 <p>28/08/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Você sabia que, de acordo com um levantamento nacional do Ministério a Saúde, em 2010, cerca de 44% das crianças de 12 anos estavam livres das cáries? A notícia é ótima, mas não podemos relaxar na prevenção e combate do problema bucal mais comum entre adultos e crianças.</p>
+                <p class="text-news-left">
+                  Você sabia que, de acordo com um levantamento nacional do
+                  Ministério a Saúde, em 2010, cerca de 44% das crianças de 12
+                  anos estavam livres das cáries? A notícia é ótima, mas não
+                  podemos relaxar na prevenção e combate do problema bucal mais
+                  comum entre adultos e crianças.
+                </p>
 
-                <p>Como quem não quer nada, o resto de alimento acumula entre os dentes dando início a um buraquinho que, depois de dias sem ser notado, chama atenção pela dor. Apesar de parecer inofensiva e ser facilmente tratada, a cárie pode ser o início de problemas bucais mais graves, por isso não pode ser ignorada.</p>
+                <p>
+                  Como quem não quer nada, o resto de alimento acumula entre os
+                  dentes dando início a um buraquinho que, depois de dias sem
+                  ser notado, chama atenção pela dor. Apesar de parecer
+                  inofensiva e ser facilmente tratada, a cárie pode ser o início
+                  de problemas bucais mais graves, por isso não pode ser
+                  ignorada.
+                </p>
 
-                <p>Para te ajudar na prevenção desse problema, separamos 6 mitos e verdades sobre a cárie. Veja:</p>
+                <p>
+                  Para te ajudar na prevenção desse problema, separamos 6 mitos
+                  e verdades sobre a cárie. Veja:
+                </p>
 
                 <strong>Apenas crianças têm cáries</strong>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
                       <strong>Mito: </strong>
-                      Tanto adultos quanto crianças podem desenvolver a doença bucal. Porém, as cáries aparecem com mais frequência nas crianças porque elas costumam ter uma dieta mais rica em açúcares e menor coordenação motora, o que dificulta a higienização correta.
-                      <p>O ideal é que, ao nascer os primeiros dentes, a criança inicie a limpeza com uma escova macia. O mais importante é que os adultos incentivem o hábito de higiene bucal desde cedo para que a criança desenvolva coordenação motora para escovar e passar o fio sozinha.</p>
+                      Tanto adultos quanto crianças podem desenvolver a doença
+                      bucal. Porém, as cáries aparecem com mais frequência nas
+                      crianças porque elas costumam ter uma dieta mais rica em
+                      açúcares e menor coordenação motora, o que dificulta a
+                      higienização correta.
+                      <p>
+                        O ideal é que, ao nascer os primeiros dentes, a criança
+                        inicie a limpeza com uma escova macia. O mais importante
+                        é que os adultos incentivem o hábito de higiene bucal
+                        desde cedo para que a criança desenvolva coordenação
+                        motora para escovar e passar o fio sozinha.
+                      </p>
                     </li>
                   </ul>
                 </div>
@@ -121,29 +157,51 @@
                   <ul>
                     <li>
                       <strong>Verdade: </strong>
-                      Quando não diagnosticada e tratada corretamente, a cárie pode causar uma infecção no osso, que facilita o acesso de bactérias bucais na corrente sanguínea, gerando então problemas cardíacos, pneumonias e outras complicações de saúde.
-                      <p>Quando não diagnosticada e tratada corretamente, a cárie pode evoluir e gerar uma infecção endodôntica (canal) ou até mesmo periodontal (gengiva) e as bactérias presentes podem atingir a corrente sanguínea gerando problemas sistêmicos mais graves.</p>
+                      Quando não diagnosticada e tratada corretamente, a cárie
+                      pode causar uma infecção no osso, que facilita o acesso de
+                      bactérias bucais na corrente sanguínea, gerando então
+                      problemas cardíacos, pneumonias e outras complicações de
+                      saúde.
+                      <p>
+                        Quando não diagnosticada e tratada corretamente, a cárie
+                        pode evoluir e gerar uma infecção endodôntica (canal) ou
+                        até mesmo periodontal (gengiva) e as bactérias presentes
+                        podem atingir a corrente sanguínea gerando problemas
+                        sistêmicos mais graves.
+                      </p>
                     </li>
                   </ul>
                 </div>
 
-                
                 <strong>Cáries não são transmissíveis</strong>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
                       <strong>Mito: </strong>
-                      A bactéria que dá origem à cárie pode ser transmitida facilmente pelo beijo na boca, pelo compartilhamento de talheres ou até mesmo quando um adulto assopra a comida da criança. Portanto, atenção!
+                      A bactéria que dá origem à cárie pode ser transmitida
+                      facilmente pelo beijo na boca, pelo compartilhamento de
+                      talheres ou até mesmo quando um adulto assopra a comida da
+                      criança. Portanto, atenção!
                     </li>
                   </ul>
                 </div>
 
-                <strong>Alimentação impacta diretamente no aparecimento das cáries</strong>
+                <strong
+                  >Alimentação impacta diretamente no aparecimento das
+                  cáries</strong
+                >
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
                       <strong>Verdade: </strong>
-                      Os grandes vilões da saúde bucal são os carboidratos e a sacarose (açúcar). Alimentos como arroz branco, macarrão, pão, batata, refrigerantes, águas aromatizadas, sucos e bebidas com açúcar devem ser evitados, pois aumentam a acidez bucal e tornam o ambiente mais propício para proliferação de bactérias. As balas e doces, geralmente, aderem aos dentes, o que dificulta a higienização e resulta na cárie.
+                      Os grandes vilões da saúde bucal são os carboidratos e a
+                      sacarose (açúcar). Alimentos como arroz branco, macarrão,
+                      pão, batata, refrigerantes, águas aromatizadas, sucos e
+                      bebidas com açúcar devem ser evitados, pois aumentam a
+                      acidez bucal e tornam o ambiente mais propício para
+                      proliferação de bactérias. As balas e doces, geralmente,
+                      aderem aos dentes, o que dificulta a higienização e
+                      resulta na cárie.
                     </li>
                   </ul>
                 </div>
@@ -153,7 +211,9 @@
                   <ul>
                     <li>
                       <strong>Mito: </strong>
-                      A cárie, dependendo do estágio de desenvolvimento, pode provocar o escurecimento dos dentes, buraco, dor, perda do dente e consequentemente alteração na mordida.
+                      A cárie, dependendo do estágio de desenvolvimento, pode
+                      provocar o escurecimento dos dentes, buraco, dor, perda do
+                      dente e consequentemente alteração na mordida.
                     </li>
                   </ul>
                 </div>
@@ -163,11 +223,18 @@
                   <ul>
                     <li>
                       <strong>Verdade: </strong>
-                      Além de frequentar o dentista periodicamente, a atenção com a alimentação é muito relevante na prevenção da cárie, portanto diminua a frequência dos lanches entre as principais refeições e consuma menos açúcares, dê preferência para alimentos saudáveis e fibrosos, como frutas e vegetais crus. Além disso, redobre a atenção com a rotina de escovação e uso do fio dental, principalmente à noite.
+                      Além de frequentar o dentista periodicamente, a atenção
+                      com a alimentação é muito relevante na prevenção da cárie,
+                      portanto diminua a frequência dos lanches entre as
+                      principais refeições e consuma menos açúcares, dê
+                      preferência para alimentos saudáveis e fibrosos, como
+                      frutas e vegetais crus. Além disso, redobre a atenção com
+                      a rotina de escovação e uso do fio dental, principalmente
+                      à noite.
                     </li>
                   </ul>
                 </div>
-               
+
                 <p>*Contribuiu para o artigo Dra. Caroline Abahit</p>
 
                 <div class="divisao-tags-page">
@@ -179,17 +246,17 @@
                   <a href="">Odontologia</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -197,26 +264,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Qualquer paciente pode realizar o clareamento dental?</a>
-            <a href=""> Next: 6 motivos para fazer o check-up odontológico<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Qualquer paciente pode realizar o clareamento dental?</a
+            >
+            <a href="">
+              Next: 6 motivos para fazer o check-up odontológico<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
