--- a/src/page21.html
+++ b/src/page21.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,11 +109,46 @@
                 <h3>A questão é cultural</h3>
                 <p>08/01/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Hoje 20% dos dentistas do mundo estão no Brasil. Temos mais dentistas do que os EUA e o Canadá juntos. Isso deveria caracterizar o país com o maior índice de saúde bucal do mundo porém infelizmente esse não é nosso caso. 57% dos dentistas brasileiros, que hoje são mais de 250 mil, estão na região Sudeste. Muitas pessoas do Nordeste e Norte do país possuem um acesso limitado a esse tipo de serviço.  Porém, ainda grande parte do problema é que 55% da população não tem hábito de ir ao dentista. É nisso que precisamos trabalhar, nessa conscientização. Porque dente é saúde, e saúde começa pela boca. As pessoas precisam ir ao dentista não só quando possuem algum problema ou quando estão com dor. A prevenção é o melhor caminho. E é uma questão cultural a ser trabalhada. Apesar de já sentirmos uma evolução muito grande (o cenário de 20 anos atrás era muito pior), ainda estamos muito atrasados no quesito saúde bucal.</p>
+                <p class="text-news-left">
+                  Hoje 20% dos dentistas do mundo estão no Brasil. Temos mais
+                  dentistas do que os EUA e o Canadá juntos. Isso deveria
+                  caracterizar o país com o maior índice de saúde bucal do mundo
+                  porém infelizmente esse não é nosso caso. 57% dos dentistas
+                  brasileiros, que hoje são mais de 250 mil, estão na região
+                  Sudeste. Muitas pessoas do Nordeste e Norte do país possuem um
+                  acesso limitado a esse tipo de serviço. Porém, ainda grande
+                  parte do problema é que 55% da população não tem hábito de ir
+                  ao dentista. É nisso que precisamos trabalhar, nessa
+                  conscientização. Porque dente é saúde, e saúde começa pela
+                  boca. As pessoas precisam ir ao dentista não só quando possuem
+                  algum problema ou quando estão com dor. A prevenção é o melhor
+                  caminho. E é uma questão cultural a ser trabalhada. Apesar de
+                  já sentirmos uma evolução muito grande (o cenário de 20 anos
+                  atrás era muito pior), ainda estamos muito atrasados no
+                  quesito saúde bucal.
+                </p>
 
-                <p>Hoje vemos pais preocupados que os filhos não percam os dentes como eles perderam, isso já é uma evolução fantástica. Porém sentimos que ainda falta muita orientação, especialmente para os públicos D e E, que muitas vezes busca o profissional para remover dentes que poderiam e deveriam ser tratados. É uma questão de saúde pública.</p>
+                <p>
+                  Hoje vemos pais preocupados que os filhos não percam os dentes
+                  como eles perderam, isso já é uma evolução fantástica. Porém
+                  sentimos que ainda falta muita orientação, especialmente para
+                  os públicos D e E, que muitas vezes busca o profissional para
+                  remover dentes que poderiam e deveriam ser tratados. É uma
+                  questão de saúde pública.
+                </p>
 
-                <p>Moradia, saúde e segurança são itens fundamentais à vida. É um direito de todos. Trabalhar para melhorar o acesso da população ao dentista é papel de um governo ativo e também da sociedade. Existe uma rede pública que pode ser acionada em caso de necessidade. Além de ONGs, instituições sem fins lucrativos, entre outros. Discutir e falar sobre escovação, higiene bucal, tabagismo, câncer de boca é parte da educação, da orientação. É nisso que acreditamos, a conscientização e o trabalho constante educativo para melhorar esse cenário do Brasil.</p>
+                <p>
+                  Moradia, saúde e segurança são itens fundamentais à vida. É um
+                  direito de todos. Trabalhar para melhorar o acesso da
+                  população ao dentista é papel de um governo ativo e também da
+                  sociedade. Existe uma rede pública que pode ser acionada em
+                  caso de necessidade. Além de ONGs, instituições sem fins
+                  lucrativos, entre outros. Discutir e falar sobre escovação,
+                  higiene bucal, tabagismo, câncer de boca é parte da educação,
+                  da orientação. É nisso que acreditamos, a conscientização e o
+                  trabalho constante educativo para melhorar esse cenário do
+                  Brasil.
+                </p>
 
                 <p>Vamos juntos?</p>
 
@@ -115,17 +160,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -133,26 +178,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Você sabe o que é linha alba?</a>
-            <a href=""> Next: A clínica Oral Recebe título Diamond Invisalign Provider<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Você sabe o que é linha alba?</a
+            >
+            <a href="">
+              Next: A clínica Oral Recebe título Diamond Invisalign Provider<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
