--- a/src/page26.html
+++ b/src/page26.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,14 +109,43 @@
                 <h3>Por que devemos visitar o dentista a cada 6 meses</h3>
                 <p>07/08/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">O flúor é fundamental para quem quer cuidar da saúde bucal.  Esse mineral está presente desde a água em que bebemos até  cremes dentais que utilizamos na escovação do dia a dia. Mas então, por que devo visitar o dentista a cada 6 meses?
+                <p class="text-news-left">
+                  O flúor é fundamental para quem quer cuidar da saúde bucal.
+                  Esse mineral está presente desde a água em que bebemos até
+                  cremes dentais que utilizamos na escovação do dia a dia. Mas
+                  então, por que devo visitar o dentista a cada 6 meses?
                 </p>
 
-                <p>Pesquisas demonstraram que o flúor não somente reduz a cárie nos dentes das crianças e adultos, como também mantém o reparo nas etapas precoces, mesmo antes de elas estarem visíveis. O flúor é o melhor combatente contra a cárie, ajuda a manter fortes os dentes, independentemente da faixa etária. Quando a substância está presente na saliva, tem o poder de fortalecer a superfície do dente, chamada de esmalte dentário, e isso ocorre pela formação de cálcio e potássio. É o flúor aplicado no consultório que garante a maior eficácia contra a doença pois possui altas concentrações do mineral.</p>
+                <p>
+                  Pesquisas demonstraram que o flúor não somente reduz a cárie
+                  nos dentes das crianças e adultos, como também mantém o reparo
+                  nas etapas precoces, mesmo antes de elas estarem visíveis. O
+                  flúor é o melhor combatente contra a cárie, ajuda a manter
+                  fortes os dentes, independentemente da faixa etária. Quando a
+                  substância está presente na saliva, tem o poder de fortalecer
+                  a superfície do dente, chamada de esmalte dentário, e isso
+                  ocorre pela formação de cálcio e potássio. É o flúor aplicado
+                  no consultório que garante a maior eficácia contra a doença
+                  pois possui altas concentrações do mineral.
+                </p>
 
-               <p>Para que o flúor seja realmente eficaz é preciso que ele esteja presente de forma contínua no meio bucal e na quantidade certa. Recomendamos que a primeira aplicação em bebês seja feita logo depois o nascimento dos dentes de leite. Aliás, é nas crianças que a aplicação de flúor atinge resultados mais satisfatórios. Porém, é importante salientar que esta aplicação deve ser controlada e acompanhada por um profissional, para evitar o aparecimento de efeitos adversos.</p>
-              
-               <p>Por fim, o flúor é apenas mais um dos artifícios que vamos utilizar na busca de uma boa saúde oral. As visitas regulares ao dentista permite que o meio bucal se mantenha controlado, saudável e sem cáries ou doenças periodontais.</p>
+                <p>
+                  Para que o flúor seja realmente eficaz é preciso que ele
+                  esteja presente de forma contínua no meio bucal e na
+                  quantidade certa. Recomendamos que a primeira aplicação em
+                  bebês seja feita logo depois o nascimento dos dentes de leite.
+                  Aliás, é nas crianças que a aplicação de flúor atinge
+                  resultados mais satisfatórios. Porém, é importante salientar
+                  que esta aplicação deve ser controlada e acompanhada por um
+                  profissional, para evitar o aparecimento de efeitos adversos.
+                </p>
+
+                <p>
+                  Por fim, o flúor é apenas mais um dos artifícios que vamos
+                  utilizar na busca de uma boa saúde oral. As visitas regulares
+                  ao dentista permite que o meio bucal se mantenha controlado,
+                  saudável e sem cáries ou doenças periodontais.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -118,17 +157,17 @@
                   <a href="">Prevenção da cárie</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -136,26 +175,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Aparelho Auto-Ligado</a>
-            <a href=""> Next: Ortodontia Preventiva<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Aparelho Auto-Ligado</a
+            >
+            <a href="">
+              Next: Ortodontia Preventiva<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
