--- a/src/page31.html
+++ b/src/page31.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,16 +109,57 @@
                 <h3>Cuidados durante e após o Clareamento Dental</h3>
                 <p>04/05/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">O clareamento dental tem sido realizado com mais frequência, a cada dia. A procura pela estética e harmonização facial é vasta e o acesso ao tratamento, também. O procedimento pode ser executado, basicamente, de duas formas: no consultório, pelo dentista; ou em casa, realizado pelo paciente sob orientação do profissional. Os métodos diferem em tempo de trabalho e velocidade. E como em qualquer outro tipo de tratamento odontológico, o clareamento dental exige cuidados.
+                <p class="text-news-left">
+                  O clareamento dental tem sido realizado com mais frequência, a
+                  cada dia. A procura pela estética e harmonização facial é
+                  vasta e o acesso ao tratamento, também. O procedimento pode
+                  ser executado, basicamente, de duas formas: no consultório,
+                  pelo dentista; ou em casa, realizado pelo paciente sob
+                  orientação do profissional. Os métodos diferem em tempo de
+                  trabalho e velocidade. E como em qualquer outro tipo de
+                  tratamento odontológico, o clareamento dental exige cuidados.
                 </p>
 
-                <p>Através de barreiras gengivais aplicadas pelo profissional no clareamento de consultório e pela quantidade de gel no método caseiro, evita-se o contato do gel clareador com as estruturas adjacentes ao elemento dental (gengiva, língua e bochechas). Isso porque, este contato, quando não controlado, pode causar irritação e ardor na região. Deve-se ainda controlar a quantidade adequada do produto afim de evitar a ingestão indesejada.</p>
+                <p>
+                  Através de barreiras gengivais aplicadas pelo profissional no
+                  clareamento de consultório e pela quantidade de gel no método
+                  caseiro, evita-se o contato do gel clareador com as estruturas
+                  adjacentes ao elemento dental (gengiva, língua e bochechas).
+                  Isso porque, este contato, quando não controlado, pode causar
+                  irritação e ardor na região. Deve-se ainda controlar a
+                  quantidade adequada do produto afim de evitar a ingestão
+                  indesejada.
+                </p>
 
-               <p>Outro fator que deve ser levado em consideração é com relação à expectativa do paciente pois existe um ponto de saturação de cor. Respeitar e entender o quanto o dente pode clarear, caso a caso, faz parte do sucesso do tratamento. Os dentes escurecem pela presença de manchas, divididas em extrínsecas ou intrínsecas, ou seja, de origem externa – tais como café, chá, corantes, cigarro – e interna – como excesso de flúor, má formação dental ou trauma -. Nos dias atuais, já é comprovado cientificamente que os causadores de manchas extrínsecas não influem na ação do gel clareador, com exceção de 2 a 3 horas após o procedimento. Portanto, não é necessário restringir a alimentação durante o tratamento, somente nas horas seguintes à aplicação. Porém, cada organismo responderá individualmente à aplicação.</p>
-              
-               <p>Após o tratamento, o cuidado está ligado ao tempo de manutenção, o intervalo de um ano entre uma aplicação e outra deve ser respeitado.</p>
+                <p>
+                  Outro fator que deve ser levado em consideração é com relação
+                  à expectativa do paciente pois existe um ponto de saturação de
+                  cor. Respeitar e entender o quanto o dente pode clarear, caso
+                  a caso, faz parte do sucesso do tratamento. Os dentes
+                  escurecem pela presença de manchas, divididas em extrínsecas
+                  ou intrínsecas, ou seja, de origem externa – tais como café,
+                  chá, corantes, cigarro – e interna – como excesso de flúor, má
+                  formação dental ou trauma -. Nos dias atuais, já é comprovado
+                  cientificamente que os causadores de manchas extrínsecas não
+                  influem na ação do gel clareador, com exceção de 2 a 3 horas
+                  após o procedimento. Portanto, não é necessário restringir a
+                  alimentação durante o tratamento, somente nas horas seguintes
+                  à aplicação. Porém, cada organismo responderá individualmente
+                  à aplicação.
+                </p>
 
-               <p>É muito importante que haja acompanhamento de um profissional para amenizar toda e qualquer situação adversa ao tratamento. Fonte de desejo, o clareamento realizado com segurança e bem aplicado garante lindos sorrisos!</p>
+                <p>
+                  Após o tratamento, o cuidado está ligado ao tempo de
+                  manutenção, o intervalo de um ano entre uma aplicação e outra
+                  deve ser respeitado.
+                </p>
+
+                <p>
+                  É muito importante que haja acompanhamento de um profissional
+                  para amenizar toda e qualquer situação adversa ao tratamento.
+                  Fonte de desejo, o clareamento realizado com segurança e bem
+                  aplicado garante lindos sorrisos!
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,17 +171,17 @@
                   <a href="">Sorriso</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -138,26 +189,46 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Renata Banhara, bactérias e os clichês que fazem parte de sua rotina</a>
-            <a href=""> Next: Pré-Natal Odontológico<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Renata Banhara, bactérias e os clichês que fazem parte de sua
+              rotina</a
+            >
+            <a href="">
+              Next: Pré-Natal Odontológico<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
