--- a/src/page32.html
+++ b/src/page32.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,25 +106,74 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Renata Banhara, bactérias e os clichês que fazem parte de sua rotina</h3>
+                <h3>
+                  Renata Banhara, bactérias e os clichês que fazem parte de sua
+                  rotina
+                </h3>
                 <p>26/04/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Sua saúde começa pela boca.
+                <p class="text-news-left">Sua saúde começa pela boca.</p>
+
+                <p>
+                  Nada criativo, não é mesmo? É quase uma chatice. Todo mundo
+                  fala, da sua mãe ao seu dentista. Essa frase, tão batida,
+                  revela uma verdade sobre saúde e cultura que muitas vezes
+                  subestimamos…
                 </p>
 
-                <p>Nada criativo, não é mesmo? É quase uma chatice. Todo mundo fala, da sua mãe ao seu dentista. Essa frase, tão batida, revela uma verdade sobre saúde e cultura que muitas vezes subestimamos…</p>
+                <p>
+                  Lembra aquele dia que, cansado, você foi dormir pensando que
+                  seria somente um dia sem escovar os dentes? E aquele outro
+                  então que, depois do almoço, não passou o fio dental e ao
+                  final do dia a gengiva entre os dentes esteve inchada e
+                  dolorida? Pois é.
+                </p>
 
-               <p>Lembra aquele dia que, cansado, você foi dormir pensando que seria somente um dia sem escovar os dentes? E aquele outro então que, depois do almoço, não passou o fio dental e ao final do dia a gengiva entre os dentes esteve inchada e dolorida? Pois é.</p>
-              
-               <p>Nossa boca, com diferentes texturas e superfícies (língua, gengivas mais molinhas e outras mais durinhas, dentes com e sem pontas), é um verdadeiro resort para bactérias… Tem comida, calor, unidade… Temos milhares delas na boca! Fazem parte do ambiente bucal. Com a higienização, mantemos seu “controle populacional”: elas lá, nós cá, convivemos em harmonia.</p>
+                <p>
+                  Nossa boca, com diferentes texturas e superfícies (língua,
+                  gengivas mais molinhas e outras mais durinhas, dentes com e
+                  sem pontas), é um verdadeiro resort para bactérias… Tem
+                  comida, calor, unidade… Temos milhares delas na boca! Fazem
+                  parte do ambiente bucal. Com a higienização, mantemos seu
+                  “controle populacional”: elas lá, nós cá, convivemos em
+                  harmonia.
+                </p>
 
-               <p>Porém, as cáries e as doenças das gengivas funcionam como portas que abrimos das nossas casas: as bactérias, que deveriam ficar somente na superfície, de repente ganham acesso aos tecidos mais profundos. Ossos, vasos sanguíneos, os chamados “seios da face”(sim, aquele lá onde dá sinusite!). Assim, esses problemas rotineiros que, achamos, somem quando nossos lábios estão selados, tornam-se panelas de pressão. Com a integridade das superfícies comprometida as bactérias passam a viajar pelo nosso organismo e, eventualmente, podem se alojar em estruturas importantes, como o coração: assim acontecem as famosas endocardites. E pior: algumas regiões da nossa face possuem vasos sanguíneos que são uma “via expressa” até o interior do crânio. São vasos que vão direto para o nosso cérebro sem válvulas, levando bactérias direto ao seu interior, podendo causar trombose e infecções cerebrais. Foi assim com a modelo Renata Banhara.</p>
+                <p>
+                  Porém, as cáries e as doenças das gengivas funcionam como
+                  portas que abrimos das nossas casas: as bactérias, que
+                  deveriam ficar somente na superfície, de repente ganham acesso
+                  aos tecidos mais profundos. Ossos, vasos sanguíneos, os
+                  chamados “seios da face”(sim, aquele lá onde dá sinusite!).
+                  Assim, esses problemas rotineiros que, achamos, somem quando
+                  nossos lábios estão selados, tornam-se panelas de pressão. Com
+                  a integridade das superfícies comprometida as bactérias passam
+                  a viajar pelo nosso organismo e, eventualmente, podem se
+                  alojar em estruturas importantes, como o coração: assim
+                  acontecem as famosas endocardites. E pior: algumas regiões da
+                  nossa face possuem vasos sanguíneos que são uma “via expressa”
+                  até o interior do crânio. São vasos que vão direto para o
+                  nosso cérebro sem válvulas, levando bactérias direto ao seu
+                  interior, podendo causar trombose e infecções cerebrais. Foi
+                  assim com a modelo Renata Banhara.
+                </p>
 
-               <p>Quando falamos de um dente já tratado, pode ser ainda pior. Pode vir sem dor, silencioso, até que eclode em complicações mais sérias.</p>
+                <p>
+                  Quando falamos de um dente já tratado, pode ser ainda pior.
+                  Pode vir sem dor, silencioso, até que eclode em complicações
+                  mais sérias.
+                </p>
 
-               <p>Achou que acabaram os clichês??? Haha, acabaram nada: visite o seu dentista regularmente. Ele pode identificar problemas potenciais e interceptar, antes das complicações mais sérias. E se você tiver problemas cardíacos, não  esqueça de avisar o profissional que cuida de você. Existem cuidados especiais que talvez sejam necessários no seu tratamento.</p>
+                <p>
+                  Achou que acabaram os clichês??? Haha, acabaram nada: visite o
+                  seu dentista regularmente. Ele pode identificar problemas
+                  potenciais e interceptar, antes das complicações mais sérias.
+                  E se você tiver problemas cardíacos, não esqueça de avisar o
+                  profissional que cuida de você. Existem cuidados especiais que
+                  talvez sejam necessários no seu tratamento.
+                </p>
 
-               <p>Sim, a sua saúde começa pela boca. Pense nisso.</p>
+                <p>Sim, a sua saúde começa pela boca. Pense nisso.</p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -129,17 +188,17 @@
                   <a href="">Tratamento de Canal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -147,26 +206,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Gengiva sangrando ao passar fio dental – sinal de alerta!</a>
-            <a href=""> Next: Cuidados durante e após o Clareamento Dental<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Gengiva sangrando ao passar fio dental – sinal de alerta!</a
+            >
+            <a href="">
+              Next: Cuidados durante e após o Clareamento Dental<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
