--- a/src/page34.html
+++ b/src/page34.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,31 +109,101 @@
                 <h3>Cárie dentária – uma doença contagiosa</h3>
                 <p>09/04/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Pouca gente sabe, mas a cárie dentária é uma doença infecto-contagiosa. Ela é causada pela bactéria Streptococcus Mutans, que adere aos dentes e se “alimenta” das partículas que sobraram da última refeição. Uma das formas de transmissão ocorre quando a mãe experimenta a comida do filho para ver se está muito quente. A transmissão ainda pode ocorrer durante o beijo, através da saliva.
+                <p class="text-news-left">
+                  Pouca gente sabe, mas a cárie dentária é uma doença
+                  infecto-contagiosa. Ela é causada pela bactéria Streptococcus
+                  Mutans, que adere aos dentes e se “alimenta” das partículas
+                  que sobraram da última refeição. Uma das formas de transmissão
+                  ocorre quando a mãe experimenta a comida do filho para ver se
+                  está muito quente. A transmissão ainda pode ocorrer durante o
+                  beijo, através da saliva.
                 </p>
 
-                <p>A cárie é o a doença oral mais comum que atinge adultos e crianças. O Brasil possui baixa incidência de casos e, entre 2003 e 2010, apresentou uma redução de 25% no número de pessoas atingidas pelo problema, segundo o Ministério da Saúde.</p>
+                <p>
+                  A cárie é o a doença oral mais comum que atinge adultos e
+                  crianças. O Brasil possui baixa incidência de casos e, entre
+                  2003 e 2010, apresentou uma redução de 25% no número de
+                  pessoas atingidas pelo problema, segundo o Ministério da
+                  Saúde.
+                </p>
 
-               <p>A cárie é uma doença progressiva que se manifesta como perda de tecido dentário. Ela aparece quando as bactérias encontradas na boca transformam os restos de alimentos em ácidos, que provocam a desmineralização da matriz de cálcio do dente, causando o amolecimento da sua estrutura e formação de cavidade.</p>
-              
-               <p>Existem três tipos de cáries: a coronária, radicular e recorrente. A coronária é a mais comum e se localiza na superfície de mastigação ou entre os dentes. A cárie radicular ocorre quando há retração da gengiva e exposição da raiz do dente, sendo mais frequente em pessoas mais velhas. Já a cárie recorrente atinge restaurações e coroas existentes.</p>
+                <p>
+                  A cárie é uma doença progressiva que se manifesta como perda
+                  de tecido dentário. Ela aparece quando as bactérias
+                  encontradas na boca transformam os restos de alimentos em
+                  ácidos, que provocam a desmineralização da matriz de cálcio do
+                  dente, causando o amolecimento da sua estrutura e formação de
+                  cavidade.
+                </p>
 
-               <strong>As cáries dentárias apresentam sintomas?</strong>
-               <p>A cárie inicial muitas vezes não tem sintomas, se manifestando apenas como uma mancha branca, que corresponde ao início da desmineralização do esmalte. Porém, esta mancha pode evoluir, causando os primeiros sintomas, como dor ao comer doces, ao consumir alimentos gelados e ao mastigar. Quando não tratada, ela avança e pode causar sintomas mais graves, como dor com estímulos quentes e até mesmo pontadas espontâneas.</p>
+                <p>
+                  Existem três tipos de cáries: a coronária, radicular e
+                  recorrente. A coronária é a mais comum e se localiza na
+                  superfície de mastigação ou entre os dentes. A cárie radicular
+                  ocorre quando há retração da gengiva e exposição da raiz do
+                  dente, sendo mais frequente em pessoas mais velhas. Já a cárie
+                  recorrente atinge restaurações e coroas existentes.
+                </p>
 
-               <p>O tratamento deve ser avaliado individualmente, pois depende da quantidade de estrutura dentária que foi perdida. Basicamente, ele consiste na remoção do tecido cariado e na restauração do dente para restabelecer sua forma e função.</p>
+                <strong>As cáries dentárias apresentam sintomas?</strong>
+                <p>
+                  A cárie inicial muitas vezes não tem sintomas, se manifestando
+                  apenas como uma mancha branca, que corresponde ao início da
+                  desmineralização do esmalte. Porém, esta mancha pode evoluir,
+                  causando os primeiros sintomas, como dor ao comer doces, ao
+                  consumir alimentos gelados e ao mastigar. Quando não tratada,
+                  ela avança e pode causar sintomas mais graves, como dor com
+                  estímulos quentes e até mesmo pontadas espontâneas.
+                </p>
 
-               <strong>Quais são os riscos de não tratar as cáries?</strong>
-               <p>Por ser uma doença progressiva, quando a cárie não é tratada, evolui e pode atingir a polpa dentária, que é o nervo do dente, e contaminar a raiz. Nestes casos, é necessário fazer o tratamento do canal para eliminar a dor e remover a contaminação bacteriana.</p>
+                <p>
+                  O tratamento deve ser avaliado individualmente, pois depende
+                  da quantidade de estrutura dentária que foi perdida.
+                  Basicamente, ele consiste na remoção do tecido cariado e na
+                  restauração do dente para restabelecer sua forma e função.
+                </p>
 
-               <p>Além disso, nos casos em que há grande destruição da estrutura do dente, podem ser indicados outros procedimentos mais invasivos, como a colocação de uma coroa de porcelana ou uma prótese dentária provisória. Casos extremos podem levar até à perda do dente, com indicação de extração.</p>
+                <strong>Quais são os riscos de não tratar as cáries?</strong>
+                <p>
+                  Por ser uma doença progressiva, quando a cárie não é tratada,
+                  evolui e pode atingir a polpa dentária, que é o nervo do
+                  dente, e contaminar a raiz. Nestes casos, é necessário fazer o
+                  tratamento do canal para eliminar a dor e remover a
+                  contaminação bacteriana.
+                </p>
 
-               <p>A contaminação que atinge a raiz do dente também pode pode gerar uma infecção e provocar abscessos (acúmulo de pus). Nesta situação, se as bactérias caírem na corrente sanguínea e se espalharem para outras partes do corpo, podem provocar endocardite bacteriana, que se não for reconhecida e tratada a tempo, pode levar o indivíduo à morte.</p>
+                <p>
+                  Além disso, nos casos em que há grande destruição da estrutura
+                  do dente, podem ser indicados outros procedimentos mais
+                  invasivos, como a colocação de uma coroa de porcelana ou uma
+                  prótese dentária provisória. Casos extremos podem levar até à
+                  perda do dente, com indicação de extração.
+                </p>
 
-               <strong>Como prevenir a cárie?</strong>
-               <p>A melhor prevenção é a higienização adequada. Devemos escovar os dentes após cada refeição e usar o fio dental diariamente, evitar o consumo de açúcar e ingerir bastante água para aumentar a salivação.</p>
+                <p>
+                  A contaminação que atinge a raiz do dente também pode pode
+                  gerar uma infecção e provocar abscessos (acúmulo de pus).
+                  Nesta situação, se as bactérias caírem na corrente sanguínea e
+                  se espalharem para outras partes do corpo, podem provocar
+                  endocardite bacteriana, que se não for reconhecida e tratada a
+                  tempo, pode levar o indivíduo à morte.
+                </p>
 
-               <p>As visitas ao dentista devem ocorrer a cada 6 meses para que qualquer problema seja diagnosticado no início. Quem sofre de xerostomia (boca seca), fumantes ou pessoas com doenças sistêmicas devem visitar o dentista com maior frequência, pois são mais propensos a ter cáries.</p>
+                <strong>Como prevenir a cárie?</strong>
+                <p>
+                  A melhor prevenção é a higienização adequada. Devemos escovar
+                  os dentes após cada refeição e usar o fio dental diariamente,
+                  evitar o consumo de açúcar e ingerir bastante água para
+                  aumentar a salivação.
+                </p>
+
+                <p>
+                  As visitas ao dentista devem ocorrer a cada 6 meses para que
+                  qualquer problema seja diagnosticado no início. Quem sofre de
+                  xerostomia (boca seca), fumantes ou pessoas com doenças
+                  sistêmicas devem visitar o dentista com maior frequência, pois
+                  são mais propensos a ter cáries.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -137,17 +217,17 @@
                   <a href="">Tratamento de Cárie</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -155,26 +235,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Como posso melhorar do herpes labial?</a>
-            <a href=""> Next: Gengiva sangrando ao passar fio dental – sinal de alerta!<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Como posso melhorar do herpes labial?</a
+            >
+            <a href="">
+              Next: Gengiva sangrando ao passar fio dental – sinal de alerta!<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
