--- a/src/page4.html
+++ b/src/page4.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,58 +106,116 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</h3>
+                <h3>
+                  Mês do combate ao câncer: tudo o que você precisa saber sobre
+                  câncer de boca
+                </h3>
                 <p>12/02/2020</p>
-                <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="">
-                <p class="text-news-left">No mês de fevereiro é celebrado o Dia Mundial do Combate ao Câncer. Apesar dos cânceres de próstata, mama e pulmão serem os mais comuns, os números crescentes de casos de câncer de boca têm alertado e exigido mais atenção e informação à população.</p>
+                <img src="./resources/img/Foto-Blog-1-1024x576.jpg" alt="" />
+                <p class="text-news-left">
+                  No mês de fevereiro é celebrado o Dia Mundial do Combate ao
+                  Câncer. Apesar dos cânceres de próstata, mama e pulmão serem
+                  os mais comuns, os números crescentes de casos de câncer de
+                  boca têm alertado e exigido mais atenção e informação à
+                  população.
+                </p>
 
-                <p>De acordo com dados do Instituto Nacional de Câncer (INCA), o Brasil é o terceiro país com o maior número de ocorrências de câncer de boca no mundo, com cerca de 15 mil casos por ano. </p>
+                <p>
+                  De acordo com dados do Instituto Nacional de Câncer (INCA), o
+                  Brasil é o terceiro país com o maior número de ocorrências de
+                  câncer de boca no mundo, com cerca de 15 mil casos por ano.
+                </p>
 
-                <p>Entenda melhor o câncer de cavidade oral: </p>
+                <p>Entenda melhor o câncer de cavidade oral:</p>
 
                 <strong>O que é? </strong>
-                <p>O câncer de cavidade oral, popularmente conhecido como câncer de boca, é um tumor maligno que afeta os lábios e estruturas da boca, como gengivas, bochechas, céu da boca e língua. </p>
+                <p>
+                  O câncer de cavidade oral, popularmente conhecido como câncer
+                  de boca, é um tumor maligno que afeta os lábios e estruturas
+                  da boca, como gengivas, bochechas, céu da boca e língua.
+                </p>
 
                 <strong>Sintomas</strong>
-                <p>Os principais sinais que podem ser observados são: lesões na cavidade oral ou nos lábios que apresentam problemas de cicatrização, manchas, placas vermelhas ou esbranquiçadas na língua, gengiva, céu da boca ou bochecha, nódulos e caroços no pescoço, rouquidão persistente, dificuldade na mastigação ou na fala. </p>
+                <p>
+                  Os principais sinais que podem ser observados são: lesões na
+                  cavidade oral ou nos lábios que apresentam problemas de
+                  cicatrização, manchas, placas vermelhas ou esbranquiçadas na
+                  língua, gengiva, céu da boca ou bochecha, nódulos e caroços no
+                  pescoço, rouquidão persistente, dificuldade na mastigação ou
+                  na fala.
+                </p>
 
                 <strong>Fatores de risco</strong>
-                <p>A maioria das causas do câncer de boca estão relacionadas a hábitos nocivos à saúde. Dados da Organização Mundial da Saúde (OMS) apontam que 90% dos casos da doença estão ligados ao consumo de cigarro e álcool. </p>
+                <p>
+                  A maioria das causas do câncer de boca estão relacionadas a
+                  hábitos nocivos à saúde. Dados da Organização Mundial da Saúde
+                  (OMS) apontam que 90% dos casos da doença estão ligados ao
+                  consumo de cigarro e álcool.
+                </p>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Fumo: O Hospital A.C Camargo aponta que a chance de pessoas fumantes desenvolverem câncer de boca é de seis a 16 vezes maior que as não fumantes.
+                      Fumo: O Hospital A.C Camargo aponta que a chance de
+                      pessoas fumantes desenvolverem câncer de boca é de seis a
+                      16 vezes maior que as não fumantes.
                     </li>
                     <li>
-                      Álcool: o consumo de bebidas alcoólicas é um fator de risco, principalmente entre os bebedores excessivos, que bebem mais de 21 doses de álcool por semana.
+                      Álcool: o consumo de bebidas alcoólicas é um fator de
+                      risco, principalmente entre os bebedores excessivos, que
+                      bebem mais de 21 doses de álcool por semana.
                     </li>
                     <li>
-                      Idade: a ocorrência do câncer de cavidade oral aumenta com a idade.
+                      Idade: a ocorrência do câncer de cavidade oral aumenta com
+                      a idade.
                     </li>
                     <li>
-                      Gênero: há maior incidência da doença em homens acima de 60 anos. É importante ressaltar que dois terços dos pacientes são homens.
+                      Gênero: há maior incidência da doença em homens acima de
+                      60 anos. É importante ressaltar que dois terços dos
+                      pacientes são homens.
                     </li>
                     <li>
                       Sexo oral: a infecção pelo HPV pode causar câncer de boca.
                     </li>
                     <li>
-                      Exposição ao sol: o câncer de lábio acomete profissionais que trabalham ao ar livre e são expostos em excesso à radiação do sol.
+                      Exposição ao sol: o câncer de lábio acomete profissionais
+                      que trabalham ao ar livre e são expostos em excesso à
+                      radiação do sol.
                     </li>
                     <li>
-                      Alimentação: dietas pobres em frutas, legumes e verduras também estão associadas a0 maior risco de câncer de boca. 
+                      Alimentação: dietas pobres em frutas, legumes e verduras
+                      também estão associadas a0 maior risco de câncer de boca.
                     </li>
                   </ul>
                 </div>
 
                 <strong>Tratamento</strong>
-                <p>Assim como os demais tipos de câncer, o de cavidade bucal tem maior chance de cura com o diagnóstico precoce. De forma geral, o tratamento envolve cirurgia oncológica e/ ou sessões de radioterapia. A indicação de tratamento vai depender da avaliação médica do caso.</p>
+                <p>
+                  Assim como os demais tipos de câncer, o de cavidade bucal tem
+                  maior chance de cura com o diagnóstico precoce. De forma
+                  geral, o tratamento envolve cirurgia oncológica e/ ou sessões
+                  de radioterapia. A indicação de tratamento vai depender da
+                  avaliação médica do caso.
+                </p>
 
                 <strong>Prevenção</strong>
-                <p>Como o câncer de cavidade oral é silencioso e, muitas vezes, indolor, a avaliação periódica do dentista é fundamental para prevenir e diagnosticar precocemente a doença. A indicação é de consultas semestrais com o cirurgião-dentista da sua preferência. </p>
+                <p>
+                  Como o câncer de cavidade oral é silencioso e, muitas vezes,
+                  indolor, a avaliação periódica do dentista é fundamental para
+                  prevenir e diagnosticar precocemente a doença. A indicação é
+                  de consultas semestrais com o cirurgião-dentista da sua
+                  preferência.
+                </p>
 
-                <p>É importante ressaltar que o câncer de boca está muito relacionado ao estilo de vida do paciente, por este motivo é importante redobrar a atenção aos fatores de risco. </p>
+                <p>
+                  É importante ressaltar que o câncer de boca está muito
+                  relacionado ao estilo de vida do paciente, por este motivo é
+                  importante redobrar a atenção aos fatores de risco.
+                </p>
 
-                <p>*Este artigo contou com o apoio de informações oficiais do INCA, Instituto A.C Camargo e OMS.</p>
+                <p>
+                  *Este artigo contou com o apoio de informações oficiais do
+                  INCA, Instituto A.C Camargo e OMS.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -155,17 +223,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -173,30 +241,48 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
-            <a href=""> Next: Dente do siso: mitos e verdades <i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Mês do combate ao câncer: tudo o que você precisa saber sobre
+              câncer de boca</a
+            >
+            <a href="">
+              Next: Dente do siso: mitos e verdades
+              <i class="font-icon-post fa fa-angle-double-right"></i>
+            </a>
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
