--- a/src/page40.html
+++ b/src/page40.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,82 +109,132 @@
                 <h3>O que pode deixar seus dentes sensíveis?</h3>
                 <p>31/01/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Embora muita gente não saiba, a sensibilidade dentária costuma ser decorrente de hábitos que praticamos sem perceber. A sensação desconfortável ocorre quando há exposição da dentina, região mais sensível conhecida como a ‘raiz do dente’.
+                <p class="text-news-left">
+                  Embora muita gente não saiba, a sensibilidade dentária costuma
+                  ser decorrente de hábitos que praticamos sem perceber. A
+                  sensação desconfortável ocorre quando há exposição da dentina,
+                  região mais sensível conhecida como a ‘raiz do dente’.
                 </p>
 
-                <p>Além de doenças bucais, alguns hábitos podem contribuir para o desenvolvimento do problema. Veja quais são eles a seguir:</p>
+                <p>
+                  Além de doenças bucais, alguns hábitos podem contribuir para o
+                  desenvolvimento do problema. Veja quais são eles a seguir:
+                </p>
 
                 <strong>1. Escovação incorreta</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Não é uma questão de força, mas de jeito. Movimentos suaves, com uma escova de cerdas macias ou extra-macias é o indicado pelos especialistas na hora de fazer a higiene bucal. A retração gengival é provocada na maior parte dos casos pela escovação com muita força ou com movimentos errados, isso expõe áreas do colo do dente, que não possuem a proteção do esmalte. Ainda falando da escovação, o mais indicado para não ter sensibilidade é evitar pastas muito abrasivas.
-                   </li>
-                 </ul>
-               </div>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Não é uma questão de força, mas de jeito. Movimentos
+                      suaves, com uma escova de cerdas macias ou extra-macias é
+                      o indicado pelos especialistas na hora de fazer a higiene
+                      bucal. A retração gengival é provocada na maior parte dos
+                      casos pela escovação com muita força ou com movimentos
+                      errados, isso expõe áreas do colo do dente, que não
+                      possuem a proteção do esmalte. Ainda falando da escovação,
+                      o mais indicado para não ter sensibilidade é evitar pastas
+                      muito abrasivas.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>2. Roer ou morder o que não pode</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Se você tem o hábito de abrir garrafas com a boca pare agora. A mesma recomendação vale para quem costuma morder pontas de lápis e tampas de caneta. Hábitos desse tipo são causadores de sensibilidade dentária. Essas atividades podem causar trincas imperceptíveis a olho nu, mas que expõem a dentina. Até mesmo rasgar embalagens com os dentes podem causar microfissuras, assim, é melhor ter sempre uma tesoura por perto.
-                   </li>
-                 </ul>
-               </div>
+                <strong>2. Roer ou morder o que não pode</strong>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Se você tem o hábito de abrir garrafas com a boca pare
+                      agora. A mesma recomendação vale para quem costuma morder
+                      pontas de lápis e tampas de caneta. Hábitos desse tipo são
+                      causadores de sensibilidade dentária. Essas atividades
+                      podem causar trincas imperceptíveis a olho nu, mas que
+                      expõem a dentina. Até mesmo rasgar embalagens com os
+                      dentes podem causar microfissuras, assim, é melhor ter
+                      sempre uma tesoura por perto.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>3. Bruxismo</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    O ato de apertar ou ranger os dentes durante o sono também podem causar microfissuras que desgastam o dente, promovendo a perda do esmalte. A principal causa do bruxismo é o estresse.
-                   </li>
-                 </ul>
-               </div>
+                <strong>3. Bruxismo</strong>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      O ato de apertar ou ranger os dentes durante o sono também
+                      podem causar microfissuras que desgastam o dente,
+                      promovendo a perda do esmalte. A principal causa do
+                      bruxismo é o estresse.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>4. Consumir de alimentos ácidos</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Alimentos com pH (escala que indica o nível de acidez, alcalinidade ou neutralidade) muito baixo causam a desmineralização do esmalte dos dentes, o que os deixa mais sensíveis. <br> A lista de alimentos com esse perfil inclui refrigerante, vinho, suco de laranja, vinagre e frutas cítricas. Nesse caso, após o consumo, o ideal é esperar cerca de 30 minutos antes de realizar a higienização para que a saliva consiga deixar o pH da boca o mais neutro possível.
-                   </li>
-                 </ul>
-               </div>
+                <strong>4. Consumir de alimentos ácidos</strong>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Alimentos com pH (escala que indica o nível de acidez,
+                      alcalinidade ou neutralidade) muito baixo causam a
+                      desmineralização do esmalte dos dentes, o que os deixa
+                      mais sensíveis. <br />
+                      A lista de alimentos com esse perfil inclui refrigerante,
+                      vinho, suco de laranja, vinagre e frutas cítricas. Nesse
+                      caso, após o consumo, o ideal é esperar cerca de 30
+                      minutos antes de realizar a higienização para que a saliva
+                      consiga deixar o pH da boca o mais neutro possível.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>5. Temperatura inadequada</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Alimentos muito frios ou muito quentes provocam sensibilidade quando a boca já apresenta um dos outros fatores acima presentes. Ou seja, refrigerante supergelado pode sim causar desconforto durante o consumo.
-                   </li>
-                 </ul>
-               </div>
+                <strong>5. Temperatura inadequada</strong>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Alimentos muito frios ou muito quentes provocam
+                      sensibilidade quando a boca já apresenta um dos outros
+                      fatores acima presentes. Ou seja, refrigerante supergelado
+                      pode sim causar desconforto durante o consumo.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>6. Regurgitação frequente</strong>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Pacientes com bulimia nervosa, anorexia, alcoólatras crônicos e com refluxo também podem desenvolver maior sensibilidade nos dentes.
-                   </li>
-                 </ul>
-               </div>
+                <strong>6. Regurgitação frequente</strong>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Pacientes com bulimia nervosa, anorexia, alcoólatras
+                      crônicos e com refluxo também podem desenvolver maior
+                      sensibilidade nos dentes.
+                    </li>
+                  </ul>
+                </div>
 
-               <strong>Como tratar o problema</strong>       
-               <p>Considerando as diferentes causas, o dentista é o profissional que irá recomendar o tratamento mais adequado a cada caso. Mas uma higienização adequada com uma escova de cabeça pequena e cerdas macias, uso adequado do fio dental e de enxaguantes bucais com flúor são alguns dos cuidados que podemos adotar no dia a dia para evitar uma maior sensibilidade dos dentes.</p>
+                <strong>Como tratar o problema</strong>
+                <p>
+                  Considerando as diferentes causas, o dentista é o profissional
+                  que irá recomendar o tratamento mais adequado a cada caso. Mas
+                  uma higienização adequada com uma escova de cabeça pequena e
+                  cerdas macias, uso adequado do fio dental e de enxaguantes
+                  bucais com flúor são alguns dos cuidados que podemos adotar no
+                  dia a dia para evitar uma maior sensibilidade dos dentes.
+                </p>
 
-               <p>No consultório, o dentista poderá optar por aplicação de flúor para ajuda remineralizar o esmalte e a dentina, aplicação de laser terapêutico com ação analgésica e anti-inflamatória e pela restauração da área da dentina exposta para impermeabilizar a superfície.</p>
-
+                <p>
+                  No consultório, o dentista poderá optar por aplicação de flúor
+                  para ajuda remineralizar o esmalte e a dentina, aplicação de
+                  laser terapêutico com ação analgésica e anti-inflamatória e
+                  pela restauração da área da dentina exposta para
+                  impermeabilizar a superfície.
+                </p>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -182,27 +242,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A importância do cálcio e vitamina D na saúde bucal
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A
+              importância do cálcio e vitamina D na saúde bucal
             </a>
-            <a href=""> Next: Bichectomia, a cirurgia que pode mudar seu rosto<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: Bichectomia, a cirurgia que pode mudar seu rosto<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
