--- a/src/page41.html
+++ b/src/page41.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,27 +109,100 @@
                 <h3>A importância do cálcio e vitamina D na saúde bucal</h3>
                 <p>22/11/2016</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <strong class="text-news-left">1. Por que a cálcio e a vitamina D fazem tão bem para a saúde bucal?
+                <strong class="text-news-left"
+                  >1. Por que a cálcio e a vitamina D fazem tão bem para a saúde
+                  bucal?
                 </strong>
 
-                <p>O Cálcio é um nutriente importante para a saúde geral e bem estar, sendo considerado um mineral essencial para a saúde dos ossos, dentes e  gengivas.</p>
-                <p>A vitamina D é uma vitamina essencial que promove a absorção e retenção de dois minerais, cálcio e fósforo, ajudando no desenvolvimento dos ossos, mineralização dos dentes, funcionamento do sistema imunológico e o alívio da inflamação.</p>
+                <p>
+                  O Cálcio é um nutriente importante para a saúde geral e bem
+                  estar, sendo considerado um mineral essencial para a saúde dos
+                  ossos, dentes e gengivas.
+                </p>
+                <p>
+                  A vitamina D é uma vitamina essencial que promove a absorção e
+                  retenção de dois minerais, cálcio e fósforo, ajudando no
+                  desenvolvimento dos ossos, mineralização dos dentes,
+                  funcionamento do sistema imunológico e o alívio da inflamação.
+                </p>
 
-                <strong>2. E como elas podem ajudar diretamente no tratamento ortodôntico?</strong>
-                <p>Durante o tratamento ortodôntico, não apenas os dentes sofrem movimentação, mas também estruturas como ossos, ligamentos e gengiva passam por mudanças importantes.</p>
-                <p>A movimentação ortodôntica ocorre da seguinte forma: quando o aparelho aplica uma força no dente, é gerada uma reação inflamatória, que causa pequenas áreas de reabsorção óssea e outras de neoformação. Somente desta forma, o dente é capaz de sair de uma posição para outra. Para que este processo ocorra de forma saudável, é essencial que o indivíduo apresente uma saúde óssea equilibrada, e para isso os níveis de cálcio e vitamina D são essenciais.</p>
+                <strong
+                  >2. E como elas podem ajudar diretamente no tratamento
+                  ortodôntico?</strong
+                >
+                <p>
+                  Durante o tratamento ortodôntico, não apenas os dentes sofrem
+                  movimentação, mas também estruturas como ossos, ligamentos e
+                  gengiva passam por mudanças importantes.
+                </p>
+                <p>
+                  A movimentação ortodôntica ocorre da seguinte forma: quando o
+                  aparelho aplica uma força no dente, é gerada uma reação
+                  inflamatória, que causa pequenas áreas de reabsorção óssea e
+                  outras de neoformação. Somente desta forma, o dente é capaz de
+                  sair de uma posição para outra. Para que este processo ocorra
+                  de forma saudável, é essencial que o indivíduo apresente uma
+                  saúde óssea equilibrada, e para isso os níveis de cálcio e
+                  vitamina D são essenciais.
+                </p>
 
-                <strong>3. O consumo de alimentos com essas vitaminas permite que o tratamento ortodôntico acabe mais rápido?</strong>
-                <p>O consumo de alimentos com cálcio e vitamina D torna o tratamento mais rápido a partir do momento em que proporciona condições fisiológicas adequadas para que a movimentação aconteça de forma saudável. Caso o paciente tenha problemas periodontais, que envolve a gengiva e o osso que segura o dente, a movimentação ortodôntica deve ser interrompida, para que o problema seja tratado, atrasando e algumas vezes comprometendo os resultados do tratamento ortodôntico. Portanto, para que o tratamento ortodôntico acabe mais rápido, é importante que exista a manutenção da saúde geral do paciente, com alimentação saudável, além dos cuidados essenciais com o aparelho e a escovação, supervisionados pelo ortodontista.</p>
+                <strong
+                  >3. O consumo de alimentos com essas vitaminas permite que o
+                  tratamento ortodôntico acabe mais rápido?</strong
+                >
+                <p>
+                  O consumo de alimentos com cálcio e vitamina D torna o
+                  tratamento mais rápido a partir do momento em que proporciona
+                  condições fisiológicas adequadas para que a movimentação
+                  aconteça de forma saudável. Caso o paciente tenha problemas
+                  periodontais, que envolve a gengiva e o osso que segura o
+                  dente, a movimentação ortodôntica deve ser interrompida, para
+                  que o problema seja tratado, atrasando e algumas vezes
+                  comprometendo os resultados do tratamento ortodôntico.
+                  Portanto, para que o tratamento ortodôntico acabe mais rápido,
+                  é importante que exista a manutenção da saúde geral do
+                  paciente, com alimentação saudável, além dos cuidados
+                  essenciais com o aparelho e a escovação, supervisionados pelo
+                  ortodontista.
+                </p>
 
-                <strong>4. O que a falta desse tipo de vitamina pode causar em relação a saúde bucal?
+                <strong
+                  >4. O que a falta desse tipo de vitamina pode causar em
+                  relação a saúde bucal?
                 </strong>
-                <p>Uma dieta baixa em cálcio e vitamina D é um fator de risco para a osteoporose, uma doença em que a densidade e a qualidade dos ossos é reduzida. Em relação à saúde bucal, as doenças esqueléticas podem causar problemas como periodontite em diversos graus de agressividade, podendo resultar até mesmo na perda dos dentes. Para piorar, quando o osso não está saudável, também não é possível fazer uma reabilitação adequada, com implantes, por exemplo. Por isso é muito importante que os pacientes que apresentam deficiência de cálcio e vitamina D façam controle periódico com um especialista em Periodontia, para evitar problemas mais sérios e irreversíveis.</p>
+                <p>
+                  Uma dieta baixa em cálcio e vitamina D é um fator de risco
+                  para a osteoporose, uma doença em que a densidade e a
+                  qualidade dos ossos é reduzida. Em relação à saúde bucal, as
+                  doenças esqueléticas podem causar problemas como periodontite
+                  em diversos graus de agressividade, podendo resultar até mesmo
+                  na perda dos dentes. Para piorar, quando o osso não está
+                  saudável, também não é possível fazer uma reabilitação
+                  adequada, com implantes, por exemplo. Por isso é muito
+                  importante que os pacientes que apresentam deficiência de
+                  cálcio e vitamina D façam controle periódico com um
+                  especialista em Periodontia, para evitar problemas mais sérios
+                  e irreversíveis.
+                </p>
 
-                <strong>5. Em que tipos de alimentos podemos encontrar essas vitaminas?</strong>
-                <p>O cálcio pode ser encontrado em diversos alimentos, sendo os principais: leite, iogurte, feijão branco, brócolis, laranja, couve, sardinha, semente de gergelim, linhaça e amêndoas.</p>
-                <p>A principal maneira pela qual os seres humanos obtêm vitamina D é através dos raios ultravioleta do sol, que estimulam a pele a sintetizá-la. Mas caso a pessoa não tenha muita exposição ao sol, é essencial obter vitamina D através de alimentos, tais como óleo de fígado de bacalhau, ovo, ostras, suco de laranja, atum enlatado, cogumelos, sardinha, salmão, bife de fígado e leite.</p>
-
+                <strong
+                  >5. Em que tipos de alimentos podemos encontrar essas
+                  vitaminas?</strong
+                >
+                <p>
+                  O cálcio pode ser encontrado em diversos alimentos, sendo os
+                  principais: leite, iogurte, feijão branco, brócolis, laranja,
+                  couve, sardinha, semente de gergelim, linhaça e amêndoas.
+                </p>
+                <p>
+                  A principal maneira pela qual os seres humanos obtêm vitamina
+                  D é através dos raios ultravioleta do sol, que estimulam a
+                  pele a sintetizá-la. Mas caso a pessoa não tenha muita
+                  exposição ao sol, é essencial obter vitamina D através de
+                  alimentos, tais como óleo de fígado de bacalhau, ovo, ostras,
+                  suco de laranja, atum enlatado, cogumelos, sardinha, salmão,
+                  bife de fígado e leite.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -133,19 +216,18 @@
                   <a href="">Ortodontia</a>
                   <a href="">Saúde Bucal</a>
                 </div>
-
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -153,27 +235,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Protetor Bucal para Esportes
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Protetor Bucal para Esportes
             </a>
-            <a href=""> Next: O que pode deixar seus dentes sensíveis?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: O que pode deixar seus dentes sensíveis?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
