--- a/src/page42.html
+++ b/src/page42.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,16 +109,52 @@
                 <h3>Protetor Bucal para Esportes</h3>
                 <p>22/11/2016</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">O protetor bucal é um aparelho que se encaixa nos dentes para protegê-los contra qualquer tipo de impacto. Deve ser usado sempre que a pessoa participa de atividades esportivas que envolvam a possibilidade de quedas, contatos físicos bruscos, choques com objetos voadores, ou qualquer atividade que possa produzir ferimentos na área da boca. Segundo uma estimativa da National Youth Sports Foundation, mais de 5 milhões de dentes são perdidos devido às atividades esportivas anualmente.
+                <p class="text-news-left">
+                  O protetor bucal é um aparelho que se encaixa nos dentes para
+                  protegê-los contra qualquer tipo de impacto. Deve ser usado
+                  sempre que a pessoa participa de atividades esportivas que
+                  envolvam a possibilidade de quedas, contatos físicos bruscos,
+                  choques com objetos voadores, ou qualquer atividade que possa
+                  produzir ferimentos na área da boca. Segundo uma estimativa da
+                  National Youth Sports Foundation, mais de 5 milhões de dentes
+                  são perdidos devido às atividades esportivas anualmente.
                 </p>
 
-                <p>Entre os tipos de traumatismos que podem ocorrer sem o uso do protetor bucal estão a quebra ou rachadura de dentes, fraturas de próteses, ferimentos nos lábios e bochechas, danos à raiz dos dentes, fraturas de arcada e concussões.</p>
+                <p>
+                  Entre os tipos de traumatismos que podem ocorrer sem o uso do
+                  protetor bucal estão a quebra ou rachadura de dentes, fraturas
+                  de próteses, ferimentos nos lábios e bochechas, danos à raiz
+                  dos dentes, fraturas de arcada e concussões.
+                </p>
 
-                <p>Existem protetores bucais pré-fabricados, que podem ser adquiridos em lojas de produtos esportivos. No entanto, eles não se ajustam com tanta precisão ao maxilar e interferem na capacidade de respirar e falar. Como devem ser aquecidos em água e modelados diretamente na boca, na maioria dos casos as pessoas mordem errado e ficam com o protetor defeituoso, causando uma falsa proteção e um enorme desconforto, podendo dificultar a fala e respiração, e até mesmo reduzir o desempenho do atleta.</p>
+                <p>
+                  Existem protetores bucais pré-fabricados, que podem ser
+                  adquiridos em lojas de produtos esportivos. No entanto, eles
+                  não se ajustam com tanta precisão ao maxilar e interferem na
+                  capacidade de respirar e falar. Como devem ser aquecidos em
+                  água e modelados diretamente na boca, na maioria dos casos as
+                  pessoas mordem errado e ficam com o protetor defeituoso,
+                  causando uma falsa proteção e um enorme desconforto, podendo
+                  dificultar a fala e respiração, e até mesmo reduzir o
+                  desempenho do atleta.
+                </p>
 
-                <p>Já os protetores fabricados sob medida são confeccionados a partir de um modelo  da arcada feito pelo dentista, resultando em total adaptação, além de maior conforto e segurança para o usuário. A maioria dos atletas prefere este tipo de protetor, por serem extremamente confortáveis.</p>
+                <p>
+                  Já os protetores fabricados sob medida são confeccionados a
+                  partir de um modelo da arcada feito pelo dentista, resultando
+                  em total adaptação, além de maior conforto e segurança para o
+                  usuário. A maioria dos atletas prefere este tipo de protetor,
+                  por serem extremamente confortáveis.
+                </p>
 
-                <p>O protetor bucal é essencial para todos os atletas, sejam eles crianças ou adultos. Eles podem ser fabricados em três níveis de proteção, que se diferenciam pela espessura do material. A indicação depende do nível de impacto e risco do esporte praticado. Para obter mais informações sobre o protetor bucal correto para você, consulte seu dentista.</p>
+                <p>
+                  O protetor bucal é essencial para todos os atletas, sejam eles
+                  crianças ou adultos. Eles podem ser fabricados em três níveis
+                  de proteção, que se diferenciam pela espessura do material. A
+                  indicação depende do nível de impacto e risco do esporte
+                  praticado. Para obter mais informações sobre o protetor bucal
+                  correto para você, consulte seu dentista.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,19 +166,18 @@
                   <a href="">Protetor Bucal</a>
                   <a href="">Trauma Dental</a>
                 </div>
-
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -140,27 +185,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Previous post:Qual a melhor forma de higienizar a escova de dentes?
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Previous post:Qual a melhor forma de higienizar a escova de
+              dentes?
             </a>
-            <a href=""> Next: Next post:A importância do cálcio e vitamina D na saúde bucal<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: Next post:A importância do cálcio e vitamina D na saúde
+              bucal<i class="font-icon-post fa fa-angle-double-right"></i>
+            </a>
           </div>
         </div>
       </section>
