--- a/src/page5.html
+++ b/src/page5.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,36 +108,65 @@
               <div class="news-left first-news-page">
                 <h3>Diabetes e saúde bucal: dúvidas comuns</h3>
                 <p>12/11/2019</p>
-                <img src="./resources/img/Capa-Alinde.jpg" alt="">
-                <p class="text-news-left">A atenção com a saúde bucal deve ser prioridade na vida de qualquer pessoa, mas precisa ser redobrada em pacientes com diabetes, pois os altos níveis de glicose na saliva contribuem para a proliferação de bactérias bucais.</p>
+                <img src="./resources/img/Capa-Alinde.jpg" alt="" />
+                <p class="text-news-left">
+                  A atenção com a saúde bucal deve ser prioridade na vida de
+                  qualquer pessoa, mas precisa ser redobrada em pacientes com
+                  diabetes, pois os altos níveis de glicose na saliva contribuem
+                  para a proliferação de bactérias bucais.
+                </p>
 
-                <p>De acordo com a Organização Mundial da Saúde (OMS), mais de 422 milhões de pessoas no mundo têm diabetes. Só no Brasil, segundo dados da Sociedade Brasileira de Diabetes, são cerca de 13 milhões.</p>
+                <p>
+                  De acordo com a Organização Mundial da Saúde (OMS), mais de
+                  422 milhões de pessoas no mundo têm diabetes. Só no Brasil,
+                  segundo dados da Sociedade Brasileira de Diabetes, são cerca
+                  de 13 milhões.
+                </p>
 
-                <p>A Clínica Oral responde às principais dúvidas relacionadas à diabetes e saúde bucal. Veja:</p>
+                <p>
+                  A Clínica Oral responde às principais dúvidas relacionadas à
+                  diabetes e saúde bucal. Veja:
+                </p>
 
                 <strong>A diabetes influencia a saúde bucal?</strong>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Sim. Um paciente diabético pode ter a saúde bucal afetada, pois a doença altera a circulação sanguínea na região da boca, além dos altos níveis de glicose na saliva causarem o aumento de bactérias nocivas.
+                      Sim. Um paciente diabético pode ter a saúde bucal afetada,
+                      pois a doença altera a circulação sanguínea na região da
+                      boca, além dos altos níveis de glicose na saliva causarem
+                      o aumento de bactérias nocivas.
                     </li>
                   </ul>
                 </div>
 
-                <strong>Quem tem diabetes está mais propenso a quais problemas de saúde bucal?</strong>
+                <strong
+                  >Quem tem diabetes está mais propenso a quais problemas de
+                  saúde bucal?</strong
+                >
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Os problemas bucais mais comuns entre os diabéticos são: halitose, ardência e coceiras na boca, doenças periodontais, infecções fúngicas, cicatrização demorada, cáries, boca seca e alteração do paladar .
+                      Os problemas bucais mais comuns entre os diabéticos são:
+                      halitose, ardência e coceiras na boca, doenças
+                      periodontais, infecções fúngicas, cicatrização demorada,
+                      cáries, boca seca e alteração do paladar .
                     </li>
                   </ul>
                 </div>
 
-                <strong>Sendo diabético, como um paciente pode prevenir problemas bucais?</strong>
+                <strong
+                  >Sendo diabético, como um paciente pode prevenir problemas
+                  bucais?</strong
+                >
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Por ter uma propensão maior a problemas bucais, é importante que o diabético faça a higienização correta com uso do fio dental e de uma escova com cerdas macias. Além disso, aliar o acompanhamento regular com o dentista e o tratamento da diabetes é indispensável na prevenção.
+                      Por ter uma propensão maior a problemas bucais, é
+                      importante que o diabético faça a higienização correta com
+                      uso do fio dental e de uma escova com cerdas macias. Além
+                      disso, aliar o acompanhamento regular com o dentista e o
+                      tratamento da diabetes é indispensável na prevenção.
                     </li>
                   </ul>
                 </div>
@@ -136,12 +175,21 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Se o diabético estiver com a glicose controlada ele pode ser tratado como qualquer outro paciente, mas o indicado é haver uma interação entre o dentista e o endocrinologista para uma análise geral da saúde do paciente.
+                      Se o diabético estiver com a glicose controlada ele pode
+                      ser tratado como qualquer outro paciente, mas o indicado é
+                      haver uma interação entre o dentista e o endocrinologista
+                      para uma análise geral da saúde do paciente.
                     </li>
                   </ul>
                 </div>
 
-                <p>Os problemas gengivais são mais frequentes nos pacientes portadores de diabetes, pois a doença dificulta o combate aos processos inflamatórios e infecciosos, por este motivo é importante que o paciente frequente regularmente o dentista para consultas e exames.</p>
+                <p>
+                  Os problemas gengivais são mais frequentes nos pacientes
+                  portadores de diabetes, pois a doença dificulta o combate aos
+                  processos inflamatórios e infecciosos, por este motivo é
+                  importante que o paciente frequente regularmente o dentista
+                  para consultas e exames.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -150,17 +198,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -168,30 +216,50 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Biocorrosão: como hábitos e estilo de vida impactam a saúde buca</a>
-            <a href=""> Next: Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Biocorrosão: como hábitos e estilo de vida impactam a saúde
+              buca</a
+            >
+            <a href="">
+              Next: Mês do combate ao câncer: tudo o que você precisa saber
+              sobre câncer de boca<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
