--- a/src/page9.html
+++ b/src/page9.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,40 +106,92 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</h3>
+                <h3>
+                  Invisalign: 5 motivos para trocar os braquetes pelos
+                  alinhadores
+                </h3>
                 <p>01/10/2019</p>
-                <img src="./resources/img/Invisalign-1024x419.jpg" alt="">
-                <p class="text-news-left"> <strong>Tratamento Invisalign alia conforto e estética</strong> </p>
+                <img src="./resources/img/Invisalign-1024x419.jpg" alt="" />
+                <p class="text-news-left">
+                  <strong
+                    >Tratamento Invisalign alia conforto e estética</strong
+                  >
+                </p>
 
-                <p>Braquetes, fios, elásticos… A boa nova é que você não precisa mais enfrentar o sorriso metálico para alcançar o sorriso dos sonhos. A tecnologia dos alinhadores transparentes é uma forma praticamente invisível de corrigir os dentes por meio da união de uma tecnologia 3D, os alinhadores feitos sob medida e o acompanhamento do ortodontista.</p>
+                <p>
+                  Braquetes, fios, elásticos… A boa nova é que você não precisa
+                  mais enfrentar o sorriso metálico para alcançar o sorriso dos
+                  sonhos. A tecnologia dos alinhadores transparentes é uma forma
+                  praticamente invisível de corrigir os dentes por meio da união
+                  de uma tecnologia 3D, os alinhadores feitos sob medida e o
+                  acompanhamento do ortodontista.
+                </p>
 
-                <p>A Clínica Oral separou 5 motivos para escolher o tratamento ortodôntico Invisalign. Veja:</p>
+                <p>
+                  A Clínica Oral separou 5 motivos para escolher o tratamento
+                  ortodôntico Invisalign. Veja:
+                </p>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
                       <strong>1. Estética</strong>
-                      <p>Os alinhadores Invisalign são praticamente invisíveis e normalmente quase ninguém repara que o paciente está usando.</p>
+                      <p>
+                        Os alinhadores Invisalign são praticamente invisíveis e
+                        normalmente quase ninguém repara que o paciente está
+                        usando.
+                      </p>
                     </li>
                     <li>
                       <strong>2. Conforto</strong>
-                      <p>Como os alinhadores são removíveis, o paciente pode comer e beber o que quiser durante o tratamento, bastando simplesmente remover os alinhadores. Também é possível remover os alinhadores para escovar os dentes e usar o fio dental como hábito para manter a rotina de higiene oral. Ao contrário dos aparelhos fixos tradicionais, não existem braquetes de metal nem arames. Isto significa que, na maioria dos casos, passa-se menos tempo no consultório para fazer ajustes.</p>
+                      <p>
+                        Como os alinhadores são removíveis, o paciente pode
+                        comer e beber o que quiser durante o tratamento,
+                        bastando simplesmente remover os alinhadores. Também é
+                        possível remover os alinhadores para escovar os dentes e
+                        usar o fio dental como hábito para manter a rotina de
+                        higiene oral. Ao contrário dos aparelhos fixos
+                        tradicionais, não existem braquetes de metal nem arames.
+                        Isto significa que, na maioria dos casos, passa-se menos
+                        tempo no consultório para fazer ajustes.
+                      </p>
                     </li>
                     <li>
                       <strong>3. Rapidez</strong>
-                      <p>Em média, os tratamentos são realizados 50% mais rápido que os aparelhos ortodônticos comuns. Vale lembrar que o tempo de tratamento depende muito do quadro clínico do paciente.</p>
+                      <p>
+                        Em média, os tratamentos são realizados 50% mais rápido
+                        que os aparelhos ortodônticos comuns. Vale lembrar que o
+                        tempo de tratamento depende muito do quadro clínico do
+                        paciente.
+                      </p>
                     </li>
                     <li>
                       <strong>4. Previsão de resultado</strong>
-                      <p>Após o escaneamento total dos dentes, é utilizada uma tecnologia avançada de imagens de computador em 3D para demonstrar ao paciente o plano de tratamento completo com base na prescrição do seu ortodontista, desde a posição inicial dos seus dentes até a posição final pretendida.</p>
+                      <p>
+                        Após o escaneamento total dos dentes, é utilizada uma
+                        tecnologia avançada de imagens de computador em 3D para
+                        demonstrar ao paciente o plano de tratamento completo
+                        com base na prescrição do seu ortodontista, desde a
+                        posição inicial dos seus dentes até a posição final
+                        pretendida.
+                      </p>
                     </li>
                     <li>
                       <strong>5. Menos dor</strong>
-                      <p>Os alinhadores feitos com o material SmartTrack são mais confortáveis, pois são produzidos exatamente à medida da sua linha gengival para um melhor encaixe e são fáceis de colocar e retirar. Além disso, são também menos dolorosos do que os aparelhos de metal.</p>
+                      <p>
+                        Os alinhadores feitos com o material SmartTrack são mais
+                        confortáveis, pois são produzidos exatamente à medida da
+                        sua linha gengival para um melhor encaixe e são fáceis
+                        de colocar e retirar. Além disso, são também menos
+                        dolorosos do que os aparelhos de metal.
+                      </p>
                     </li>
                   </ul>
                 </div>
 
-                <p>Agende sua consulta e converse com seu ortodontista sobre o tratamento e o sorriso dos sonhos!</p>
+                <p>
+                  Agende sua consulta e converse com seu ortodontista sobre o
+                  tratamento e o sorriso dos sonhos!
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -138,17 +200,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -156,26 +218,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Guia básico de saúde bucal : dicas para toda família</a>
-            <a href=""> Next: Mau hálito: da prevenção ao tratamento<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Guia básico de saúde bucal : dicas para toda família</a
+            >
+            <a href="">
+              Next: Mau hálito: da prevenção ao tratamento<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
