--- a/src/blog-page-5.html
+++ b/src/blog-page-5.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,43 +108,63 @@
               <div class="news-left first-news-page">
                 <a href="">
                   <!-- <img src="./resources/img/" alt=""> -->
-                <h3>A importância do cálcio e vitamina D na saúde bucal</h3>
-              </a>
+                  <h3>A importância do cálcio e vitamina D na saúde bucal</h3>
+                </a>
                 <p class="date-news-left">22/11/2016</p>
-                <p class="text-news-left">1.Por que a cálcio e a vitamina D fazem tão bem para a saúde bucal? O Cálcio é um nutriente importante para a saúde geral e bem estar, sendo considerado um mineral essencial para a saúde dos ossos, dentes e  gengivas. A vitamina D é uma vitamina essencial que promove a absorção e retenção…</p>
+                <p class="text-news-left">
+                  1.Por que a cálcio e a vitamina D fazem tão bem para a saúde
+                  bucal? O Cálcio é um nutriente importante para a saúde geral e
+                  bem estar, sendo considerado um mineral essencial para a saúde
+                  dos ossos, dentes e gengivas. A vitamina D é uma vitamina
+                  essencial que promove a absorção e retenção…
+                </p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
                   <!-- <img src="./resources/img/" alt=""> -->
-                <h3>Protetor Bucal para Esportes</h3>
-              </a>
+                  <h3>Protetor Bucal para Esportes</h3>
+                </a>
                 <p class="date-news-left">22/11/2016</p>
-                <p class="text-news-left">O protetor bucal é um aparelho que se encaixa nos dentes para protegê-los contra qualquer tipo de impacto. Deve ser usado sempre que a pessoa participa de atividades esportivas que envolvam a possibilidade de quedas, contatos físicos bruscos, choques com objetos voadores, ou qualquer atividade que possa produzir ferimentos na área da boca. Segundo uma…</p>
+                <p class="text-news-left">
+                  O protetor bucal é um aparelho que se encaixa nos dentes para
+                  protegê-los contra qualquer tipo de impacto. Deve ser usado
+                  sempre que a pessoa participa de atividades esportivas que
+                  envolvam a possibilidade de quedas, contatos físicos bruscos,
+                  choques com objetos voadores, ou qualquer atividade que possa
+                  produzir ferimentos na área da boca. Segundo uma…
+                </p>
                 <a href="">Read More >></a>
               </div>
 
               <div class="news-left">
                 <a href="">
                   <!-- <img src="./resources/img/" alt=""> -->
-                <h3>Qual a melhor forma de higienizar a escova de dentes?</h3>
-              </a>
+                  <h3>Qual a melhor forma de higienizar a escova de dentes?</h3>
+                </a>
                 <p class="date-news-left">22/11/2016</p>
-                <p class="text-news-left">1.Qual é a melhor forma de higienizar a escova de dente? Após a escovação, a escova deve ser bem lavada em água corrente, para retirar os resíduos de comida e creme dental. Retirar o excesso de água batendo o cabo da escova na pia. Não é recomendado enxugar a escova com toalha, pois elas também podem…</p>
+                <p class="text-news-left">
+                  1.Qual é a melhor forma de higienizar a escova de dente? Após
+                  a escovação, a escova deve ser bem lavada em água corrente,
+                  para retirar os resíduos de comida e creme dental. Retirar o
+                  excesso de água batendo o cabo da escova na pia. Não é
+                  recomendado enxugar a escova com toalha, pois elas também
+                  podem…
+                </p>
                 <a href="">Read More >></a>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -142,19 +172,31 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
@@ -185,7 +227,6 @@
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
