--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -33,96 +33,112 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
         </nav>
-      </header> -->
+      </header>
 
       <section class="s-dayClinic">
-          <div class="info-dayClinic">
-            <div class="dayClinic-left">
-              <div class="content-dayClinic-left">
-                <h2>Day Clinic</h2>
-                <p>
-                  Quando falamos em Day Clinic estamos nos referindo ao
-                  tratamento odontológico proporcionando economia de tempo ao
-                  reduzir as várias visitas semanais ao consultório para um
-                  menor número de consultas possível. Para isso é feito um
-                  planejamento para a realização de um número maior de
-                  procedimentos em um único dia, otimizando o resultado em um
-                  menor tempo de tratamento, permitindo que pacientes com
-                  escassez de tempo possam realizar o tratamento de forma mais
-                  rápida sem perder em qualidade e segurança do resultado.
-                </p>
-                <p>
-                  Possuímos toda a infra-estrutura e equipe integrada para
-                  realizar o Day Clinic com todo o conforto para você sem nenhum
-                  custo adicional. É imprescindível agendar uma Primeira
-                  Consulta para saber se o tratamento que você necessita pode
-                  ser realizado no sistema Day Clinic.
-                </p>
-                <a href="">Agende sua consulta</a>
-              </div>
-            </div>
-            <div class="dayClinic-right">
-              <div class="img-right-dayClinc">
-                <img
-                  src="./resources/img/Restauração-Dentária-day-clinic-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-dayClinic">
+          <div class="dayClinic-left">
+            <div class="content-dayClinic-left">
+              <h2>Day Clinic</h2>
+              <p>
+                Quando falamos em Day Clinic estamos nos referindo ao tratamento
+                odontológico proporcionando economia de tempo ao reduzir as
+                várias visitas semanais ao consultório para um menor número de
+                consultas possível. Para isso é feito um planejamento para a
+                realização de um número maior de procedimentos em um único dia,
+                otimizando o resultado em um menor tempo de tratamento,
+                permitindo que pacientes com escassez de tempo possam realizar o
+                tratamento de forma mais rápida sem perder em qualidade e
+                segurança do resultado.
+              </p>
+              <p>
+                Possuímos toda a infra-estrutura e equipe integrada para
+                realizar o Day Clinic com todo o conforto para você sem nenhum
+                custo adicional. É imprescindível agendar uma Primeira Consulta
+                para saber se o tratamento que você necessita pode ser realizado
+                no sistema Day Clinic.
+              </p>
+              <a href="">Agende sua consulta</a>
             </div>
           </div>
+          <div class="dayClinic-right">
+            <div class="img-right-dayClinc">
+              <img
+                src="./resources/img/Restauração-Dentária-day-clinic-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="s-equipe">
@@ -261,6 +277,5 @@
     ></script>
 
     <script src="./resources/js/apiGoogle.js"></script>
-
   </body>
 </html>
