--- a/src/dentes-do-siso.html
+++ b/src/dentes-do-siso.html
@@ -31,99 +31,115 @@
       rel="stylesheet"
     />
 
-   <!--Carrousel-->
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
         </nav>
-      </header> -->
+      </header>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Dentes do Siso</h2>
-                <p>
-                  Esse dente geralmente irrompe na boca no final da adolescência
-                  ou próximo aos vinte anos, e na maioria das vezes, eles estão
-                  mal posicionados e precisam ser removidos. A posição e o
-                  ângulo desfavoráveis para a sua erupção podem causar danos aos
-                  dentes adjacentes, ao osso, e aos nervos localizados próximos
-                  a ele. Os dentes do siso também podem estar impactados. Dentes
-                  impactados não irrompem ou irrompem parcialmente na boca
-                  devido ao seu tamanho e ausência de espaço adequando para a
-                  sua acomodação. A erupção parcial dos dentes do siso permite
-                  uma abertura para a entrada de bactérias ao seu redor, o que
-                  pode causar uma infecção que resultará em dor, inchaço e
-                  dificuldade de abertura e fechamento da boca. Além de serem
-                  mais propensos ao aparecimento de cáries e desenvolvimento de
-                  doenças da gengiva devido à sua localização de difícil acesso
-                  da escova e do fio dental, dificultando a higienização. É
-                  recomendado que os dentes do siso sejam extraídos antes mesmo
-                  de desenvolverem qualquer tipo de problema. Dessa forma
-                  pode-se evitar extrações dolorosas e complicadas.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Dentes-do-Siso-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Dentes do Siso</h2>
+              <p>
+                Esse dente geralmente irrompe na boca no final da adolescência
+                ou próximo aos vinte anos, e na maioria das vezes, eles estão
+                mal posicionados e precisam ser removidos. A posição e o ângulo
+                desfavoráveis para a sua erupção podem causar danos aos dentes
+                adjacentes, ao osso, e aos nervos localizados próximos a ele. Os
+                dentes do siso também podem estar impactados. Dentes impactados
+                não irrompem ou irrompem parcialmente na boca devido ao seu
+                tamanho e ausência de espaço adequando para a sua acomodação. A
+                erupção parcial dos dentes do siso permite uma abertura para a
+                entrada de bactérias ao seu redor, o que pode causar uma
+                infecção que resultará em dor, inchaço e dificuldade de abertura
+                e fechamento da boca. Além de serem mais propensos ao
+                aparecimento de cáries e desenvolvimento de doenças da gengiva
+                devido à sua localização de difícil acesso da escova e do fio
+                dental, dificultando a higienização. É recomendado que os dentes
+                do siso sejam extraídos antes mesmo de desenvolverem qualquer
+                tipo de problema. Dessa forma pode-se evitar extrações dolorosas
+                e complicadas.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Dentes-do-Siso-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
