--- a/src/lente-de-contato-dental.html
+++ b/src/lente-de-contato-dental.html
@@ -31,92 +31,108 @@
       rel="stylesheet"
     />
 
-   <!--Carrousel-->
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
-      <!-- <header>
-        <nav class="container">
-          <a href="" class="agendarHeader">
-            <i class="fa-solid fa-phone"></i> Agendar Consulta</a
-          >
-          <ul>
-            <li><a href="">Início</a></li>
-            <li class="dropdown">
-              <a href="">Tratamentos</a>
-              <ul class="dropdown-menu">
-                <li class="submenu">
-                  <a href="">Estética</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Lente de Contato Dental</a></li>
-                    <li><a href="">Facetas de Porcelana</a></li>
-                    <li><a href="">Clareamento Dental</a></li>
-                    <li><a href="">Coroas de Porcelana</a></li>
-                    <li><a href="">Restauração Dentária</a></li>
-                  </ul>
-                </li>
-                <li class="submenu">
-                  <a href="">Cirurgia</a>
-                  <ul class="submenu-menu">
-                    <li><a href="">Dentes do siso</a></li>
-                    <li><a href="">Implante Dentário</a></li>
-                    <li><a href="">Cirurgia Ortognática</a></li>
-                  </ul>
-                </li>
-                <li><a href="">Ortodontia</a></li>
-                <li><a href="">Tratamento de Canal (Endodontia)</a></li>
-                <li><a href="">Tratamento de Gengiva (Periodontia)</a></li>
-                <li><a href="">Disfunção do ATM</a></li>
-                <li><a href="">Odontologia Pré-Natal</a></li>
-                <li><a href="">Odontopediatria</a></li>
-              </ul>
-            </li>
-            <li><a href="">Day Clinic</a></li>
-            <li><a href="">Equipe</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Endereço</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
+      <header>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </div>
         </nav>
-      </header> -->
+      </header>
 
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
-          <div class="info-tratamento-base">
-            <div class="tratamento-base-left p-10">
-              <div class="content-tratamentoBase-left">
-                <h2>Lentes de Contato Dental</h2>
-                <p>
-                  Com a evolução das propriedades mecânicas das cerâmicas
-                  odontológicas, hoje é possível construir estruturas cerâmicas
-                  ultra-finas (lentes de contato dentárias) com apenas 0,2 mm de
-                  espessura que possibilitam um tratamento altamente estético e
-                  minimamente invasivo, com mínimo desgaste ou em determinadas
-                  situações nenhum desgaste dentário. As lentes de contato são
-                  normalmente indicadas por razões estéticas, sendo capazes de
-                  corrigir desde pequenas imperfeições de forma dental até
-                  dentes anteriores com pequenas fraturas ou com diastemas.
-                  Podem ser usadas ainda para disfarçar manchas dentárias e
-                  pequenas descolorações.
-                </p>
-              </div>
-            </div>
-            <div class="tratamentoBase-right">
-              <div class="img-right-tratamentoBase">
-                <img
-                  src="./resources/img/Facetas-de-Porcelana-Vila-Olímpia.jpg"
-                  alt=""
-                  width="1000"
-                  height="667"
-                />
-              </div>
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Lentes de Contato Dental</h2>
+              <p>
+                Com a evolução das propriedades mecânicas das cerâmicas
+                odontológicas, hoje é possível construir estruturas cerâmicas
+                ultra-finas (lentes de contato dentárias) com apenas 0,2 mm de
+                espessura que possibilitam um tratamento altamente estético e
+                minimamente invasivo, com mínimo desgaste ou em determinadas
+                situações nenhum desgaste dentário. As lentes de contato são
+                normalmente indicadas por razões estéticas, sendo capazes de
+                corrigir desde pequenas imperfeições de forma dental até dentes
+                anteriores com pequenas fraturas ou com diastemas. Podem ser
+                usadas ainda para disfarçar manchas dentárias e pequenas
+                descolorações.
+              </p>
             </div>
           </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Facetas-de-Porcelana-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
         <!-- </div> -->
       </section>
 
@@ -240,7 +256,7 @@
         </div>
       </footer>
     </main>
-    
+
     <script src="./resources/js/main.js"></script>
 
     <!--API Google-->
@@ -258,6 +274,5 @@
 
     <!--Lógica API Google Depoimentos-->
     <script src="./resources/js/apiGoogle.js"></script>
-
   </body>
 </html>
