--- a/src/page11.html
+++ b/src/page11.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,22 +106,52 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Próteses protocolo e implantes: da saúde ao resgate da autoestima</h3>
+                <h3>
+                  Próteses protocolo e implantes: da saúde ao resgate da
+                  autoestima
+                </h3>
                 <p>12/03/2019</p>
-                <img src="./resources/img/Coroas-de-Porcelana-Vila-Olímpia (1).jpg" alt="">
-                <p class="text-news-left">Cansados de limitações, como dificuldades na mastigação e fala, os portadores de dentadura e prótese removível buscam soluções confortáveis, seguras e que, por fim, resgatem a autoestima.</p>
+                <img
+                  src="./resources/img/Coroas-de-Porcelana-Vila-Olímpia (1).jpg"
+                  alt=""
+                />
+                <p class="text-news-left">
+                  Cansados de limitações, como dificuldades na mastigação e
+                  fala, os portadores de dentadura e prótese removível buscam
+                  soluções confortáveis, seguras e que, por fim, resgatem a
+                  autoestima.
+                </p>
 
-                <p>Dados do Instituto Brasileiro de Geografia e Estatística (IBGE) mostram um grande crescimento do número de idosos no Brasil entre 2012 e 2017, um salto de 19,5%. E geralmente, é nessa faixa etária que estão os mais necessitados desse tipo de prótese.</p>
+                <p>
+                  Dados do Instituto Brasileiro de Geografia e Estatística
+                  (IBGE) mostram um grande crescimento do número de idosos no
+                  Brasil entre 2012 e 2017, um salto de 19,5%. E geralmente, é
+                  nessa faixa etária que estão os mais necessitados desse tipo
+                  de prótese.
+                </p>
 
-                <p>Essas pessoas viveram sua infância e juventude em um tempo em que a prevenção de cárie e das doenças periodontais não eram conhecidas e ou divulgadas, e hoje sofrem as consequências por terem perdido seus dentes.</p>
+                <p>
+                  Essas pessoas viveram sua infância e juventude em um tempo em
+                  que a prevenção de cárie e das doenças periodontais não eram
+                  conhecidas e ou divulgadas, e hoje sofrem as consequências por
+                  terem perdido seus dentes.
+                </p>
 
-                <p>A Clínica Oral destaca informações importantes sobre as próteses protocolos. Veja:</p>
+                <p>
+                  A Clínica Oral destaca informações importantes sobre as
+                  próteses protocolos. Veja:
+                </p>
 
                 <strong>O que é?</strong>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Prótese protocolo: utilizada como solução aos casos em que o paciente já não tem dentes naturais, ela pode ser projetada tanto para arcada superior quanto inferior. Trata-se de uma prótese parecida com a dentadura (prótese móvel), porém é fixada sobre implantes dentários previamente instalados.
+                      Prótese protocolo: utilizada como solução aos casos em que
+                      o paciente já não tem dentes naturais, ela pode ser
+                      projetada tanto para arcada superior quanto inferior.
+                      Trata-se de uma prótese parecida com a dentadura (prótese
+                      móvel), porém é fixada sobre implantes dentários
+                      previamente instalados.
                     </li>
                   </ul>
                 </div>
@@ -120,22 +160,36 @@
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Saúde: Por se tratar de uma alternativa fixa, garante ao paciente, restabelecimento da   capacidade mastigatória, que é a responsável pela nutrição do organismo.
+                      Saúde: Por se tratar de uma alternativa fixa, garante ao
+                      paciente, restabelecimento da capacidade mastigatória, que
+                      é a responsável pela nutrição do organismo.
                     </li>
                     <li>
-                      Estética: A similaridade com os dentes naturais e restabelecimento das proporções do rosto (dimensão vertical), confere um rejuvenescimento facial proporcionando um aspecto estético muito agradável.
+                      Estética: A similaridade com os dentes naturais e
+                      restabelecimento das proporções do rosto (dimensão
+                      vertical), confere um rejuvenescimento facial
+                      proporcionando um aspecto estético muito agradável.
                     </li>
                     <li>
-                      Rapidez: a execução desse procedimento, que inclui os implantes e a instalação da prótese protocolo pode ser concluída em, no máximo, três dias.
+                      Rapidez: a execução desse procedimento, que inclui os
+                      implantes e a instalação da prótese protocolo pode ser
+                      concluída em, no máximo, três dias.
                     </li>
                     <li>
-                      Durabilidade: é um procedimento que tem bastante longevidade, e na necessidade de substituição da prótese protocolo por desgastes, os implantes já estarão implantados.
+                      Durabilidade: é um procedimento que tem bastante
+                      longevidade, e na necessidade de substituição da prótese
+                      protocolo por desgastes, os implantes já estarão
+                      implantados.
                     </li>
                     <li>
-                      Segurança:  Por ser fixada aos implantes, o portador desse tipo de prótese se sente seguro de que a prótese não vai se soltar quando ele sorrir, mastigar, falar e beijar.
+                      Segurança: Por ser fixada aos implantes, o portador desse
+                      tipo de prótese se sente seguro de que a prótese não vai
+                      se soltar quando ele sorrir, mastigar, falar e beijar.
                     </li>
                     <li>
-                      Autoestima: A prótese protocolo devolve a auto estima ao paciente, visto que todos os benefícios desse tipo de prótese impacta diretamente na sua qualidade de vida.
+                      Autoestima: A prótese protocolo devolve a auto estima ao
+                      paciente, visto que todos os benefícios desse tipo de
+                      prótese impacta diretamente na sua qualidade de vida.
                     </li>
                   </ul>
                 </div>
@@ -149,17 +203,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -167,26 +221,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 7 mitos e verdades do clareamento dental</a>
-            <a href=""> Next: Guia básico de saúde bucal : dicas para toda família<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 7
+              mitos e verdades do clareamento dental</a
+            >
+            <a href="">
+              Next: Guia básico de saúde bucal : dicas para toda família<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
