--- a/src/page13.html
+++ b/src/page13.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,38 +108,106 @@
               <div class="news-left first-news-page">
                 <h3>Bruxismo: combata o problema!</h3>
                 <p>07/01/2019</p>
-                <img src="./resources/img/bruxismo.jpg" alt="">
-                <p class="text-news-left">Você já se pegou apertando ou rangendo os dentes, as vezes até durante o dia? Já reclamaram que você faz muito barulho com os dentes quando está dormindo? Se sua resposta for sim para pelo menos uma dessas perguntas, você pode ter bruxismo.</p>
+                <img src="./resources/img/bruxismo.jpg" alt="" />
+                <p class="text-news-left">
+                  Você já se pegou apertando ou rangendo os dentes, as vezes até
+                  durante o dia? Já reclamaram que você faz muito barulho com os
+                  dentes quando está dormindo? Se sua resposta for sim para pelo
+                  menos uma dessas perguntas, você pode ter bruxismo.
+                </p>
 
-                <p>O bruxismo é uma desordem funcional que envolve ranger ou apertar dos dentes durante a noite, que caracteriza um distúrbio do sono, ou mesmo durante o dia, caracterizando um hábito parafuncional. A queixa mais comum do paciente, e muitas vezes do companheiro de quarto, é o barulho que se faz com os dentes durante o sono: o companheiro acorda com o barulho, e o paciente acorda com a boca “travada”. Porém, outros sinais, que são consequências do bruxismo, podem levantar a suspeita da sua presença, como o desgaste, fratura e amolecimento dos dentes, dores de cabeça, sensação de dor e zumbido no ouvido, dor no pescoço, na mandíbula e nos músculos da face. Quando persiste, pode gerar até consequências nas articulações temporo mandibulares, como estalos durante a mastigação, e dores cada vez mais frequentes nas articulações.</p>
+                <p>
+                  O bruxismo é uma desordem funcional que envolve ranger ou
+                  apertar dos dentes durante a noite, que caracteriza um
+                  distúrbio do sono, ou mesmo durante o dia, caracterizando um
+                  hábito parafuncional. A queixa mais comum do paciente, e
+                  muitas vezes do companheiro de quarto, é o barulho que se faz
+                  com os dentes durante o sono: o companheiro acorda com o
+                  barulho, e o paciente acorda com a boca “travada”. Porém,
+                  outros sinais, que são consequências do bruxismo, podem
+                  levantar a suspeita da sua presença, como o desgaste, fratura
+                  e amolecimento dos dentes, dores de cabeça, sensação de dor e
+                  zumbido no ouvido, dor no pescoço, na mandíbula e nos músculos
+                  da face. Quando persiste, pode gerar até consequências nas
+                  articulações temporo mandibulares, como estalos durante a
+                  mastigação, e dores cada vez mais frequentes nas articulações.
+                </p>
 
-                <p>Para auxiliar na autoavaliação, A Clínica Oral discorre sobre causas e tratamento do bruxismo, veja:</p>
+                <p>
+                  Para auxiliar na autoavaliação, A Clínica Oral discorre sobre
+                  causas e tratamento do bruxismo, veja:
+                </p>
 
                 <strong>Causas</strong>
-                <p>De acordo com dados da Organização Mundial da Saúde (OMS), cerca de 40% da população brasileira sofre com o bruxismo. Situações de estresse, tensão e ansiedade são fatores que estão relacionados com o apertamento e ranger dos dentes, por meio de processos de acontecem no nosso cérebro e que caracterizam um distúrbio de movimento do sono que, nesse caso, acomete a mandíbula e músculos relacionados a mastigação. Outras causas podem estar presentes, como fatores genéticos. Hoje em dia, sabe-se que problemas de oclusão dentária tem influência muito pequena sobre a instalação do quadro.</p>
+                <p>
+                  De acordo com dados da Organização Mundial da Saúde (OMS),
+                  cerca de 40% da população brasileira sofre com o bruxismo.
+                  Situações de estresse, tensão e ansiedade são fatores que
+                  estão relacionados com o apertamento e ranger dos dentes, por
+                  meio de processos de acontecem no nosso cérebro e que
+                  caracterizam um distúrbio de movimento do sono que, nesse
+                  caso, acomete a mandíbula e músculos relacionados a
+                  mastigação. Outras causas podem estar presentes, como fatores
+                  genéticos. Hoje em dia, sabe-se que problemas de oclusão
+                  dentária tem influência muito pequena sobre a instalação do
+                  quadro.
+                </p>
 
                 <strong>Tratamento</strong>
-                <p>Não se fala sobre cura para o bruxismo, mas sim controle das suas consequências e proteção das estruturas por ele afetadas. Prevenindo-se essas consequências, melhora-se a qualidade de vida, principalmente quando evitamos a instalação de dor. Por se tratar de um problema relacionado a questões emocionais e psicológicas, o ideal é identificar os gatilhos de stress no dia a dia, ou seja, os motivos geradores de tensão, ansiedade e estresse. Por isso, o tratamento deve ser multi-profissional: realização de atividades físicas, tratamento de quadros de ansiedade aguda e depressão, e, em alguns casos, até acompanhamento psicológico devem fazer parte do “pacote” de tratamento.</p>
-                <p>Diante de uma avaliação, o dentista poderá recomendar o uso de placas de mordida (os dispositivos interoclusais) para proteger os dentes e as articulações. A placa não tem como objetivo fazer o paciente parar de ranger, mas sim evitar desgaste das estruturas. Além disso, podem ser recomendados em consultório exercícios para relaxar os músculos da face durante o dia.</p>
-                <p>Uma dica importante é fazer uma boa higiene do sono: procure usar seu tempo em casa, à noite, para relaxar, diminuindo a intensidade das luzes conforme se aproxima a hora de dormir. Evite ingestão de cafeína nesse período! Importante também é evitar televisão e uso de outras telas (como tablets e celulares) quando já estiver na cama. Condicione seu cérebro a perceber que seu quarto é espaço de descanso!</p>
-                <p>Lembre-se: consultar-se com regularidade com seu dentista torna possível o diagnóstico precoce e tratamento desses e outros problemas bucais.</p>
+                <p>
+                  Não se fala sobre cura para o bruxismo, mas sim controle das
+                  suas consequências e proteção das estruturas por ele afetadas.
+                  Prevenindo-se essas consequências, melhora-se a qualidade de
+                  vida, principalmente quando evitamos a instalação de dor. Por
+                  se tratar de um problema relacionado a questões emocionais e
+                  psicológicas, o ideal é identificar os gatilhos de stress no
+                  dia a dia, ou seja, os motivos geradores de tensão, ansiedade
+                  e estresse. Por isso, o tratamento deve ser
+                  multi-profissional: realização de atividades físicas,
+                  tratamento de quadros de ansiedade aguda e depressão, e, em
+                  alguns casos, até acompanhamento psicológico devem fazer parte
+                  do “pacote” de tratamento.
+                </p>
+                <p>
+                  Diante de uma avaliação, o dentista poderá recomendar o uso de
+                  placas de mordida (os dispositivos interoclusais) para
+                  proteger os dentes e as articulações. A placa não tem como
+                  objetivo fazer o paciente parar de ranger, mas sim evitar
+                  desgaste das estruturas. Além disso, podem ser recomendados em
+                  consultório exercícios para relaxar os músculos da face
+                  durante o dia.
+                </p>
+                <p>
+                  Uma dica importante é fazer uma boa higiene do sono: procure
+                  usar seu tempo em casa, à noite, para relaxar, diminuindo a
+                  intensidade das luzes conforme se aproxima a hora de dormir.
+                  Evite ingestão de cafeína nesse período! Importante também é
+                  evitar televisão e uso de outras telas (como tablets e
+                  celulares) quando já estiver na cama. Condicione seu cérebro a
+                  perceber que seu quarto é espaço de descanso!
+                </p>
+                <p>
+                  Lembre-se: consultar-se com regularidade com seu dentista
+                  torna possível o diagnóstico precoce e tratamento desses e
+                  outros problemas bucais.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
                   <a href="">Bruxismo</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -137,26 +215,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: 10 cuidados com a saúde bucal na terceira idade</a>
-            <a href=""> Next: Next post:7 mitos e verdades do clareamento dental<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              10 cuidados com a saúde bucal na terceira idade</a
+            >
+            <a href="">
+              Next: Next post:7 mitos e verdades do clareamento dental<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
