--- a/src/page18.html
+++ b/src/page18.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,17 +109,50 @@
                 <h3>Avulsão dentária: o que fazer?</h3>
                 <p>05/03/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Ser criança é achar que o mundo é feito de fantasias, sorrisos e brincadeiras. Ser criança é olhar e não ver o perigo..</p>
+                <p class="text-news-left">
+                  Ser criança é achar que o mundo é feito de fantasias, sorrisos
+                  e brincadeiras. Ser criança é olhar e não ver o perigo..
+                </p>
 
-                <p>Traumas bucais e/ou dentários são muito comuns em crianças, principalmente na primeira infância (0 a 3 anos), pois essa é uma fase de aprender e explorar o ambiente.</p>
+                <p>
+                  Traumas bucais e/ou dentários são muito comuns em crianças,
+                  principalmente na primeira infância (0 a 3 anos), pois essa é
+                  uma fase de aprender e explorar o ambiente.
+                </p>
 
-                <p>Um dente que foi totalmente deslocado de sua cavidade é chamado de dente avulsionado. Traumatismos com avulsão são três vezes mais comuns em meninos do que em meninas. As lesões traumáticas são preocupantes devido à proximidade do dente decíduo (dente de leite) com o germe do dente permanente. Os dentes superiores são mais frequentemente afetados, quando a criança bate a boca. </p>
+                <p>
+                  Um dente que foi totalmente deslocado de sua cavidade é
+                  chamado de dente avulsionado. Traumatismos com avulsão são
+                  três vezes mais comuns em meninos do que em meninas. As lesões
+                  traumáticas são preocupantes devido à proximidade do dente
+                  decíduo (dente de leite) com o germe do dente permanente. Os
+                  dentes superiores são mais frequentemente afetados, quando a
+                  criança bate a boca.
+                </p>
 
                 <p>Você pode salvar o dente!</p>
 
-                <p>Um dente que foi avulsionado pode ser reimplantado no local em que houve o acidente, desde que se trate de um dente permanente (dentes de leite não devem ser reimplantados) e limpo com bastante cuidado. Em algumas situações, o prognóstico pode ser bem melhor do que  se esperar que o paciente seja transportado ao local adequado para tratamento. É fundamental que a criança, independente de o dente ser reimplantado no local ou não, seja imediatamente levada ao profissional especializado para tratamento e conduta após a queda. </p>
+                <p>
+                  Um dente que foi avulsionado pode ser reimplantado no local em
+                  que houve o acidente, desde que se trate de um dente
+                  permanente (dentes de leite não devem ser reimplantados) e
+                  limpo com bastante cuidado. Em algumas situações, o
+                  prognóstico pode ser bem melhor do que se esperar que o
+                  paciente seja transportado ao local adequado para tratamento.
+                  É fundamental que a criança, independente de o dente ser
+                  reimplantado no local ou não, seja imediatamente levada ao
+                  profissional especializado para tratamento e conduta após a
+                  queda.
+                </p>
 
-                <p>Sendo assim, nossa atenção deve ser redobrada! Todas as vezes que ocorrer algum trauma, um odontopediatra deve ser informado. Esse profissional realizará todos os exames necessários para identificar possíveis alterações. Inclusive realizará uma radiografia para acompanhamento periódico do caso, porque alterações tardias também podem acontecer.</p>
+                <p>
+                  Sendo assim, nossa atenção deve ser redobrada! Todas as vezes
+                  que ocorrer algum trauma, um odontopediatra deve ser
+                  informado. Esse profissional realizará todos os exames
+                  necessários para identificar possíveis alterações. Inclusive
+                  realizará uma radiografia para acompanhamento periódico do
+                  caso, porque alterações tardias também podem acontecer.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,17 +163,17 @@
                   <a href="">Odontopediatria</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -138,26 +181,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: O aparelho Invisalign realmente funciona?</a>
-            <a href=""> Next: Qualquer paciente pode realizar o clareamento dental?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: O
+              aparelho Invisalign realmente funciona?</a
+            >
+            <a href="">
+              Next: Qualquer paciente pode realizar o clareamento dental?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
