--- a/src/page19.html
+++ b/src/page19.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,34 +109,56 @@
                 <h3>O aparelho Invisalign realmente funciona?</h3>
                 <p>21/02/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Um dos maiores questionamentos no dia a dia clínico é em relação à efetividade do aparelho ortodôntico Invisalign. Muitos pacientes duvidam que o material, para além da estética, seja realmente eficaz. O que muitos não sabem é que a empresa responsável pela confecção do Invisalign, a Align Technology, é atualmente uma das empresas que mais investem em tecnologia no mundo. Fundada em 1997 nos EUA, ela conta com uma extensa equipe técnica composta de engenheiros, biomédicos, ortodontistas entre outros que trabalham diariamente para o aprimoramento do material.</p>
+                <p class="text-news-left">
+                  Um dos maiores questionamentos no dia a dia clínico é em
+                  relação à efetividade do aparelho ortodôntico Invisalign.
+                  Muitos pacientes duvidam que o material, para além da
+                  estética, seja realmente eficaz. O que muitos não sabem é que
+                  a empresa responsável pela confecção do Invisalign, a Align
+                  Technology, é atualmente uma das empresas que mais investem em
+                  tecnologia no mundo. Fundada em 1997 nos EUA, ela conta com
+                  uma extensa equipe técnica composta de engenheiros,
+                  biomédicos, ortodontistas entre outros que trabalham
+                  diariamente para o aprimoramento do material.
+                </p>
 
-                <p>Os alinhadores atualmente são feitos de um termoplástico médico com grau de biocompatibilidade elevado que é desenhado para fornecer uma combinação melhorada das forças do alinhador e conforto do paciente.</p>
+                <p>
+                  Os alinhadores atualmente são feitos de um termoplástico
+                  médico com grau de biocompatibilidade elevado que é desenhado
+                  para fornecer uma combinação melhorada das forças do alinhador
+                  e conforto do paciente.
+                </p>
 
-                <p>Em 2016 foi lançado no mercado o mais atual material, o Invisalign G7, que representa um conjunto de recursos projetados para melhorar a finalização e é alimentado pela tecnologia SmartStage, um algaritmo avançado que determina o caminho ideal do movimento dentário e o formato do alinhador de cada estágio do tratamento.</p>
+                <p>
+                  Em 2016 foi lançado no mercado o mais atual material, o
+                  Invisalign G7, que representa um conjunto de recursos
+                  projetados para melhorar a finalização e é alimentado pela
+                  tecnologia SmartStage, um algaritmo avançado que determina o
+                  caminho ideal do movimento dentário e o formato do alinhador
+                  de cada estágio do tratamento.
+                </p>
 
-                <p>Conheça características do SmartTrack, material do Invisalign</p>
+                <p>
+                  Conheça características do SmartTrack, material do Invisalign
+                </p>
                 <div class="list-itens-news-page">
                   <ul>
+                    <li>Força mais constante</li>
+                    <li>Alta elasticidade</li>
+                    <li>Adaptação mais precisa</li>
+                    <li>Mesma transparência e estética do material anterior</li>
                     <li>
-                      Força mais constante
-                    </li>
-                    <li>
-                      Alta elasticidade
-                    </li>
-                    <li>
-                      Adaptação mais precisa
-                    </li>
-                    <li>
-                      Mesma transparência e estética do material anterior
-                    </li>
-                    <li>
-                      Totalmente compatível com características SmartForce e todos os protocolos clínicos
+                      Totalmente compatível com características SmartForce e
+                      todos os protocolos clínicos
                     </li>
                   </ul>
                 </div>
 
-                <p>Portanto, já está mais que comprovada a eficácia, eficiência e vantagem do uso dos alinhadores Invisalign para correção das más-oclusões.</p>
+                <p>
+                  Portanto, já está mais que comprovada a eficácia, eficiência e
+                  vantagem do uso dos alinhadores Invisalign para correção das
+                  más-oclusões.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -140,17 +172,17 @@
                   <a href="">Ortodontia Estética</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -158,26 +190,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A Clinica Oral recebe título Diamond Invisalign Provider</a>
-            <a href=""> Next: Avulsão dentária: o que fazer?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A
+              Clinica Oral recebe título Diamond Invisalign Provider</a
+            >
+            <a href="">
+              Next: Avulsão dentária: o que fazer?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
