--- a/src/page20.html
+++ b/src/page20.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,16 +106,46 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>A Clinica Oral recebe título Diamond Invisalign Provider</h3>
+                <h3>
+                  A Clinica Oral recebe título Diamond Invisalign Provider
+                </h3>
                 <p>29/01/2018</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">O tratamento ortodôntico com os alinhadores Invisalign® é considerado um dos mais modernos disponíveis no mercado. Ele foi criado com a intenção de ser uma alternativa para aqueles que não querem abrir mão de um sorriso mais bonito, mas precisam manter a estética preservada. O que faz com que pacientes busquem o tratamento Invisalign® como alternativa são as inúmeras vantagens apresentadas pelo sistema.</p>
+                <p class="text-news-left">
+                  O tratamento ortodôntico com os alinhadores Invisalign® é
+                  considerado um dos mais modernos disponíveis no mercado. Ele
+                  foi criado com a intenção de ser uma alternativa para aqueles
+                  que não querem abrir mão de um sorriso mais bonito, mas
+                  precisam manter a estética preservada. O que faz com que
+                  pacientes busquem o tratamento Invisalign® como alternativa
+                  são as inúmeras vantagens apresentadas pelo sistema.
+                </p>
 
-                <p>Os tratamentos Invisalign® só podem ser realizados pelos Invisalign® Doctors, dentistas credenciados e aptos para fornecê-los. Isso garante um tratamento eficaz e preciso, realizado somente por aqueles com amplo conhecimento sobre os alinhadores e suas funcionalidades. São mais de 2.700 doutores credenciados no Brasil, presentes nos 26 estados e no Distrito Federal. A cada trimestre, a empresa Align Technology chancela os Invisalign Doctors em categorias com base em seu histórico de número de tratamentos com Invisalign.</p>
+                <p>
+                  Os tratamentos Invisalign® só podem ser realizados pelos
+                  Invisalign® Doctors, dentistas credenciados e aptos para
+                  fornecê-los. Isso garante um tratamento eficaz e preciso,
+                  realizado somente por aqueles com amplo conhecimento sobre os
+                  alinhadores e suas funcionalidades. São mais de 2.700 doutores
+                  credenciados no Brasil, presentes nos 26 estados e no Distrito
+                  Federal. A cada trimestre, a empresa Align Technology chancela
+                  os Invisalign Doctors em categorias com base em seu histórico
+                  de número de tratamentos com Invisalign.
+                </p>
 
-                <p>Com muita satisfação e orgulho atingimos o nível Diamond Top Doctor Invisalign Provider através da Dra Aline Dias. Resultado de muito trabalho e comprometimento, este selo confere à Dra Aline o nível quase máximo de reconhecimento na empresa Align Technology, posicionando-a entre os indicadores mais respeitados da área da Ortodontia Invisível do país.</p>
+                <p>
+                  Com muita satisfação e orgulho atingimos o nível Diamond Top
+                  Doctor Invisalign Provider através da Dra Aline Dias.
+                  Resultado de muito trabalho e comprometimento, este selo
+                  confere à Dra Aline o nível quase máximo de reconhecimento na
+                  empresa Align Technology, posicionando-a entre os indicadores
+                  mais respeitados da área da Ortodontia Invisível do país.
+                </p>
 
-                <p>Aprimoramento e responsabilidade são os requisitos principais por traz dessa conquista.</p>
+                <p>
+                  Aprimoramento e responsabilidade são os requisitos principais
+                  por traz dessa conquista.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,17 +160,17 @@
                   <a href="">Ortodontia Invisível</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -138,26 +178,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A questão é cultural</a>
-            <a href=""> Next: O aparelho Invisalign realmente funciona?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: A
+              questão é cultural</a
+            >
+            <a href="">
+              Next: O aparelho Invisalign realmente funciona?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
