--- a/src/page24.html
+++ b/src/page24.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -96,19 +106,63 @@
           <div class="blog-news">
             <div class="blog-news-left">
               <div class="news-left first-news-page">
-                <h3>Invisalign – Diferenças em Relação ao Aparelho Convencional</h3>
+                <h3>
+                  Invisalign – Diferenças em Relação ao Aparelho Convencional
+                </h3>
                 <p>31/10/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">A escolha do aparelho dental pode ser um problema para aqueles que pretendem ou estão a poucos momentos de começar seu tratamento dental. Existem diversos fatores a serem considerados antes de optar por um aparelho ortodôntico, e isso varia de acordo com as necessidades e preferências de cada um.
+                <p class="text-news-left">
+                  A escolha do aparelho dental pode ser um problema para aqueles
+                  que pretendem ou estão a poucos momentos de começar seu
+                  tratamento dental. Existem diversos fatores a serem
+                  considerados antes de optar por um aparelho ortodôntico, e
+                  isso varia de acordo com as necessidades e preferências de
+                  cada um.
                 </p>
 
-                <p>Tanto o aparelho do tipo Invisalign como os aparelhos fixos convencionais possuem a função de alinhar, nivelar e corrigir maloclusões dentárias. A diferença fundamental é a de que o Invisalign consiste em um tratamento com alinhadores removíveis, ou seja, enquanto os bráquetes são fixos ao esmalte dentário, no caso do Invisalign, o paciente fará a troca dos alinhadores de tempos em tempos. É uma excelente opção estética e confortável para quem precisa de um pouco mais de flexibilidade. Porém, é importante ressaltar que apesar de removíveis, os alinhadores devem ser utilizados durante a maior parte do dia, sendo retiradas apenas nos momentos necessários.</p>
+                <p>
+                  Tanto o aparelho do tipo Invisalign como os aparelhos fixos
+                  convencionais possuem a função de alinhar, nivelar e corrigir
+                  maloclusões dentárias. A diferença fundamental é a de que o
+                  Invisalign consiste em um tratamento com alinhadores
+                  removíveis, ou seja, enquanto os bráquetes são fixos ao
+                  esmalte dentário, no caso do Invisalign, o paciente fará a
+                  troca dos alinhadores de tempos em tempos. É uma excelente
+                  opção estética e confortável para quem precisa de um pouco
+                  mais de flexibilidade. Porém, é importante ressaltar que
+                  apesar de removíveis, os alinhadores devem ser utilizados
+                  durante a maior parte do dia, sendo retiradas apenas nos
+                  momentos necessários.
+                </p>
 
-               <p>A limpeza dos dentes também é facilitada com o uso do Invisalign visto que eles são removidos durante a escovação.  O aparelho é personalizado e confeccionado com base no escaneamento da boca do paciente — as placas do aparelho invisível se ajustam perfeitamente e possuem menor risco de abrasão nos dentes e na boca. O planejamento é todo virtual, realizado em softwares especializados que simulam o tratamento do início ao fim. Ou seja, o paciente visualiza quantos alinhadores serão necessários e qual o tempo de tratamento total para o caso dele.</p>
-              
-               <p>Com relação ao tempo de tratamento, os alinhadores são trocados a cada 12 dias, isso possibilita ter maior controle sobre o andamento do tratamento. Porém, as visitas ao dentista são realizadas mensalmente, o que também ocorre no caso do aparelho convencional.</p>
+                <p>
+                  A limpeza dos dentes também é facilitada com o uso do
+                  Invisalign visto que eles são removidos durante a escovação. O
+                  aparelho é personalizado e confeccionado com base no
+                  escaneamento da boca do paciente — as placas do aparelho
+                  invisível se ajustam perfeitamente e possuem menor risco de
+                  abrasão nos dentes e na boca. O planejamento é todo virtual,
+                  realizado em softwares especializados que simulam o tratamento
+                  do início ao fim. Ou seja, o paciente visualiza quantos
+                  alinhadores serão necessários e qual o tempo de tratamento
+                  total para o caso dele.
+                </p>
 
-               <p>Escolher o seu ortodontista é um ponto extremamente importante do seu tratamento dental, é preciso que você confie e acredite na pessoa que irá te guiar durante todo o tratamento. Somente o profissional especializado poderá fazer a melhor indicação para seu caso.</p>
+                <p>
+                  Com relação ao tempo de tratamento, os alinhadores são
+                  trocados a cada 12 dias, isso possibilita ter maior controle
+                  sobre o andamento do tratamento. Porém, as visitas ao dentista
+                  são realizadas mensalmente, o que também ocorre no caso do
+                  aparelho convencional.
+                </p>
+
+                <p>
+                  Escolher o seu ortodontista é um ponto extremamente importante
+                  do seu tratamento dental, é preciso que você confie e acredite
+                  na pessoa que irá te guiar durante todo o tratamento. Somente
+                  o profissional especializado poderá fazer a melhor indicação
+                  para seu caso.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,17 +174,17 @@
                   <a href="">Ortodontia Invisível</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -138,26 +192,44 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Ortodontia Preventiva</a>
-            <a href=""> Next: Estética do sorriso: lentes de contato e facetas em porcelana <i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Ortodontia Preventiva</a
+            >
+            <a href="">
+              Next: Estética do sorriso: lentes de contato e facetas em
+              porcelana <i class="font-icon-post fa fa-angle-double-right"></i>
+            </a>
           </div>
         </div>
       </section>
