--- a/src/page27.html
+++ b/src/page27.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,14 +109,45 @@
                 <h3>Aparelho Auto-Ligado</h3>
                 <p>16/07/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Aparelhos ortodônticos autoligados são uma evolução do aparelho convencional, com algumas vantagens. Eles possuem como principal característica a baixa fricção entre os arcos ortodônticos e braquetes durante o tratamento, facilitando o início do movimento dentário pela diminuição da resistência inicial à movimentação.
+                <p class="text-news-left">
+                  Aparelhos ortodônticos autoligados são uma evolução do
+                  aparelho convencional, com algumas vantagens. Eles possuem
+                  como principal característica a baixa fricção entre os arcos
+                  ortodônticos e braquetes durante o tratamento, facilitando o
+                  início do movimento dentário pela diminuição da resistência
+                  inicial à movimentação.
                 </p>
 
-                <p>Nos aparelhos ortodônticos autoligados, não há a necessidade do uso das ligaduras elásticas, que são as famosas borrachinhas coloridas, pois os próprios braquetes possuem uma estrutura para prender os arcos ortodônticos. Esse sistema permite um menor atrito do fio metálico com a canaleta do braquete, o que permite a aplicação de uma força mais suave e menos incômoda ao paciente, através de uma movimentação por deslizamento. Portanto, há uma redução significativa da força exigida para a movimentação dentária.</p>
+                <p>
+                  Nos aparelhos ortodônticos autoligados, não há a necessidade
+                  do uso das ligaduras elásticas, que são as famosas
+                  borrachinhas coloridas, pois os próprios braquetes possuem uma
+                  estrutura para prender os arcos ortodônticos. Esse sistema
+                  permite um menor atrito do fio metálico com a canaleta do
+                  braquete, o que permite a aplicação de uma força mais suave e
+                  menos incômoda ao paciente, através de uma movimentação por
+                  deslizamento. Portanto, há uma redução significativa da força
+                  exigida para a movimentação dentária.
+                </p>
 
-               <p>Além disso, a ausência das ligaduras diminui o consideravelmente o acúmulo de bactérias no aparelho, evitando assim cáries, cálculo dentário, mau hálito e outros problemas bucais. É utilizado um material de alta tecnologia onde a força é ativada pela temperatura da boca. Assim, as manutenções são feitas a cada 2 meses, diminuindo o número de visitas ao dentista com a vantagem de não prolongar o tempo do tratamento.</p>
-              
-               <p>Os aparelhos ortodônticos auto-ligados são indicados para diferentes tipos de má-oclusão e portanto há a necessidade de uma avaliação minuciosa do Ortodontista. Se você possui necessidade e indicação de alinhamento dos dentes, consulte seu dentista para saber se esta é a melhor opção para você.</p>
+                <p>
+                  Além disso, a ausência das ligaduras diminui o
+                  consideravelmente o acúmulo de bactérias no aparelho, evitando
+                  assim cáries, cálculo dentário, mau hálito e outros problemas
+                  bucais. É utilizado um material de alta tecnologia onde a
+                  força é ativada pela temperatura da boca. Assim, as
+                  manutenções são feitas a cada 2 meses, diminuindo o número de
+                  visitas ao dentista com a vantagem de não prolongar o tempo do
+                  tratamento.
+                </p>
+
+                <p>
+                  Os aparelhos ortodônticos auto-ligados são indicados para
+                  diferentes tipos de má-oclusão e portanto há a necessidade de
+                  uma avaliação minuciosa do Ortodontista. Se você possui
+                  necessidade e indicação de alinhamento dos dentes, consulte
+                  seu dentista para saber se esta é a melhor opção para você.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -118,17 +159,17 @@
                   <a href="">Ortodontia</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -136,26 +177,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Por quanto tempo devo utilizar a contenção ortodôntica?</a>
-            <a href=""> Next: Por que devemos visitar o dentista a cada 6 meses<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Por quanto tempo devo utilizar a contenção ortodôntica?</a
+            >
+            <a href="">
+              Next: Por que devemos visitar o dentista a cada 6 meses<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
