--- a/src/page29.html
+++ b/src/page29.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,16 +109,50 @@
                 <h3>O que são células-tronco?</h3>
                 <p>20/06/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">As células-tronco são células que podem se transformar, sob condições adequadas, em outros tipos de células. São células capazes de regenerar órgãos e tecidos lesionados, promovendo a recuperação dos mesmos. A extração, multiplicação e preservação são a única forma de garantir que elas poderão ser usadas no futuro, em caso de necessidade. Portanto, quanto mais cedo for feita a extração, mais jovens serão as células coletadas e melhor serão os resultados e a qualidade do material.
+                <p class="text-news-left">
+                  As células-tronco são células que podem se transformar, sob
+                  condições adequadas, em outros tipos de células. São células
+                  capazes de regenerar órgãos e tecidos lesionados, promovendo a
+                  recuperação dos mesmos. A extração, multiplicação e
+                  preservação são a única forma de garantir que elas poderão ser
+                  usadas no futuro, em caso de necessidade. Portanto, quanto
+                  mais cedo for feita a extração, mais jovens serão as células
+                  coletadas e melhor serão os resultados e a qualidade do
+                  material.
                 </p>
 
-                <p>Os avanços científicos na área têm se mostrado impressionantes e engloba desde o tratamento de doenças que hoje são consideradas incuráveis (diabetes e alzheimer, por exemplo), até pequenos traumas como queimaduras e fraturas. Isso é fascinante. E o melhor é que as células-tronco podem ser encontradas nos dentes de leite do seu filho!</p>
+                <p>
+                  Os avanços científicos na área têm se mostrado impressionantes
+                  e engloba desde o tratamento de doenças que hoje são
+                  consideradas incuráveis (diabetes e alzheimer, por exemplo),
+                  até pequenos traumas como queimaduras e fraturas. Isso é
+                  fascinante. E o melhor é que as células-tronco podem ser
+                  encontradas nos dentes de leite do seu filho!
+                </p>
 
-               <p>Elas são muito especiais. A polpa do dentinho de leite contém células-tronco do tipo mesenquimais multipotentes, o que significa que elas podem se transformar em uma ampla variedade de células, como pele, músculos, ossos, fígado e tecido cardíaco. A extração é um processo simples que pode trazer benefícios para uma futura necessidade.</p>
-              
-               <p>Nossa clínica, em parceria com o Centro de Criogenia Brasil, está habilitada para realizar o procedimento. O dentinho de leite que estiver mole será extraído pela nossa equipe e encaminhado para a R-Crio para a multiplicação e armazenamento. Se você tiver interesse em conhecer esse tratamento e armazenamento das células-tronco do seu filho, agende uma consulta de orientação.</p>
+                <p>
+                  Elas são muito especiais. A polpa do dentinho de leite contém
+                  células-tronco do tipo mesenquimais multipotentes, o que
+                  significa que elas podem se transformar em uma ampla variedade
+                  de células, como pele, músculos, ossos, fígado e tecido
+                  cardíaco. A extração é um processo simples que pode trazer
+                  benefícios para uma futura necessidade.
+                </p>
 
-               <p>Venha fazer parte dessa nossa visão de futuro e preserve ao máximo a saúde da sua família.</p>
+                <p>
+                  Nossa clínica, em parceria com o Centro de Criogenia Brasil,
+                  está habilitada para realizar o procedimento. O dentinho de
+                  leite que estiver mole será extraído pela nossa equipe e
+                  encaminhado para a R-Crio para a multiplicação e
+                  armazenamento. Se você tiver interesse em conhecer esse
+                  tratamento e armazenamento das células-tronco do seu filho,
+                  agende uma consulta de orientação.
+                </p>
+
+                <p>
+                  Venha fazer parte dessa nossa visão de futuro e preserve ao
+                  máximo a saúde da sua família.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -120,17 +164,17 @@
                   <a href="">Odontopediatria</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -138,26 +182,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Pré-Natal Odontológico</a>
-            <a href=""> Next: Por quanto tempo devo utilizar a contenção ortodôntica?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Pré-Natal Odontológico</a
+            >
+            <a href="">
+              Next: Por quanto tempo devo utilizar a contenção ortodôntica?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
