--- a/src/page3.html
+++ b/src/page3.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,39 +108,85 @@
               <div class="news-left first-news-page">
                 <h3>Sensibilidade dentária: sintomas, causas e tratamento</h3>
                 <p>24/02/2020</p>
-                <img src="./resources/img/Foto-Blog-2-1024x576 (1).jpg" alt="">
-                <p class="text-news-left">A ingestão de alimentos muito quentes ou muito frios te causa um calafrio? </p>
+                <img
+                  src="./resources/img/Foto-Blog-2-1024x576 (1).jpg"
+                  alt=""
+                />
+                <p class="text-news-left">
+                  A ingestão de alimentos muito quentes ou muito frios te causa
+                  um calafrio?
+                </p>
 
-                <p>Se sua resposta for sim, provavelmente você está com sensibilidade dentária. Aquela sensação de choque quando o dente entra em contato com uma bebida quente ou gelada é bastante incômoda, afeta a qualidade de vida e é uma queixa bastante frequente nos consultórios. </p>
+                <p>
+                  Se sua resposta for sim, provavelmente você está com
+                  sensibilidade dentária. Aquela sensação de choque quando o
+                  dente entra em contato com uma bebida quente ou gelada é
+                  bastante incômoda, afeta a qualidade de vida e é uma queixa
+                  bastante frequente nos consultórios.
+                </p>
 
-                <p>A pergunta é: porque a sensibilidade dentária acontece? É possível tratar? Como podemos prevenir? </p>
+                <p>
+                  A pergunta é: porque a sensibilidade dentária acontece? É
+                  possível tratar? Como podemos prevenir?
+                </p>
 
-                <p>A sensibilidade dentária surge quando o esmalte do dente está desgastado e alimentos quentes, gelados, doces ou ácidos demais entram em contato com as terminações nervosas do dente, alcançando a polpa dentária. </p>
+                <p>
+                  A sensibilidade dentária surge quando o esmalte do dente está
+                  desgastado e alimentos quentes, gelados, doces ou ácidos
+                  demais entram em contato com as terminações nervosas do dente,
+                  alcançando a polpa dentária.
+                </p>
 
                 <p>Entre as principais causas estão:</p>
                 <div class="list-itens-news-page">
                   <ul>
                     <li>
-                      Biocorrosão: dieta com a ingestão de alimentos muito ácidos, como grande quantidade de refrigerantes, isotônicos ou alimentos ricos em açúcar pode causar a corrosão do esmalte dos dentes em decorrência da queda brusca do pH bucal. 
+                      Biocorrosão: dieta com a ingestão de alimentos muito
+                      ácidos, como grande quantidade de refrigerantes,
+                      isotônicos ou alimentos ricos em açúcar pode causar a
+                      corrosão do esmalte dos dentes em decorrência da queda
+                      brusca do pH bucal.
                     </li>
                     <li>
-                      Escovação: praticar a escovação com pressão excessiva pode gerar erosão do esmalte do dente e, consequentemente, a sensibilidade. 
+                      Escovação: praticar a escovação com pressão excessiva pode
+                      gerar erosão do esmalte do dente e, consequentemente, a
+                      sensibilidade.
                     </li>
                     <li>
-                      Fraturas: restaurações quebradas podem expor a dentina e provocar desconfortos na ingestão de alimentos quentes, frios, doces ou ácidos. 
+                      Fraturas: restaurações quebradas podem expor a dentina e
+                      provocar desconfortos na ingestão de alimentos quentes,
+                      frios, doces ou ácidos.
                     </li>
                     <li>
-                      Retração gengival: causada por doenças como gengivite ou periodontite, a retração da gengiva deixa as raízes do dente expostas e causa a hipersensibilidade dentária. 
+                      Retração gengival: causada por doenças como gengivite ou
+                      periodontite, a retração da gengiva deixa as raízes do
+                      dente expostas e causa a hipersensibilidade dentária.
                     </li>
                     <li>
-                      Doenças bucais: tanto o bruxismo quanto a gengivite podem ser fatores causadores do aparecimento da sensibilidade. 
+                      Doenças bucais: tanto o bruxismo quanto a gengivite podem
+                      ser fatores causadores do aparecimento da sensibilidade.
                     </li>
                   </ul>
                 </div>
 
-                <p>A primeira indicação de tratamento é atuar diretamente no problema que causou a hipersensibilidade a fim de diminuir as consequências da evolução da doença bucal. Dependendo da avaliação individual do cirurgião-dentista pode ser indicado o uso de um creme dental específico para a sensibilidade. </p>
+                <p>
+                  A primeira indicação de tratamento é atuar diretamente no
+                  problema que causou a hipersensibilidade a fim de diminuir as
+                  consequências da evolução da doença bucal. Dependendo da
+                  avaliação individual do cirurgião-dentista pode ser indicado o
+                  uso de um creme dental específico para a sensibilidade.
+                </p>
 
-                <p>Apesar de ser uma questão bastante incômoda, a sensibilidade pode ser prevenida com visitas regulares ao dentista para o check-up da saúde odontológica. Além disso, vale ressaltar que a atenção à alimentação é um fator importante de prevenção, portanto evite o consumo excessivo de doces, frutas e sucos ácidos, refrigerantes, catchup, vinagre, bebidas e alimentos muito gelados, como sorvetes, ou comidas e bebidas muito quentes, como café. </p>
+                <p>
+                  Apesar de ser uma questão bastante incômoda, a sensibilidade
+                  pode ser prevenida com visitas regulares ao dentista para o
+                  check-up da saúde odontológica. Além disso, vale ressaltar que
+                  a atenção à alimentação é um fator importante de prevenção,
+                  portanto evite o consumo excessivo de doces, frutas e sucos
+                  ácidos, refrigerantes, catchup, vinagre, bebidas e alimentos
+                  muito gelados, como sorvetes, ou comidas e bebidas muito
+                  quentes, como café.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -139,17 +195,17 @@
                   <a href="">Sensibilidade Dentária</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -157,30 +213,48 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
-            <a href=""> Next: Dente do siso: mitos e verdades <i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Mês do combate ao câncer: tudo o que você precisa saber sobre
+              câncer de boca</a
+            >
+            <a href="">
+              Next: Dente do siso: mitos e verdades
+              <i class="font-icon-post fa fa-angle-double-right"></i>
+            </a>
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
