--- a/src/page30.html
+++ b/src/page30.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,24 +109,72 @@
                 <h3>Pré-Natal Odontológico</h3>
                 <p>22/05/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">A existência de crenças populares sobre a saúde bucal da gestante é relatada por vários autores. Entre as mais comuns estão as de que o bebê retira cálcio dos dentes da mãe, mulheres grávidas não podem tomar anestesia de dentista ou realizar tomadas radiográficas, ou ainda de que gestantes não podem ser submetidas ao tratamento odontológico. A maioria dos medos, embora sem suporte científico, contribuem para o afastamento da gestante da atenção odontológica.
+                <p class="text-news-left">
+                  A existência de crenças populares sobre a saúde bucal da
+                  gestante é relatada por vários autores. Entre as mais comuns
+                  estão as de que o bebê retira cálcio dos dentes da mãe,
+                  mulheres grávidas não podem tomar anestesia de dentista ou
+                  realizar tomadas radiográficas, ou ainda de que gestantes não
+                  podem ser submetidas ao tratamento odontológico. A maioria dos
+                  medos, embora sem suporte científico, contribuem para o
+                  afastamento da gestante da atenção odontológica.
                 </p>
 
-                <p>Além disso, o enjôo é considerado o fator mais importante na redução do número de escovações, por isso o período gestacional é considerado de alto risco para a ocorrência de cárie. O estado de saúde bucal apresentado durante a gestação tem relação com a saúde geral da gestante e pode influenciar na saúde geral e bucal do bebê, por isso os profissionais de saúde devem trabalhar de forma integrada.
-                    <br>
-                  Pesquisas recentes apontam que bebês de gestantes com problemas gengivais não tratadas possuem mais chance de nascer de forma prematura ou apresentando baixo peso. As doenças periodontais graves levam a um aumento na produção de prostaglandinas, que participam na contração uterina durante o trabalho de parto e podem induzir o parto prematuro.</p>
+                <p>
+                  Além disso, o enjôo é considerado o fator mais importante na
+                  redução do número de escovações, por isso o período
+                  gestacional é considerado de alto risco para a ocorrência de
+                  cárie. O estado de saúde bucal apresentado durante a gestação
+                  tem relação com a saúde geral da gestante e pode influenciar
+                  na saúde geral e bucal do bebê, por isso os profissionais de
+                  saúde devem trabalhar de forma integrada.
+                  <br />
+                  Pesquisas recentes apontam que bebês de gestantes com
+                  problemas gengivais não tratadas possuem mais chance de nascer
+                  de forma prematura ou apresentando baixo peso. As doenças
+                  periodontais graves levam a um aumento na produção de
+                  prostaglandinas, que participam na contração uterina durante o
+                  trabalho de parto e podem induzir o parto prematuro.
+                </p>
 
-               <p>Então, como prevenir os problemas dentários?</p>
-              
-               <p>Higiene bucal regular, uso do fio dental e alimentação equilibrada são fundamentais. Escolher um profissional que possua conhecimentos suficientes para a realização do Pré-Natal Odontológico fará com que a gestante se sinta mais segura e motivada nessa fase tão especial.  A fase pré-natal pode exercer efeitos positivos ou negativos na saúde bucal do bebê em formação.</p>
+                <p>Então, como prevenir os problemas dentários?</p>
 
-               <p>Clinicamente observamos que grande parte das grávidas apresentam gengivite, portanto é recomendado que as mulheres que estejam planejando engravidar visitem o dentista regularmente a fim de identificar e tratar o problema previamente. No momento em que a gestante procura atendimento odontológico, é necessário que o profissional esteja consciente sobre a necessidade da educação em saúde para mostrar a esta mãe a importância da odontologia materno-infantil.</p>
+                <p>
+                  Higiene bucal regular, uso do fio dental e alimentação
+                  equilibrada são fundamentais. Escolher um profissional que
+                  possua conhecimentos suficientes para a realização do
+                  Pré-Natal Odontológico fará com que a gestante se sinta mais
+                  segura e motivada nessa fase tão especial. A fase pré-natal
+                  pode exercer efeitos positivos ou negativos na saúde bucal do
+                  bebê em formação.
+                </p>
 
-               <p>Na clínica, contamos com o Projeto Pre-Natal Odontológico onde acompanhamos as gestantes durante o período gestacional, dividindo esse acompanhamento em duas fases: <br>
-                Fase 1 (gestantes no primeiro trimestre ou até o quinto mês) – Orientações para a gestante <br>
-                Fase 2 – (a partir do sexto mês até o final da gestação) – Orientações para o bebê que está por vir</p>
+                <p>
+                  Clinicamente observamos que grande parte das grávidas
+                  apresentam gengivite, portanto é recomendado que as mulheres
+                  que estejam planejando engravidar visitem o dentista
+                  regularmente a fim de identificar e tratar o problema
+                  previamente. No momento em que a gestante procura atendimento
+                  odontológico, é necessário que o profissional esteja
+                  consciente sobre a necessidade da educação em saúde para
+                  mostrar a esta mãe a importância da odontologia
+                  materno-infantil.
+                </p>
 
-               <p>A gestação é um período ímpar na vida da mulher e o dentista pode e deve estar presente neste momento.</p>
+                <p>
+                  Na clínica, contamos com o Projeto Pre-Natal Odontológico onde
+                  acompanhamos as gestantes durante o período gestacional,
+                  dividindo esse acompanhamento em duas fases: <br />
+                  Fase 1 (gestantes no primeiro trimestre ou até o quinto mês) –
+                  Orientações para a gestante <br />
+                  Fase 2 – (a partir do sexto mês até o final da gestação) –
+                  Orientações para o bebê que está por vir
+                </p>
+
+                <p>
+                  A gestação é um período ímpar na vida da mulher e o dentista
+                  pode e deve estar presente neste momento.
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -128,17 +186,17 @@
                   <a href="">Odontologia</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -146,26 +204,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Cuidados durante e após o Clareamento Dental</a>
-            <a href=""> Next: O que são células-tronco?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Cuidados durante e após o Clareamento Dental</a
+            >
+            <a href="">
+              Next: O que são células-tronco?<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
