--- a/src/page35.html
+++ b/src/page35.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,37 +109,81 @@
                 <h3>Como posso melhorar do herpes labial?</h3>
                 <p>17/03/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">O herpes labial é uma infecção viral e contagiosa nos lábios, na boca ou nas gengivas causada pelo vírus da herpes simples.
+                <p class="text-news-left">
+                  O herpes labial é uma infecção viral e contagiosa nos lábios,
+                  na boca ou nas gengivas causada pelo vírus da herpes simples.
                 </p>
 
-                <p>A transmissão deste vírus pode ocorrer por meio de contato íntimo ou por meio do compartilhamento de objetos como toalhas, louças e outros itens que estejam infectados. Geralmente esse contato ocorre na infância e as manifestações clinicas ocorrem na fase adulta. </p>
+                <p>
+                  A transmissão deste vírus pode ocorrer por meio de contato
+                  íntimo ou por meio do compartilhamento de objetos como
+                  toalhas, louças e outros itens que estejam infectados.
+                  Geralmente esse contato ocorre na infância e as manifestações
+                  clinicas ocorrem na fase adulta.
+                </p>
 
-               <p>A doença é caracterizada principalmente pelo surgimento de bolhas pequenas, doloridas e carregadas de conteúdo viral que estouram e são recobertas por uma crosta durante o processo de reparação tecidual.</p>
-              
-               <p>Sintomas como coceira, queimação, maior sensibilidade ou formigamento ao redor podem ocorrer cerca de dois dias antes do aparecimento das lesões, que costumam aparecer logo em seguida na gengiva, na boca, na garganta ou no rosto.</p>
+                <p>
+                  A doença é caracterizada principalmente pelo surgimento de
+                  bolhas pequenas, doloridas e carregadas de conteúdo viral que
+                  estouram e são recobertas por uma crosta durante o processo de
+                  reparação tecidual.
+                </p>
 
-               <p>O herpes não tem cura. Uma vez que o vírus se instalou no organismo, ele fica adormecido e pode voltar diante de diversos fatores como baixa imunidade, exposição ao sol, menstruação, estresse e outros. A maior parte da população apresenta anticorpos contra o vírus e dificilmente apresentam sintomas clínicos. </p>
+                <p>
+                  Sintomas como coceira, queimação, maior sensibilidade ou
+                  formigamento ao redor podem ocorrer cerca de dois dias antes
+                  do aparecimento das lesões, que costumam aparecer logo em
+                  seguida na gengiva, na boca, na garganta ou no rosto.
+                </p>
 
-               <p>O tratamento deve ser avaliado individualmente, pois depende da quantidade de estrutura dentária que foi perdida. Basicamente, ele consiste na remoção do tecido cariado e na restauração do dente para restabelecer sua forma e função.</p>
+                <p>
+                  O herpes não tem cura. Uma vez que o vírus se instalou no
+                  organismo, ele fica adormecido e pode voltar diante de
+                  diversos fatores como baixa imunidade, exposição ao sol,
+                  menstruação, estresse e outros. A maior parte da população
+                  apresenta anticorpos contra o vírus e dificilmente apresentam
+                  sintomas clínicos.
+                </p>
 
-               <p>O diagnóstico, geralmente, é clínico e de reconhecimento fácil. Se não exigirem tratamento, os sintomas geralmente desaparecem entre uma e duas semanas.</p>
+                <p>
+                  O tratamento deve ser avaliado individualmente, pois depende
+                  da quantidade de estrutura dentária que foi perdida.
+                  Basicamente, ele consiste na remoção do tecido cariado e na
+                  restauração do dente para restabelecer sua forma e função.
+                </p>
 
-               <p>Estudos demonstraram que a laserterapia de baixa intensidade obtém resultados bastante animadores no combate ao herpes labial. A utilização do laser terapêutico é seguro, rápido, indolor e não apresenta efeitos colaterais. O laser promove alívio da dor, reparação tecidual mais rápida, redução de edema e inchaço e pode aumentar o intervalo em que o vírus causador da doença volte a se manifestar.</p>
+                <p>
+                  O diagnóstico, geralmente, é clínico e de reconhecimento
+                  fácil. Se não exigirem tratamento, os sintomas geralmente
+                  desaparecem entre uma e duas semanas.
+                </p>
 
-               <p>O número de sessões é variável, pois depende do perfil do paciente e da lesão a ser tratada.</p>
+                <p>
+                  Estudos demonstraram que a laserterapia de baixa intensidade
+                  obtém resultados bastante animadores no combate ao herpes
+                  labial. A utilização do laser terapêutico é seguro, rápido,
+                  indolor e não apresenta efeitos colaterais. O laser promove
+                  alívio da dor, reparação tecidual mais rápida, redução de
+                  edema e inchaço e pode aumentar o intervalo em que o vírus
+                  causador da doença volte a se manifestar.
+                </p>
 
+                <p>
+                  O número de sessões é variável, pois depende do perfil do
+                  paciente e da lesão a ser tratada.
+                </p>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -137,27 +191,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Meu dente precisa ser tratado com microscópio?!
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Meu dente precisa ser tratado com microscópio?!
             </a>
-            <a href=""> Next: Cárie dentária – uma doença contagiosa<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: Cárie dentária – uma doença contagiosa<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
