--- a/src/page37.html
+++ b/src/page37.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,78 +109,125 @@
                 <h3>Como prevenir a gengivite</h3>
                 <p>20/02/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">A gengivite é uma inflamação da gengiva causada geralmente pela placa bacteriana, uma película viscosa e incolor de bactérias e restos alimentares que se forma nos dentes pela escovação deficiente ou pela falta do uso do fio dental.
+                <p class="text-news-left">
+                  A gengivite é uma inflamação da gengiva causada geralmente
+                  pela placa bacteriana, uma película viscosa e incolor de
+                  bactérias e restos alimentares que se forma nos dentes pela
+                  escovação deficiente ou pela falta do uso do fio dental.
                 </p>
 
-                <p>Esta placa produz toxinas que irritam a mucosa da gengiva, causando a gengivite. Outros fatores também podem levar à doença, como alterações hormonais – sobretudo durante a gestação e puberdade -, o uso de certos medicamentos (antidepressivos, antiepilépticos) e algumas doenças como herpes labial, diabetes, epilepsia, AIDS, leucemia ou hipovitaminoses. A doença também pode ser causada por fatores genéticos, sendo recomendável, nesses casos, redobrar os cuidados com os dentes e a gengiva.</p>
+                <p>
+                  Esta placa produz toxinas que irritam a mucosa da gengiva,
+                  causando a gengivite. Outros fatores também podem levar à
+                  doença, como alterações hormonais – sobretudo durante a
+                  gestação e puberdade -, o uso de certos medicamentos
+                  (antidepressivos, antiepilépticos) e algumas doenças como
+                  herpes labial, diabetes, epilepsia, AIDS, leucemia ou
+                  hipovitaminoses. A doença também pode ser causada por fatores
+                  genéticos, sendo recomendável, nesses casos, redobrar os
+                  cuidados com os dentes e a gengiva.
+                </p>
 
                 <strong>Sintomas e tratamento</strong>
-               <p>Quem sofre de gengivite pode presentar os seguintes sintomas:</p>
-               <div class="list-itens-news-page">
-                 <ul>
-                   <li>
-                    Gengiva sangrando facilmente durante a escovação ou durante o uso do fio dental;
-                   </li>
-                   <li>
-                    gengiva inchada, avermelhada ou dolorida;
-                   </li>
-                   <li>
-                    dentes que parecem mais longos devido à retração da gengiva;
-                   </li>
-                   <li>
-                    mau hálito;
-                   </li>
-                   <li>
-                    gosto ruim na boca;
-                   </li>
-                   <li>
-                    dente mole;
-                   </li>
-                   <li>
-                    dor ao mastigar;
-                   </li>
-                   <li>
-                    e dentes sensíveis às diferenças de temperatura entre quente e frio.
-                   </li>
-                 </ul>
-               </div>
-              
-               <p>O diagnóstico de gengivite é clínico. Consideram-se os sinais e sintomas da doença, as condições gerais de saúde do paciente e seu histórico familiar. O dentista avalia a qualidade da higienização dos dentes, pelo acúmulo de placa e depósito de tártaro no dente e, em seguida, avaliará a situação das gengivas.</p>
+                <p>
+                  Quem sofre de gengivite pode presentar os seguintes sintomas:
+                </p>
+                <div class="list-itens-news-page">
+                  <ul>
+                    <li>
+                      Gengiva sangrando facilmente durante a escovação ou
+                      durante o uso do fio dental;
+                    </li>
+                    <li>gengiva inchada, avermelhada ou dolorida;</li>
+                    <li>
+                      dentes que parecem mais longos devido à retração da
+                      gengiva;
+                    </li>
+                    <li>mau hálito;</li>
+                    <li>gosto ruim na boca;</li>
+                    <li>dente mole;</li>
+                    <li>dor ao mastigar;</li>
+                    <li>
+                      e dentes sensíveis às diferenças de temperatura entre
+                      quente e frio.
+                    </li>
+                  </ul>
+                </div>
 
-               <p>Se descoberta ainda no estágio inicial, a doença pode regredir com uma boa técnica de escovação e o uso diário do fio dental. Em outros casos, o tratamento tem como principal objetivo eliminar o fator causador da inflamação gengival através da remoção da placa bacteriana e tártaro com raspagem acima e abaixo do contorno da gengiva com instrumental específico ou utilizando ultrassom.</p>
+                <p>
+                  O diagnóstico de gengivite é clínico. Consideram-se os sinais
+                  e sintomas da doença, as condições gerais de saúde do paciente
+                  e seu histórico familiar. O dentista avalia a qualidade da
+                  higienização dos dentes, pelo acúmulo de placa e depósito de
+                  tártaro no dente e, em seguida, avaliará a situação das
+                  gengivas.
+                </p>
 
-               <p>A raspagem é seguida de alisamento da raiz e polimento dos dentes para eliminar os focos de infecção. A prescrição antibióticos e anti-inflamatórios pode ser um recurso terapêutico importante em alguns casos. A cirurgia periodontal pode ser necessária quando essas intervenções terapêuticas não surtem os efeitos desejados.</p>
+                <p>
+                  Se descoberta ainda no estágio inicial, a doença pode regredir
+                  com uma boa técnica de escovação e o uso diário do fio dental.
+                  Em outros casos, o tratamento tem como principal objetivo
+                  eliminar o fator causador da inflamação gengival através da
+                  remoção da placa bacteriana e tártaro com raspagem acima e
+                  abaixo do contorno da gengiva com instrumental específico ou
+                  utilizando ultrassom.
+                </p>
 
-               <strong>Como prevenir</strong>
+                <p>
+                  A raspagem é seguida de alisamento da raiz e polimento dos
+                  dentes para eliminar os focos de infecção. A prescrição
+                  antibióticos e anti-inflamatórios pode ser um recurso
+                  terapêutico importante em alguns casos. A cirurgia periodontal
+                  pode ser necessária quando essas intervenções terapêuticas não
+                  surtem os efeitos desejados.
+                </p>
 
-               <p>Se a gengivite for descoberta ainda em estágio inicial, os danos podem ser revertidos, uma vez que o osso e o tecido conjuntivo que sustentam os dentes no lugar ainda não foram atingidos. Entretanto, se a gengivite não for tratada, pode evoluir para uma periodontite e causar danos permanentes aos dentes, fazendo com que os dentes mudem de lugar, fiquem abalados ou com mobilidade, o que afeta a mordida. Neste caso, corre-se, inclusive, o risco de perder os dentes.</p>
+                <strong>Como prevenir</strong>
 
-               <p>Por isso, a prevenção continua sendo o melhor remédio. A melhor maneira de prevenirmos a gengivite é realizando uma ótima higiene bucal, pois assim evitaremos o acúmulo de placas, que são as grandes vilãs, responsáveis pela inflamação. Escovar os dentes após as principais refeições e o uso do fio dental diariamente são medidas essenciais para prevenir a doença e suas complicações.</p>
+                <p>
+                  Se a gengivite for descoberta ainda em estágio inicial, os
+                  danos podem ser revertidos, uma vez que o osso e o tecido
+                  conjuntivo que sustentam os dentes no lugar ainda não foram
+                  atingidos. Entretanto, se a gengivite não for tratada, pode
+                  evoluir para uma periodontite e causar danos permanentes aos
+                  dentes, fazendo com que os dentes mudem de lugar, fiquem
+                  abalados ou com mobilidade, o que afeta a mordida. Neste caso,
+                  corre-se, inclusive, o risco de perder os dentes.
+                </p>
 
-               <div class="divisao-tags-page">
-                <i class="font-icon-25 fa fa-tags"></i>
-                <a href="">Dentista</a>
-                <a href="">Escovação</a>
-                <a href="">Fio Dental</a>
-                <a href="">Gengiva</a>
-                <a href="">Gengivite</a>
-                <a href="">Periodontia</a>
-                <a href="">Raspagem</a>
-                <a href="">Sangramento Gengival</a>
+                <p>
+                  Por isso, a prevenção continua sendo o melhor remédio. A
+                  melhor maneira de prevenirmos a gengivite é realizando uma
+                  ótima higiene bucal, pois assim evitaremos o acúmulo de
+                  placas, que são as grandes vilãs, responsáveis pela
+                  inflamação. Escovar os dentes após as principais refeições e o
+                  uso do fio dental diariamente são medidas essenciais para
+                  prevenir a doença e suas complicações.
+                </p>
+
+                <div class="divisao-tags-page">
+                  <i class="font-icon-25 fa fa-tags"></i>
+                  <a href="">Dentista</a>
+                  <a href="">Escovação</a>
+                  <a href="">Fio Dental</a>
+                  <a href="">Gengiva</a>
+                  <a href="">Gengivite</a>
+                  <a href="">Periodontia</a>
+                  <a href="">Raspagem</a>
+                  <a href="">Sangramento Gengival</a>
+                </div>
               </div>
-
-              </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -178,27 +235,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Socorro, como lidar com este ronco?!
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Socorro, como lidar com este ronco?!
             </a>
-            <a href=""> Next: Meu dente precisa ser tratado com microscópio?!<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: Meu dente precisa ser tratado com microscópio?!<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
