--- a/src/page39.html
+++ b/src/page39.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -99,37 +109,125 @@
                 <h3>Bichectomia, a cirurgia que pode mudar seu rosto</h3>
                 <p>31/01/2017</p>
                 <!-- <img src="./resources/img/" alt=""> -->
-                <p class="text-news-left">Conhecido como cirurgia das bochechas (cheek surgery), a bichectomia já é famosa nos EUA e tem sido feita em muitas celebridades. No Brasil, também vem se popularizando nos últimos 2 anos.
+                <p class="text-news-left">
+                  Conhecido como cirurgia das bochechas (cheek surgery), a
+                  bichectomia já é famosa nos EUA e tem sido feita em muitas
+                  celebridades. No Brasil, também vem se popularizando nos
+                  últimos 2 anos.
                 </p>
 
-                <p>Celebridades internacionais como Angelina Jolie e Megan Fox, que são conhecidas como ícones de beleza no mundo todo, já realizaram esse procedimento e, analisando fotos prévias e atuais, podemos perceber como seus rostos ficaram mais finos, com maior definição das maçãs.</p>
+                <p>
+                  Celebridades internacionais como Angelina Jolie e Megan Fox,
+                  que são conhecidas como ícones de beleza no mundo todo, já
+                  realizaram esse procedimento e, analisando fotos prévias e
+                  atuais, podemos perceber como seus rostos ficaram mais finos,
+                  com maior definição das maçãs.
+                </p>
 
-               <p>Bichectomia é o nome que se dá ao procedimento de redução da Bola de Bichat, que é um tecido de origem gordurosa que fica na região das bochechas e é um dos responsáveis por deixar o rosto com aspecto mais arredondado. A ideia da cirurgia é deixar o rosto mais definido e as maçãs mais evidentes, afinando a região das bochechas. Os resultados iniciais já podem ser vistos 10 a 15 dias após o procedimento, assim que regride o edema inicial. No entanto, o resultado final fica mais evidente após 4 a 6 meses, quando o edema residual é reabsorvido por completo.</p>
-              
-               <p>A utilização da bola adiposa da bochecha (bola de Bichat) não é um procedimento novo na região maxilofacial. A bola de Bichat tem sido amplamente utilizada para tratamento de problemas como as chamadas comunicações buco-sinusais, e outras cirurgias da face. Sua redução pode ter um aspecto funcional naqueles casos em que ela existe em excesso, aumentando muito o volume das bochechas e levando a trauma pelos dentes recorrente na região durante a alimentação, por exemplo. No entanto, mais recentemente tem sido muito procurada como procedimento adjuvante nas terapias estéticas faciais, por promover  maior definição dos contornos da face. É um tecido que regride em menor volume ao longo de processos de emagrecimento e, após sua retirada, dificilmente se restabelece na mesma dimensão que antes, tendo um resultado muito duradouro. Mas, como todo procedimento estético, não pode ser banalizado! Não são todos os pacientes que devem realizar esse procedimento. Deve ser indicado com cuidado, pois esse arredondamento da face ou um aspecto mais “quadrado” do contorno facial pode ocorrer por outros motivos, como por exemplo, na chamada hipertrofia de masseter e, nesses casos, a bichectomia não dará o resultado esperado. Portanto, antes da realização, deve-se avaliar o formato do rosto, a característica óssea de seu contorno e a real possibilidade de gerar resultado evidente e positivo na estética da face. A avaliação de cada paciente individualmente é essencial para definir se existe indicação de realizar o procedimento.</p>
+                <p>
+                  Bichectomia é o nome que se dá ao procedimento de redução da
+                  Bola de Bichat, que é um tecido de origem gordurosa que fica
+                  na região das bochechas e é um dos responsáveis por deixar o
+                  rosto com aspecto mais arredondado. A ideia da cirurgia é
+                  deixar o rosto mais definido e as maçãs mais evidentes,
+                  afinando a região das bochechas. Os resultados iniciais já
+                  podem ser vistos 10 a 15 dias após o procedimento, assim que
+                  regride o edema inicial. No entanto, o resultado final fica
+                  mais evidente após 4 a 6 meses, quando o edema residual é
+                  reabsorvido por completo.
+                </p>
 
-               <p>O pós operatório é considerado bem simples, semelhante à extração de um dente do siso. Deve-se ter cuidado com a alimentação, que deverá ser mais pastosa e fria nos primeiros dias. A higienização da boca deve ser realizada com cuidado mas é muito importante, pois manterá limpa a região onde foram feitos os cortes, ajudando a prevenir infecções. Além disso, realiza-se compressas geladas na região, do lado de fora do rosto. É importante também evitar exposição ao sol e e manter um repouso relativo, não realizando atividades físicas por cerca de 10 a 15 dias.</p>
+                <p>
+                  A utilização da bola adiposa da bochecha (bola de Bichat) não
+                  é um procedimento novo na região maxilofacial. A bola de
+                  Bichat tem sido amplamente utilizada para tratamento de
+                  problemas como as chamadas comunicações buco-sinusais, e
+                  outras cirurgias da face. Sua redução pode ter um aspecto
+                  funcional naqueles casos em que ela existe em excesso,
+                  aumentando muito o volume das bochechas e levando a trauma
+                  pelos dentes recorrente na região durante a alimentação, por
+                  exemplo. No entanto, mais recentemente tem sido muito
+                  procurada como procedimento adjuvante nas terapias estéticas
+                  faciais, por promover maior definição dos contornos da face. É
+                  um tecido que regride em menor volume ao longo de processos de
+                  emagrecimento e, após sua retirada, dificilmente se
+                  restabelece na mesma dimensão que antes, tendo um resultado
+                  muito duradouro. Mas, como todo procedimento estético, não
+                  pode ser banalizado! Não são todos os pacientes que devem
+                  realizar esse procedimento. Deve ser indicado com cuidado,
+                  pois esse arredondamento da face ou um aspecto mais “quadrado”
+                  do contorno facial pode ocorrer por outros motivos, como por
+                  exemplo, na chamada hipertrofia de masseter e, nesses casos, a
+                  bichectomia não dará o resultado esperado. Portanto, antes da
+                  realização, deve-se avaliar o formato do rosto, a
+                  característica óssea de seu contorno e a real possibilidade de
+                  gerar resultado evidente e positivo na estética da face. A
+                  avaliação de cada paciente individualmente é essencial para
+                  definir se existe indicação de realizar o procedimento.
+                </p>
 
-               <p>A bichectomia pode ser realizada em consultório (ambiente ambulatorial) ou em ambiente hospitalar, e cada caso vai ser definido em conversa e discussão do procedimento entre o paciente e o cirurgião de sua escolha.</p>
+                <p>
+                  O pós operatório é considerado bem simples, semelhante à
+                  extração de um dente do siso. Deve-se ter cuidado com a
+                  alimentação, que deverá ser mais pastosa e fria nos primeiros
+                  dias. A higienização da boca deve ser realizada com cuidado
+                  mas é muito importante, pois manterá limpa a região onde foram
+                  feitos os cortes, ajudando a prevenir infecções. Além disso,
+                  realiza-se compressas geladas na região, do lado de fora do
+                  rosto. É importante também evitar exposição ao sol e e manter
+                  um repouso relativo, não realizando atividades físicas por
+                  cerca de 10 a 15 dias.
+                </p>
 
-               <p>É realizado um corte na parte interna da bochecha, por dentro da boca, e, através dele, é retirado até 50% desse tecido, dependendo do planejamento do profissional para seu paciente. Os cortes são então suturados com fio reabsorvível e não deixa cicatrizes visíveis. O procedimento dura, em media, de 40 minutos a 1 hora.</p>
+                <p>
+                  A bichectomia pode ser realizada em consultório (ambiente
+                  ambulatorial) ou em ambiente hospitalar, e cada caso vai ser
+                  definido em conversa e discussão do procedimento entre o
+                  paciente e o cirurgião de sua escolha.
+                </p>
 
-               <p>A região fica sensível e dolorida já que se trata de um procedimento cirúrgico mas totalmente suportável e muito bem controlados com o uso de medicações para controle da dor e desconforto, como analgésicos.</p>
+                <p>
+                  É realizado um corte na parte interna da bochecha, por dentro
+                  da boca, e, através dele, é retirado até 50% desse tecido,
+                  dependendo do planejamento do profissional para seu paciente.
+                  Os cortes são então suturados com fio reabsorvível e não deixa
+                  cicatrizes visíveis. O procedimento dura, em media, de 40
+                  minutos a 1 hora.
+                </p>
 
-               <p>Embora a técnica seja relativamente simples, como qualquer outra cirurgia, a bichectomia possui alguns riscos, pois é uma região que possui estruturas nobres. Entre as possibilidades estão sangramento, por lesão de vasos sanguineos presentes na região, e lesão de ducto de glândula salivar, que tem também trajeto próximo à região que é manipulada. Outro risco que pode haver é a remoção em excesso desse tecido, o que pode levar a desarmonia da estética facial. No entanto, é muito importante lembrar que, se feita da maneira adequada por profissional com treinamento para realizá-la, o risco é bastante baixo. Então lembre-se: esse procedimento deve feito por profissionais capacitados e experientes na área.</p>
+                <p>
+                  A região fica sensível e dolorida já que se trata de um
+                  procedimento cirúrgico mas totalmente suportável e muito bem
+                  controlados com o uso de medicações para controle da dor e
+                  desconforto, como analgésicos.
+                </p>
 
+                <p>
+                  Embora a técnica seja relativamente simples, como qualquer
+                  outra cirurgia, a bichectomia possui alguns riscos, pois é uma
+                  região que possui estruturas nobres. Entre as possibilidades
+                  estão sangramento, por lesão de vasos sanguineos presentes na
+                  região, e lesão de ducto de glândula salivar, que tem também
+                  trajeto próximo à região que é manipulada. Outro risco que
+                  pode haver é a remoção em excesso desse tecido, o que pode
+                  levar a desarmonia da estética facial. No entanto, é muito
+                  importante lembrar que, se feita da maneira adequada por
+                  profissional com treinamento para realizá-la, o risco é
+                  bastante baixo. Então lembre-se: esse procedimento deve feito
+                  por profissionais capacitados e experientes na área.
+                </p>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -137,27 +235,45 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: O que pode deixar seus dentes sensíveis?
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous: O
+              que pode deixar seus dentes sensíveis?
             </a>
-            <a href=""> Next: Socorro, como lidar com este ronco?!<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              Next: Socorro, como lidar com este ronco?!<i
+                class="font-icon-post fa fa-angle-double-right"
+              ></i>
+            </a>
           </div>
         </div>
       </section>
