--- a/src/page8.html
+++ b/src/page8.html
@@ -32,63 +32,73 @@
     />
 
     <!--Carrousel-->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
 
     <title>A clinica Oral</title>
   </head>
   <body>
     <main>
       <header>
-        <div>
-          <nav>
-            <button>ligar</button>
-            <ul class="itens-menu">
-              <li>Início</li>
-              <li id="tratamento">
-                <a href="#" id="tratamentoa">Tratamentos</a>
-                <ul class="sub-menu">
-                  <li>
-                    <li>
-                      <ul id="estetica"><a href="#" class="item">Estética</a>
-                        <ul class="sub-menu-1">
-                          <li>Lente de Contato Dental</li>
-                          <li>Facetas de Porcelana</li>
-                          <li>Clareamento Dental</li>
-                          <li>Coroas de Porcelana</li>
-                          <li>Restauração Dentária</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>
-                      <ul id="cirurgia">
-                        <a href="#" class="item">Cirurgia</a>
-                        <ul class="sub-menu-2">
-                          <li>Dentes do Siso</li>
-                          <li>Implante Dentário</li>
-                          <li>Cirurgia Ortoginática</li>
-                        </ul>
-                      </ul>
-                    </li>
-                    <li>Ortodontia</li>
-                    <li>Tratamento de Canal (Endodontia)</li>
-                    <li>Tratamento de Gengiva (Periodontia)</li>
-                    <li>Difusão do ATM</li>
-                    <li>Odontologia Pré-Natal</li>
-                    <li>Odontopediatria</li>
+        <nav>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
+          </div>
+
+          <div class="main-menu">
+            <ul class="menu">
+              <li><a href="#" class="link-active">Início</a></li>
+              <li class="has-submenu">
+                <a href="#" class="text-active">Tratamentos</a>
+                <ul class="submenu">
+                  <li class="has-submenu--estetica">
+                    <a href="#">Estética</a>
+                    <ul class="submenu--estetica">
+                      <li><a href="#">Lente de contato dental</a></li>
+                      <li><a href="#">Facetas de porcelanas</a></li>
+                      <li><a href="#">Clareamento Dental</a></li>
+                      <li><a href="#">Coroas de Porcelanas</a></li>
+                      <li><a href="#">Restauração Dentária</a></li>
+                    </ul>
                   </li>
+                  <li class="has-submenu--cirurgia">
+                    <a href="#">Cirurgia</a>
+                    <ul class="submenu--cirurgia">
+                      <li><a href="#">Dente do siso</a></li>
+                      <li><a href="#">Implante dentário</a></li>
+                      <li><a href="#">Cirurgia Ortagnática</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Otodontia</a></li>
+                  <li><a href="#">Tratamento de Canal (Endodontia)</a></li>
+                  <li><a href="#">Tratamento da Gengiva (Periodontia)</a></li>
+                  <li><a href="#">Disfunção do ATM</a></li>
+                  <li><a href="#">Odontologia Pré-Natal</a></li>
+                  <li><a href="#">Odontopediatria</a></li>
                 </ul>
               </li>
-              <li>Day Clinic</li>
-              <li>Equipe</li>
-              <li>Depoimentos</li>
-              <li>Endereço</li>
-              <li>Blog</li>
-              <li>Contato</li>
+              <li><a href="#">Day Clinic</a></li>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Depoimentos</a></li>
+              <li><a href="#">Endereço</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
-          </nav>
-        </div>
+          </div>
+        </nav>
       </header>
 
       <section class="s-blog">
@@ -98,20 +108,61 @@
               <div class="news-left first-news-page">
                 <h3>Mau hálito: da prevenção ao tratamento</h3>
                 <p>01/10/2019</p>
-                <img src="./resources/img/Halitose.jpg" alt="">
-                <p class="text-news-left">Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de vergonha para muitos, todas as pessoas são afetadas pela halitose matinal, pois durante à noite há uma diminuição do fluxo salivar.</p>
+                <img src="./resources/img/Halitose.jpg" alt="" />
+                <p class="text-news-left">
+                  Quem nunca teve mau hálito? Apesar de ser incômodo e motivo de
+                  vergonha para muitos, todas as pessoas são afetadas pela
+                  halitose matinal, pois durante à noite há uma diminuição do
+                  fluxo salivar.
+                </p>
 
-                <p>De acordo com a Associação Brasileira de Halitose (ABHA), para 30% da população, a halitose, nome correto da disfunção, é uma realidade. Portanto, três em cada dez brasileiros sofrem com esse problema.</p>
+                <p>
+                  De acordo com a Associação Brasileira de Halitose (ABHA), para
+                  30% da população, a halitose, nome correto da disfunção, é uma
+                  realidade. Portanto, três em cada dez brasileiros sofrem com
+                  esse problema.
+                </p>
 
-                <p>Embora a halitose matinal seja comum, outros motivos podem ocasionar o odor bucal, como por exemplo: jejum prolongado, dietas descontroladas, alimentação inadequada, má higienização dos dentes, placas bacterianas retidas na língua, amígdalas, baixa produção de saliva, doenças periodontais como gengivite e periodontite, diabetes, problemas renais ou hepáticos e, por fim, ingestão de bebidas alcoólicas e cigarros em excesso.</p>
+                <p>
+                  Embora a halitose matinal seja comum, outros motivos podem
+                  ocasionar o odor bucal, como por exemplo: jejum prolongado,
+                  dietas descontroladas, alimentação inadequada, má higienização
+                  dos dentes, placas bacterianas retidas na língua, amígdalas,
+                  baixa produção de saliva, doenças periodontais como gengivite
+                  e periodontite, diabetes, problemas renais ou hepáticos e, por
+                  fim, ingestão de bebidas alcoólicas e cigarros em excesso.
+                </p>
 
-                <p>As pessoas afetadas pela halitose ficam compreensivelmente envergonhadas, mas o ideal é que as causas do mau hálito sejam investigadas com um dentista. Na consulta será realizada uma avaliação completa seguida de um exame bucal, onde serão avaliadas as condições dos dentes, gengivas, periodontia, bochechas, lábios, língua, amígdalas e a higiene praticada.</p>
+                <p>
+                  As pessoas afetadas pela halitose ficam compreensivelmente
+                  envergonhadas, mas o ideal é que as causas do mau hálito sejam
+                  investigadas com um dentista. Na consulta será realizada uma
+                  avaliação completa seguida de um exame bucal, onde serão
+                  avaliadas as condições dos dentes, gengivas, periodontia,
+                  bochechas, lábios, língua, amígdalas e a higiene praticada.
+                </p>
 
-                <p>A alimentação é outro fator que favorece a halitose, portanto é muito importante redobrar a atenção para os hábitos alimentares no dia a dia. Uma dica importante é realizar pequenas refeições a cada três horas a fim de evitar o jejum prolongado e fugir do consumo excessivo de alimento com odor muito forte, como a vilã cebola ou até mesmo o alho.</p>
+                <p>
+                  A alimentação é outro fator que favorece a halitose, portanto
+                  é muito importante redobrar a atenção para os hábitos
+                  alimentares no dia a dia. Uma dica importante é realizar
+                  pequenas refeições a cada três horas a fim de evitar o jejum
+                  prolongado e fugir do consumo excessivo de alimento com odor
+                  muito forte, como a vilã cebola ou até mesmo o alho.
+                </p>
 
-                <p>Além da atenção à alimentação, reforçar os hábitos diários de higiene é um bom trunfo no combate ao mau hálito. Não existe segredo, basta realizar a escovação completa três vezes por dia incluindo a escovação da língua e uso do fio dental. Também recomenda-se uma visita ao dentista a cada seis meses.</p>
+                <p>
+                  Além da atenção à alimentação, reforçar os hábitos diários de
+                  higiene é um bom trunfo no combate ao mau hálito. Não existe
+                  segredo, basta realizar a escovação completa três vezes por
+                  dia incluindo a escovação da língua e uso do fio dental.
+                  Também recomenda-se uma visita ao dentista a cada seis meses.
+                </p>
 
-                <p>Lembre-se: o mau hálito indica que algo não vai bem com a sua saúde bucal. Redobre a atenção!</p>
+                <p>
+                  Lembre-se: o mau hálito indica que algo não vai bem com a sua
+                  saúde bucal. Redobre a atenção!
+                </p>
 
                 <div class="divisao-tags-page">
                   <i class="font-icon-25 fa fa-tags"></i>
@@ -121,17 +172,17 @@
                   <a href="">Saúde Bucal</a>
                 </div>
               </div>
-
             </div>
             <div class="blog-news-right">
               <div class="blog-right-agendar-consulta">
                 <a href="" class="agendarHeader">
-                  <i class="fa-solid fa-phone"></i> <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
+                  <i class="fa-solid fa-phone"></i>
+                  <i class="fa-brands fa-whatsapp"></i> Agendar Consulta</a
                 >
               </div>
 
               <div class="search-blog">
-                <input type="text" placeholder="Search ...">
+                <input type="text" placeholder="Search ..." />
               </div>
 
               <div class="blog-post-recente">
@@ -139,30 +190,48 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">COVID-19: A importância da saúde bucal no fortalecimento da imunidade</a>
+                  <a href="" class="link-post-recente"
+                    >COVID-19: A importância da saúde bucal no fortalecimento da
+                    imunidade</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Dente do siso: mitos e verdades</a>
+                  <a href="" class="link-post-recente"
+                    >Dente do siso: mitos e verdades</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Sensibilidade dentária: sintomas, causas e tratamento</a>
+                  <a href="" class="link-post-recente"
+                    >Sensibilidade dentária: sintomas, causas e tratamento</a
+                  >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente">Mês do combate ao câncer: tudo o que você precisa saber sobre câncer de boca</a>
+                  <a href="" class="link-post-recente"
+                    >Mês do combate ao câncer: tudo o que você precisa saber
+                    sobre câncer de boca</a
+                  >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente">Diabetes e saúde bucal: dúvidas comuns</a>
+                  <a href="" class="link-post-recente"
+                    >Diabetes e saúde bucal: dúvidas comuns</a
+                  >
                 </div>
               </div>
             </div>
           </div>
           <div class="tags-pages-blog">
-            <a href=""> <i class="font-icon-post fa fa-angle-double-left"></i> Previous: Previous post:Invisalign: 5 motivos para trocar os braquetes pelos alinhadores</a>
-            <a href=""> Next: Periodontite: como prevenir a doença bucal mais comum do mundo?<i class="font-icon-post fa fa-angle-double-right"></i> </a>
+            <a href="">
+              <i class="font-icon-post fa fa-angle-double-left"></i> Previous:
+              Previous post:Invisalign: 5 motivos para trocar os braquetes pelos
+              alinhadores</a
+            >
+            <a href="">
+              Next: Periodontite: como prevenir a doença bucal mais comum do
+              mundo?<i class="font-icon-post fa fa-angle-double-right"></i>
+            </a>
           </div>
         </div>
       </section>
-
 
       <footer class="s-footer">
         <div class="container">
